russian re-translation first half

--- a/toi/localisation/russian/alerts_l_russian.yml
+++ b/toi/localisation/russian/alerts_l_russian.yml
@@ -2,7 +2,7 @@
  ALERT_RIGHTCLICK: "§GЩелкните правой кнопкой, чтобы убрать§!"
  ALERT_RIGHTCLICK_REPORT: "§GЩелкните правой кнопкой, чтобы скрыть§!. При этом с карты исчезнут все непрочитанные отчеты этого типа."
  alert_hostile_troops_instant: "§RВражеские войска§!"
- alert_hostile_troops_delayed: "В районе расположения гарнизона находятся вражеские войска." #NT!
+ alert_hostile_troops_delayed: "На территории гарнизона присутствуют вражеские войска." #NT!
  alert_naval_invasion_instant: "§RМорское вторжение§!"
  alert_naval_invasion_delayed: "§TВражеские войска вторгаются с моря в эти регионы:§!"
  alert_naval_invasion_delayed_state: "$STATE|H$"
@@ -18,7 +18,7 @@
  alert_base_low_supply_delayed: "Недостаточное снабжение этого района сказалось на работе морских баз и авиабаз. Эффективность выполнения боевых заданий снижена."
  alert_base_very_low_supply_instant: "§RБазы с очень плохим снабжением§!"
  alert_base_very_low_supply_delayed: "Недостаточное снабжение этого района сказалось на работе морских баз и авиабаз. Эффективность выполнения боевых заданий снижена."
- LOW_SUPPLIES_TIPS: "§GЧтобы улучшить ситуацию, вы можете сделать одно из следующих:\n - Распределите или переместите свои подразделения, чтобы уменьшить местное потребление.\n - Постройте инфраструктуру более высокого уровня и убедитесь, что нет узких мест в столице.\nВ случае доставки по морю, а также:\n - Постройте более высокие уровни военно-морских портов в провинциях источника и назначения.\n - Убедитесь, что вы построили достаточно конвоев.\n - Убедитесь, что вы сопровождаете конвои с помощью военно-морской миссии «Сопровождение конвоев» по ​​маршруту. Эффективность доставки может снизиться, если враги часто топят ваши конвои.§!" #NT!
+ LOW_SUPPLIES_TIPS: "§GЧтобы улучшить ситуацию, вы можете сделать одно из следующих:\n - Распределите или переместите свои подразделения, чтобы сократить местное потребление.\n - Постройте инфраструктуру более высокого уровня и убедитесь, что нет узких мест из столицы.\nЕсли доставка осуществляется по морю, также:\n - Постройте более высокие уровни морских портов в провинциях источника и назначения.\n - Убедитесь, что вы построили достаточно конвоев.\n - Убедитесь, что вы сопровождаете конвои с помощью морской миссии «Сопровождение конвоев» по ​​маршруту. Эффективность доставки может снизиться, если враги часто топят ваши конвои.§!" #NT!
  alert_no_research_instant: "§YДоступна ячейка для исследований§!"
  alert_no_research_delayed: "Доступных ячеек для исследований: $COUNT|Y$."
  alert_no_goal_instant: "§HНет текущей цели§!"
@@ -37,8 +37,8 @@
  alert_decision_new_delayed: "Вы можете выбрать следующие решения:\n$LIST$§GЩелкните правой кнопкой, чтобы убрать§!"
  alert_decision_new_delayed_more: "...и ещё $COUNT|H$."
  alert_decision_timeout_instant: "§HСкорое завершение событий или решений§!"
- alert_decision_timeout_delayed: "Срок действия следующих событий и решений истекает:\n$LIST$§GНажмите правой кнопкой мыши, чтобы закрыть§!" #NT!
- TIMEOUT_ITEM_LOC: "$NAME|H$ ($DAYS|H0$ §Hдней осталось§!)" #NT!
+ alert_decision_timeout_delayed: "Следующие события и решения скоро истекут:\n$LIST$§GЩелкните правой кнопкой мыши, чтобы закрыть§!" #NT!
+ TIMEOUT_ITEM_LOC: "$NAME|H$ ($DAYS|H0$ §Hдня осталось§!)" #NT!
  alert_free_civilian_factories_instant: "§HСвободные фабрики§!"
  alert_free_civilian_factories_delayed: "§TУ вас есть свободные фабрики для торговли и строительства.§!"
  alert_free_military_factories_instant: "§HСвободные военные заводы§!"
@@ -130,7 +130,7 @@
  alert_lack_of_resources_instant: "§HНедостаточно ресурсов§!"
  alert_lack_of_resources_delayed: "Необходимо: $RESOURCES$.\nТехника будет выпускаться с §Rменьшим темпом§!, пока фабрики нуждаются в ресурсах."
  alert_paused_diplomatic_actions_instant: "§HДипломатические действия приостановлены§!"
- alert_paused_diplomatic_actions_delayed: "Некоторые из ваших дипломатических действий не могут быть выполнены из-за отсутствия у вас законодательной власти.\nПодумайте об отмене этих действий, чтобы они не повлияли на ваш прирост законодательной власти.\n\nЗатронутые отношения:\n$COUNTRIES$" #NT!
+ alert_paused_diplomatic_actions_delayed: "Некоторые из ваших дипломатических действий не могут быть реализованы из-за недостатка законодательной власти.\nРассмотрите возможность отмены этих действий, чтобы они не повлияли на прирост вашей законодательной власти.\n\nЗатронутые отношения:\n$COUNTRIES$" #NT!
  alert_resistance_instant: "§HПротиводействие оккупации!§!"
  alert_resistance_delayed: "Высокий уровень сопротивления в:\n$LIST|H$" #NT!
  alert_resistance_delayed_countries: "§HСтраны:§!"
