--- a/toi/localisation/russian/australia_l_russian.yml
+++ b/toi/localisation/russian/australia_l_russian.yml
@@ -1,49 +1,49 @@
 ﻿l_russian:
   #Ideas# 
  AST_gold_rush: "Золотая лихорадка" #NT!
- AST_gold_rush_desc: "Кто бы мог подумать, что достаточно лишь выкопать 2 дюйма земли в загоне, и это станет началом нашей золотой лихорадки. Люди со всего мира съезжаются толпами, чтобы поймать крючок и получить состояние. Однако это имеет некоторые побочные эффекты..." #NT!
+ AST_gold_rush_desc: "Кто бы мог подумать, что достаточно всего лишь выкопать 2 дюйма в земле загона, чтобы начать нашу золотую лихорадку. Люди со всех концов приезжают толпами, чтобы поймать свой крючок и получить состояние. Однако это имеет некоторые побочные эффекты..." #NT!
   
- AST_minor_gold_rush: "Незначительная золотая лихорадка" #NT!
- AST_minor_gold_rush_desc: "На нашей земле найдены месторождения золота! Иммигранты прибывают из близлежащих районов, чтобы увеличить свое благосостояние, и наша экономика улучшается." #NT!
+ AST_minor_gold_rush: "Малая золотая лихорадка" #NT!
+ AST_minor_gold_rush_desc: "На нашей земле обнаружены залежи золота! Из близлежащих районов прибывают иммигранты, чтобы увеличить свое богатство, и наша экономика улучшается." #NT!
   
  AST_Murray_darling_basin: "Бассейн Мюррей-Дарлинг" #NT!
- AST_Murray_darling_basin_desc: "Ряд рек, текущих с гор в Квинсленде, через Новый Южный Уэльс, вдоль границы с Викторией и текущих в Южную Австралию. Бассейн является источником жизненной силы сельской Австралии, что приводит к тому, что другие штаты борются за увеличение объема судоходства." #NT!
+ AST_Murray_darling_basin_desc: "Серия рек, текущих с гор в Квинсленде, вниз через Новый Южный Уэльс, вдоль границы Виктории и вниз в Южную Австралию. Бассейн — это жизненная сила сельской Австралии, что приводит к тому, что другие штаты борются за большее количество судоходства." #NT!
   
- AST_Protected_by_the_Royal_Navy_and_Army: "Под защитой Королевского флота и армии." #NT!
- AST_Protected_by_the_Royal_Navy_and_Army_desc: "Все наши береговые линии и оборонительные сооружения полностью укомплектованы нашей материнской нацией «Соединенным Королевством», что позволяет нам не беспокоиться о собственной защите... пока..." #NT!
+ AST_Protected_by_the_Royal_Navy_and_Army: "Охраняется Королевским флотом и армией." #NT!
+ AST_Protected_by_the_Royal_Navy_and_Army_desc: "Все наши береговые линии и оборонительные сооружения полностью охраняются нашей метрополией «Соединенным Королевством», что дает нам возможность не беспокоиться о собственной обороне... пока что..." #NT!
   
- AST_Convict_Labour: "Заключенный Труд" #NT!
- AST_Convict_Labour_desc: "Эта колония, как и многие другие на восточной стороне этой земли, построена на основе изнурительной работы английских нарушителей спокойствия; или «Осужденные», как их называют люди. Мы будем продолжать принимать их для создания этой колонии до тех пор, пока она нам понадобится... Однако другие колонии начинают искать способы положить конец нашему предложению бесплатной рабочей силы, а Британия... начинает показывать признаки того, что ее мышление этого." #NT!
+ AST_Convict_Labour: "Труд заключенных" #NT!
+ AST_Convict_Labour_desc: "Эта колония, как и многие другие на восточной стороне этой земли, построена на изнурительной работе английских смутьянов; или «заключенных», как их называют люди. Мы будем продолжать принимать их для строительства этой колонии, пока это нам нужно... Однако другие колонии начинают искать способы положить конец нашему поставкам бесплатной рабочей силы, и Британия... начинает подавать признаки того, что она думает об этом." #NT!
   
- AST_eureka: "Эффекты частокола Эврика" #NT!
- AST_eureka_desc: "восстание 1854 года по поводу платы за лицензию шахтеров, которое было введено, привело к восстанию горняков против нас из-за налога за получение лицензии без какого-либо представительства, а также многие другие факторы привели к вооруженному ответу с нашей стороны с целью подавления горняков. Даже несмотря на то, что мы выиграли, последствия математики ударили по нам еще сильнее, поскольку многие требования шахтера были приняты." #NT!
+ AST_eureka: "Последствия строительства Эврикского частокола" #NT!
+ AST_eureka_desc: "восстание 1854 года из-за введенной платы за лицензию шахтера привело к восстанию шахтеров против нас из-за налога за лицензию без представительства, а также многие другие факторы привели к вооруженному ответу с нашей стороны, чтобы подавить шахтеров. Даже если мы победили, последующая математика задела нас сильнее, поскольку многие требования шахтеров были приняты." #NT!
   
  AST_unexplored_lands: "Неизведанные регионы" #NT!
- AST_unexplored_lands_desc: "Огромные районы нашей земли в настоящее время не исследованы. Это означает, что мы не знаем, сколько ресурсов, сколько богатства или сколько потенциальных городских объектов существует на большей части наших заявленных земель." #NT!
+ AST_unexplored_lands_desc: "Огромные регионы нашей земли в настоящее время не исследованы. Это означает, что мы не знаем, сколько ресурсов, сколько богатств или сколько потенциальных городских площадок существует на большей части наших заявленных земель." #NT!
   
- AST_highly_unexplored_lands: "Совершенно неизведанные земли" #NT!
- AST_highly_unexplored_lands_desc: "мы знаем форму нашей береговой линии, мы знаем окрестности нашей столицы... но дальше... мы понятия не имеем. Насколько нам известно, там может быть что угодно. Нам нужно выяснить, что там... и быстро." #NT!
+ AST_highly_unexplored_lands: "Крайне неизведанные земли" #NT!
+ AST_highly_unexplored_lands_desc: "мы знаем форму нашей береговой линии, мы знаем окрестности вокруг нашей столицы... но после этого... мы не имеем ни малейшего понятия. Насколько нам известно, там может быть что угодно. Нам нужно выяснить, что там есть... и быстро." #NT!
   
- AST_Divided_Administration: "Разделенная администрация" #NT!
- AST_Divided_Administration_desc: "С образованием Квинсленда наша администрация разделена. Это возлагает на нас очень неприятное бремя. Мы должны найти способ исправить это, прежде чем путаница начнет возникать гораздо позже." #NT!
+ AST_Divided_Administration: "Разделенное управление" #NT!
+ AST_Divided_Administration_desc: "С образованием Квинсленда наша администрация теперь разделена. Это возлагает на нас очень раздражающее бремя. Мы должны найти способ исправить это, прежде чем путаница начнет становиться слишком поздней в дальнейшем." #NT!
   
- AST_Brand_New_Government: "Совершенно новое правительство" #NT!
- AST_Brand_new_Government_desc: "Теперь, когда мы сделали все причудливые вещи, касающиеся нашего формирования, теперь нам нужно разработать систему из частей, которые сейчас лежат перед нами. Но это также дает нам возможность добавлять что-то свое здесь и там, поскольку теперь мы можем делать все, что захотим." #NT!
+ AST_Brand_New_Government: "Новое правительство" #NT!
+ AST_Brand_new_Government_desc: "Теперь, когда мы сделали все эти модные вещи в отношении нашей формации, нам теперь нужно выработать систему из тех частей, которые сейчас лежат перед нами. Но это также дает нам возможность добавлять свои собственные вещи здесь и там, поскольку теперь мы можем делать то, что нам нравится." #NT!
   
- AST_Squatter_Issue: "Проблема скваттеров" #NT!
- AST_Squatter_Issue_desc: "Сквоттеры, бомжи, надоедливые люди, которые НЕЗАКОННО сидят на коронных землях, стали растущей проблемой, что хуже всего... они начали проявлять влияние в нашем правительстве и среди местного населения... Нам лучше что-то сделать, прежде чем эта группа решит отстранить нас от должности." #NT!
+ AST_Squatter_Issue: "Проблема сквоттеров" #NT!
+ AST_Squatter_Issue_desc: "Сквоттеры, бродяги, надоедливые люди, которые НЕЗАКОННО сидят на земле короны, стали все большей проблемой, и что хуже всего... они начали оказывать влияние на наше правительство и местных жителей... Нам лучше что-то предпринять, прежде чем эти люди решат отстранить нас от должности." #NT!
   
- AST_aboriginal_tribes: "Положение аборигенов" #NT!
- AST_aboriginal_tribes_desc: "Коренные жители этой земли, если говорить лучше, либо пьяны, либо голодают, либо мертвы. Будь то болезнь или насильственное изгнание их с их так называемой «Земли». Что, в свою очередь, приводит к многочисленным случаям нападений на наш народ, что приводит к убийству какой-то местной группы в качестве мести. Те, кто в конечном итоге присоединяется к «цивилизованному» миру, долго не живут, будь то из-за болезни или линчевания по неизвестной причине. Общая ситуация неизвестна, известно только то, что убийства этих коренных жителей являются обычным явлением. Многие из наших людей не могут остановить эти события, но часто присоединяются к ним." #NT!
+ AST_aboriginal_tribes: "Ситуация с аборигенами" #NT!
+ AST_aboriginal_tribes_desc: "Коренные жители этой Земли, если говорить точнее... либо пьяны, либо голодают, либо мертвы. Будь то от болезни или насильственного выселения из их так называемой «Земли». Что, в свою очередь, приводит к многочисленным случаям нападений на наших людей, что приводит к убийству какой-то местной группы в качестве мести. Те, кто в конечном итоге присоединяются к «цивилизованному» миру, не живут долго, будь то от болезни или линчевания по неизвестной причине. Общая ситуация неизвестна, известно только, что убийства этих коренных жителей — обычное дело. Многие из наших людей не хотели бы остановить эти события, но часто присоединяются к ним." #NT!
   
  AST_The_Stain: "Пятно" #NT!
- AST_The_Stain_desc: "12...12 — это подтвержденное количество аборигенов, которые еще живы на нашем острове. Пережив черную войну, в которой погибли их соплеменники, теперь им придется стать свидетелями своего окончательного исчезновения. Но память о том, что мы сделали... убийство более 40 000 мужчин и женщин... будет преследовать нас позже... а сейчас... это пятно... мы не можем снять с него кандалы." #NT!
- britishaustralia.1.t: "Королевское одобрение Квинсленда" #NT!
- britishaustralia.1.d: "Квинсленд требовал отделения от [NSW.GetName] с 1851 года. Сегодня королевское согласие наконец получено." #NT!
- britishaustralia.1.a: "Подпишите патентное письмо" #NT!
- britishaustralia.2.t: "Расширение Запад" #NT!
+ AST_The_Stain_desc: "12...12 — это подтвержденное число аборигенов, которые все еще живы на этом нашем острове. Пережив черную войну, в которой погибли их соплеменники, теперь они должны стать свидетелями своего окончательного вымирания. Но память о том, что мы сделали... убийство более 40 000 мужчин и женщин... будет преследовать нас позже... пока... это пятно... мы не можем его снять." #NT!
+ britishaustralia.1.t: "Королевское согласие на Квинсленд" #NT!
+ britishaustralia.1.d: "Квинсленд просил об отделении от [NSW.GetName] с 1851 года. Сегодня королевское согласие наконец было получено." #NT!
+ britishaustralia.1.a: "Подписать патентные письма" #NT!
+ britishaustralia.2.t: "Расширение на Запад" #NT!
  britishaustralia.2.d: ""
- britishaustralia.2.a: "Подпишите патентное письмо" #NT!
- britishaustralia.3.t: "Аннексия Северной территории" #NT!
- britishaustralia.3.d: "Северная Территория пуста и отделена от [NSW.GetName], давайте возьмем ее под контроль и заселим сами." #NT!
+ britishaustralia.2.a: "Подписать патентные письма" #NT!
+ britishaustralia.3.t: "Аннексия Северной Территории" #NT!
+ britishaustralia.3.d: "Северная территория пуста и отделена от [NSW.GetName], давайте возьмем ее под контроль и заселим ее сами." #NT!
  britishaustralia.3.a: "Больше земли — это хорошо" #NT!
