--- a/toi/localisation/russian/designer_l_russian.yml
+++ b/toi/localisation/russian/designer_l_russian.yml
@@ -317,7 +317,7 @@
  NAME_THEME_NORSE_MYTHOLOGY: "Скандинавская мифология"
   
  NAME_THEME_US_MONITORS: "Исторические мониторы США" #NT!
- NAME_THEME_US_CORVETTES: "Исторические корветы США" #NT!
+ NAME_THEME_US_CORVETTES: "Исторические американские «Корветы»" #NT!
  NAME_THEME_US_FRIGATES: "Исторические фрегаты США" #NT!
   
   
