--- a/toi/localisation/russian/dte_l_russian.yml
+++ b/toi/localisation/russian/dte_l_russian.yml
@@ -1,7 +1,7 @@
 ﻿l_russian:
- DTE_hermit_mountain: "Отшельники горы" #NT!
- DTE_hermit_mountain_desc: "Название Сендай буквально означает «Гора-отшельник», что является удачным описанием. Местность может быть негостеприимной, но за прошедшие годы наши люди изучили все ее тонкости, чего не может позволить себе ни один внешний захватчик." #NT!
+ DTE_hermit_mountain: "Отшельники Горы" #NT!
+ DTE_hermit_mountain_desc: "Название Сендай буквально означает «Гора отшельника», удачное описание. Местность может быть негостеприимной, но за эти годы наши люди изучили ее изнутри и снаружи, чего не может позволить себе ни один внешний захватчик." #NT!
  DTE_ikaggan_medical_school: "Медицинская школа Икагган" #NT!
- DTE_ikaggan_medical_school_desc: "Медицинская школа Икагган, основанная при помощи голландцев в 1820 году, привлекает светлые умы со всей Японии." #NT!
+ DTE_ikaggan_medical_school_desc: "Медицинская школа Икагган, основанная при поддержке голландцев в 1820 году, привлекает светлые умы со всей Японии." #NT!
  DTE_vic_strained_finances: "Напряженные финансы" #NT!
- DTE_vic_strained_finances_desc: "Прошло 15 лет после голода Тэнпо, а мы до сих пор далеки от выздоровления. Мы едва держимся на плаву в финансовом отношении, и крестьянство сильно страдает. Ситуация улучшается очень медленно с течением времени, но мы не можем добиться реального прогресса, а тем более справиться с дальнейшим напряжением." #NT!
+ DTE_vic_strained_finances_desc: "Прошло 15 лет с момента голода Тэнпо, а мы все еще далеки от восстановления. Мы едва держимся на плаву в финансовом отношении, и крестьянство сильно страдает. Дела идут на поправку очень медленно с течением времени, но мы не можем добиться реального прогресса, не говоря уже о том, чтобы справиться с какой-либо дальнейшей нагрузкой." #NT!
