--- a/toi/localisation/russian/frontend_l_russian.yml
+++ b/toi/localisation/russian/frontend_l_russian.yml
@@ -128,18 +128,18 @@
  #FE_DIFFICULTY: "Сложность" #NT!
  #FE_DIFFICULTY_VERY_EASY: "Гражданский" #NT!
  #FE_DIFFICULTY_VERY_EASY_TOOLTIP: "§L"Мы можем это сделать!"§!" #NT!
- #FE_DIFFICULTY_EASY: "Нанимать на работу" #NT!
- #FE_DIFFICULTY_EASY_TOOLTIP: "§L"Полностью уверен в вашей храбрости, преданности долгу и боевому мастерству. Мы не примем ничего, кроме полной победы. Удачи!"§!" #NT!
+ #FE_DIFFICULTY_EASY: "Рекрут" #NT!
+ #FE_DIFFICULTY_EASY_TOOLTIP: "§L"Я полностью уверен в вашей храбрости, преданности долгу и умении в бою. Мы не примем ничего, кроме полной победы. Удачи!"§!" #NT!
  #FE_DIFFICULTY_NORMAL: "Обычный" #NT!
- #FE_DIFFICULTY_NORMAL_TOOLTIP: "§L"Ибо враг силен. Он может отбросить наши силы. Успех может не прийти с стремительной скоростью, но мы вернемся снова и снова."§!" #NT!
+ #FE_DIFFICULTY_NORMAL_TOOLTIP: "§L"Ибо враг силён. Он может отбросить наши силы. Успех может не прийти с молниеносной скоростью, но мы будем возвращаться снова и снова."§!" #NT!
  #FE_DIFFICULTY_HARD: "Ветеран" #NT!
- #FE_DIFFICULTY_HARD_TOOLTIP: "§L"Через тридцать лет, когда вы будете сидеть у камина с внуком на коленях, и он спросит: «Что вы делали во время великой Второй мировой войны?» вам не придется кашлять и говорить: «Ну, твой дедушка в Луизиане дерьмо разгребал».»§!" #NT!
+ #FE_DIFFICULTY_HARD_TOOLTIP: "§L"Через тридцать лет, когда вы будете сидеть у камина с внуком на коленях, и он спросит: "Что ты делал во время Великой Второй мировой войны?", вам не придется кашлять и говорить: "Ну, твой дедушка убирал дерьмо в Луизиане".§!" #NT!
  #FE_DIFFICULTY_VERY_HARD: "Элита" #NT!
  #FE_DIFFICULTY_VERY_HARD_TOOLTIP: "§L"Мне нечего предложить, кроме крови, труда, слез и пота."§!" #NT!
  #FE_DIFFICULTY_UNKNOWN: "Секретная сложность" #NT!
  #FE_DIFFICULTY_MODIFIER_PLAYER_TOOLTIP: "\n\nИгрок:\n$PLAYERMOD$" #NT!
- #FE_DIFFICULTY_MODIFIER_AI_TOOLTIP: "\n\nAI:\n$AIMOD$" #NT!
- #FE_IRONMAN_MP_BLOCKED: "§RВ режиме Ironman нельзя играть в многопользовательском режиме.§!" #NT!
+ #FE_DIFFICULTY_MODIFIER_AI_TOOLTIP: "\n\nИИ:\n$AIMOD$" #NT!
+ #FE_IRONMAN_MP_BLOCKED: "§RВ режим Ironman нельзя играть в многопользовательском режиме.§!" #NT!
  #FE_CUSTOM_DIFFICULTY_TOOLTIP: "Применимо к: $COUNTRIES$\n$MODIFIER$" #NT!
  #FE_RESET: "Сбросить все" #NT!
  CUSTOM_GAME_RULES_TITLE: "Свои правила игры"
@@ -157,16 +157,16 @@
  CUSTOM_GAME_SETTINGS_REVERT_TOOLTIP: "Отменить изменения всех правил и вернуть значения, принятые по умолчанию."
  CUSTOM_GAME_SETTINGS_BACK: "Назад"
  FE_DIFFICULTY: "Сложность"
- FE_DIFFICULTY_VERY_EASY: "партизан" #NT!
- FE_DIFFICULTY_VERY_EASY_TOOLTIP: "§L"...и это правительство народа, осуществляемое людьми и для народа, не исчезнет с лица земли."\n\n-Авраам Линкольн\n\nНа этом уровне сложности игрок получает отличные бонусы, пока ИИ получает штрафы, что в большинстве случаев обеспечивает легкую игру.§!" #NT!
+ FE_DIFFICULTY_VERY_EASY: "Партизан" #NT!
+ FE_DIFFICULTY_VERY_EASY_TOOLTIP: "§L"...и что правительство народа, из народа и для народа, не исчезнет с лица земли."\n\n-Авраам Линкольн\n\nНа этом уровне сложности игрок получает большие бонусы, в то время как ИИ получает штрафы, что обеспечивает легкую игру в большинстве случаев.§!" #NT!
  FE_DIFFICULTY_EASY: "Зачислен" #NT!
- FE_DIFFICULTY_EASY_TOOLTIP: "§L"Если вы создадите армию из ста собак, а их лидером будет лев, все собаки будут сражаться как лев."\n\n-Наполеон Бонапарт\n\nНа этом уровне сложности игрок получает незначительные бонусы в то время как ИИ получает небольшие штрафы, что делает игру немного проще.§!" #NT!
+ FE_DIFFICULTY_EASY_TOOLTIP: "§L"Если вы создадите армию из сотни собак, а их лидером будет лев, то все собаки будут сражаться как львы".\n\n-Наполеон Бонапарт\n\nНа этом уровне сложности игрок получает незначительные бонусы, а ИИ получает незначительные штрафы, что немного упрощает игру.§!" #NT!
  FE_DIFFICULTY_NORMAL: "Сержант"
- FE_DIFFICULTY_NORMAL_TOOLTIP: "§L «Пока существуют суверенные государства, обладающие великой мощью, война неизбежна».\n\n-Альберт Эйнштейн\n\nНи игрок, ни ИИ не получат никаких бонусов или недостатков на этом уровне сложности. Этот вариант рекомендуется использовать, если вам нужна максимальная историческая точность.§!" #NT!
+ FE_DIFFICULTY_NORMAL_TOOLTIP: "§L"Пока существуют суверенные государства, обладающие большой силой, война неизбежна."\n\n-Альберт Эйнштейн\n\nНи игрок, ни ИИ не получат никаких бонусов или штрафов на этом уровне сложности. Этот вариант рекомендуется, если вы хотите максимальной исторической точности.§!" #NT!
  FE_DIFFICULTY_HARD: "Офицер"
- FE_DIFFICULTY_HARD_TOOLTIP: "§L «Пусть каждая нация знает, желает она нам добра или зла, что мы заплатим любую цену, понесем любое бремя, выдержим любые трудности, поддержим любого друга и выступим против любого врага, чтобы обеспечить выживание и успех свободы».\n\n-Джон Ф. Кеннеди\n\nНа этом уровне сложности игрок получает небольшие штрафы, а ИИ получает бонусы, что делает игру немного сложнее.§!" #NT!
+ FE_DIFFICULTY_HARD_TOOLTIP: "§L"Пусть каждая нация знает, желает ли она нам добра или зла, что мы заплатим любую цену, вынесем любое бремя, встретим любые трудности, поддержим любого друга и выступим против любого врага, чтобы обеспечить выживание и успех свободы".\n\n-Джон Ф. Кеннеди\n\nНа этом уровне сложности игрок получает незначительные штрафы, а ИИ получает бонусы, что немного усложняет игру.§!" #NT!
  FE_DIFFICULTY_VERY_HARD: "Элита"
- FE_DIFFICULTY_VERY_HARD_TOOLTIP: "§L"Победа любой ценой, победа, несмотря на весь террор, победа, какой бы длинной и трудной ни была дорога, ибо без победы нет выживания".\n\n-Уинстон Черчилль\n\nНа этом уровне сложности не только игрок получает серьезные штрафы в отношении своей страны, но ИИ также получает боевые бонусы, что делает поиск места под солнцем для вашей нации настоящим испытанием. §!" #NT!
+ FE_DIFFICULTY_VERY_HARD_TOOLTIP: "§L"Победа любой ценой, победа вопреки всему ужасу, победа, какой бы длинной и трудной ни была дорога, ибо без победы нет выживания".\n\n-Уинстон Черчилль\n\nНа этом уровне сложности не только игрок получает серьезные штрафы для своей страны, но и ИИ получает боевые бонусы, что делает задачу по завоеванию места под солнцем для вашей нации настоящим испытанием.§!" #NT!
  FE_DIFFICULTY_UNKNOWN: "Секретная сложность"
  FE_DIFFICULTY_MODIFIER_PLAYER_TOOLTIP: "\n\nИгрок:\n$PLAYERMOD$"
  FE_DIFFICULTY_MODIFIER_AI_TOOLTIP: "\n\nИИ:\n$AIMOD$"
@@ -187,7 +187,7 @@
  ACHIEVEMENTS_DIFFICULTY: "Обычная или более высокая сложность"
  ACHIEVEMENTS_OK: "§HДоступны достижения!§!"
  ACHIEVEMENTS_MOD_OK: "§HДоступны достижения из модов!§!"
- ACHIEVEMENTS_NOT_OK: "§RНевозможно получить достижения.§!" #NT!
+ ACHIEVEMENTS_NOT_OK: "§RНе могу получить Достижения.§!" #NT!
  ACHIEVEMENTS_MOSTLY_NOT_OK: "§RНевозможно получить большинство достижений.§!" #NT!
  diff_strong_ai_generic: "Более сильный ИИ"
  custom_diff_strong_ger: "Усилить Германию"
