--- a/toi/localisation/russian/aceh_l_russian.yml
+++ b/toi/localisation/russian/aceh_l_russian.yml
@@ -1,9 +1,9 @@
 ﻿l_russian:
   
  ACE_ottoman_aceh_oil_company: "[OTO.GetAdjective]-[ACE.GetAdjective] Нефтяная компания" #NT!
- ACE_ottoman_aceh_oil_company_desc: "Нефтяная компания [OTO.GetAdjective]-[ACE.GetAdjective] принесла огромную пользу нашей экономике и индустриализации. Хотя это действительно отвлекает часть наших средств и ресурсов на [OTO.GetName], мы получаем взаимную выгоду." #NT!
+ ACE_ottoman_aceh_oil_company_desc: "Нефтяная компания [OTO.GetAdjective]-[ACE.GetAdjective] принесла огромную пользу нашей экономике и индустриализации. Хотя она и перенаправляет часть наших фондов и ресурсов в [OTO.GetName], мы получаем взаимную выгоду." #NT!
  ACE_ottoman_aceh_oil_company_master: "[OTO.GetAdjective]-[ACE.GetAdjective] Нефтяная компания" #NT!
- ACE_ottoman_aceh_oil_company_master_desc: "Нефтяная компания [OTO.GetAdjective]-[ACE.GetAdjective] принесла огромную пользу нашей экономике, облегчив некоторые трудности, в которых мы находимся. [ACE.GetName] также является нашими воротами в Тихий океан." #NT!
+ ACE_ottoman_aceh_oil_company_master_desc: "Нефтяная компания [OTO.GetAdjective]-[ACE.GetAdjective] принесла огромную пользу нашей экономике, облегчив некоторые трудности, с которыми мы сталкиваемся. [ACE.GetName] также является нашими воротами в Тихий океан." #NT!
   
  aceh_ottoman_oil_company.1: "[OTO.GetAdjective]-[ACE.GetAdjective] Предложение нефтяной компании" #NT!
  aceh_ottoman_oil_company.1.t: "[OTO.GetAdjective]-[ACE.GetAdjective] Предложение нефтяной компании" #NT!
