--- a/toi/localisation/russian/adjacency_rules_l_russian.yml
+++ b/toi/localisation/russian/adjacency_rules_l_russian.yml
@@ -32,12 +32,12 @@
  KIEL_CANAL_BLOCKED_FOR_COUNTRY: "Кильский канал заблокирован на [Root.GetName]" #NT!
  SUEZ_CANAL_BUILT: "Суэцкий канал построен." #NT!
  PANAMA_CANAL_BUILT: "Панамский канал построен." #NT!
- KIEL_CANAL_BUILT: "Построен Кильский канал." #NT!
- NICARAGUA_CANAL_BUILT: "Был построен Никарагуанский канал." #NT!
- disable_suez_canal_tt: "§YСуэцкий канал§! в настоящее время имеет статус §Runuseable§_1, поскольку он либо еще не построен, либо разрушен." #NT!
- disable_panama_canal_tt: "§YПанамский канал§! в настоящее время имеет статус §Runuseable§_1, поскольку он либо еще не построен, либо разрушен." #NT!
- disable_kiel_canal_tt: "§YКильский канал§! в настоящее время имеет статус §Runuseable§_1, поскольку он либо еще не построен, либо разрушен." #NT!
- disable_nicaragua_canal_tt: "§YНикарагуанский канал§! в настоящее время имеет статус §Runuseable§_1, поскольку он либо еще не построен, либо разрушен." #NT!
+ KIEL_CANAL_BUILT: "Кильский канал построен." #NT!
+ NICARAGUA_CANAL_BUILT: "Построен Никарагуанский канал." #NT!
+ disable_suez_canal_tt: "§YСуэцкий канал§! в настоящее время §Непригоден для использования§!, поскольку он либо еще не построен, либо разрушен." #NT!
+ disable_panama_canal_tt: "§YПанамский канал§! в настоящее время §Непригоден для использования§!, поскольку он либо еще не построен, либо разрушен." #NT!
+ disable_kiel_canal_tt: "§YКильский канал§! в настоящее время §непригоден для использования§!, поскольку он либо еще не построен, либо разрушен." #NT!
+ disable_nicaragua_canal_tt: "§YНикарагуанский канал§! в настоящее время §непригоден для использования§!, поскольку он либо еще не построен, либо разрушен." #NT!
  BOSPHORUS_STRAIT_BLOCKED: "Босфорский пролив заблокирован"
  BOSPHORUS_STRAIT_BLOCKED_FOR_COUNTRY: "Государство [ROOT.GetName] отрезано от Босфорского пролива"
  bosporus_strait_blocked_tt: "§RПролив закрыт для государства [ROOT.GetName] в связи с ухудшением отношений со страной, контролирующей пролив.§!"
