--- a/toi/localisation/russian/al_zubayr_l_russian.yml
+++ b/toi/localisation/russian/al_zubayr_l_russian.yml
@@ -1,19 +1,19 @@
 ﻿l_russian:
  ALZ_slave_raid_does_not_have_non_aggression_pact: "Не имеет пакта о ненападении с владельцем §Y[834.GetName]§!" #NT!
   
- ALZ_slave_raid_border_conflict: "[ROOT.GetName] Набеги рабов" #NT!
- ALZ_slave_raid_state_834: "Начать рейд рабов в [834.GetName]" #NT!
+ ALZ_slave_raid_border_conflict: "[ROOT.GetName] Набеги за рабами" #NT!
+ ALZ_slave_raid_state_834: "Инициируйте рейд за рабами в [834.GetName]" #NT!
   
- ALZ_slave_raid_ended: "Рейд рабов завершился" #NT!
+ ALZ_slave_raid_ended: "Рейд за рабами завершен" #NT!
  ALZ_raid_damage.1.a: "НЗП" #NT!
  ALZ_raid_damage.1.d: "НЗП" #NT!
- ALZ_raid_damage.1.t: "Незначительный урон от рейдов" #NT!
+ ALZ_raid_damage.1.t: "Незначительный ущерб от рейдов" #NT!
  ALZ_raid_damage.2.a: "НЗП" #NT!
  ALZ_raid_damage.2.d: "НЗП" #NT!
  ALZ_raid_damage.2.t: "Умеренный урон от рейдов" #NT!
  ALZ_raid_damage.3.a: "НЗП" #NT!
  ALZ_raid_damage.3.d: "НЗП" #NT!
- ALZ_raid_damage.3.t: "Большой урон от рейдов" #NT!
+ ALZ_raid_damage.3.t: "Большой ущерб от рейдов" #NT!
  ALZ_raid_damage_mission: "НЗП" #NT!
  ALZ_raid_damage_mission_desc: "НЗП" #NT!
  ALZ_slave_raid_attacker.1.d: "НЗП" #NT!
