--- a/toi/localisation/russian/argentina_l_russian.yml
+++ b/toi/localisation/russian/argentina_l_russian.yml
@@ -1,52 +1,60 @@
 ﻿l_russian:
  arg.16.t: "[BUE.GetName] просит поддержки" #NT!
- arg.16.a: "Дайте им нашу поддержку" #NT!
- arg.16.b: "Игнорируйте это мошенническое государство" #NT!
- arg.17.t: "[ENG.GetName] поддерживает нас" #NT!
- arg.18.t: "[ENG.GetName] игнорирует нас" #NT!
+ arg.16.a: "Окажите им нашу поддержку." #NT!
+ arg.16.b: "Игнорируйте это государство-изгой" #NT!
+ arg.17.t: "[ENG.GetName] оказывает нам поддержку" #NT!
+ arg.18.t: "[ENG.GetName] Игнорирует нас" #NT!
  arg.20.t: "Умиротворение Ла-Риохи" #NT!
- arg.20.d: "Наша миссия в Ла Ройхе увенчалась успехом. Выскочка-правитель провинции Анхель Пеналоса был разгромлен, а затем казнен предводителем наших войск в районе Пабло Ирразабалем." #NT!
+ arg.20.d: "Наша миссия в Ла-Роихе увенчалась успехом. Выскочка-губернатор провинции Анхель Пеньялоса был побежден, а затем казнен лидером наших войск в этом районе Пабло Иррасабалем." #NT!
  arg.20.a: "Идеальный" #NT!
  BUE_our_stable_government: "Наше стабильное правительство" #NT!
- ARG_shared_strengthen_military: "Укрепить армию" #NT!
+ ARG_shared_strengthen_military: "Укреплять армию" #NT!
  BUE_for_a_centralised_state: "За централизованное государство" #NT!
- BUE_banco_provincia_mint: "Основание монетного двора в Banco Provincia." #NT!
- BUE_1858_elections: "Выборы 1858 г." #NT!
+ BUE_banco_provincia_mint: "Создание монетного двора в Банко Провинсия" #NT!
+ BUE_1858_elections: "Выборы 1858 года" #NT!
  arg.19.t: "Выборы 1858 года" #NT!
  ARG_railway_construction_idea: "Железнодорожный проект" #NT!
- BUE_tarrifs: "[BUE.GetName] тарифы" #NT!
- ARG_victorius: "Федералы-победители" #NT!
- BUE_victorius: "Унитариос Победоносец" #NT!
+ BUE_tarrifs: "[BUE.GetName] тарифов" #NT!
+ ARG_victorius: "Победоносные федералы" #NT!
+ BUE_victorius: "Победоносные унитарии" #NT!
  ARG_shared_rail_projects: "Железнодорожный проект" #NT!
  ARG_shared_foreign_rail_invesments: "Иностранные железнодорожные инвестиции" #NT!
- BUE_negotiate_with_ARG: "Переговоры с [ARG.GetName]" #NT!
- BUE_pact_of_san_jose_de_flores: "Пакт Сан-Хосе де Флорес" #NT!
- BUE_leavy_tariffs_on_ARG: "Взимать пошлины с Конфедерации" #NT!
+ BUE_negotiate_with_ARG: "Вести переговоры с [ARG.GetName]" #NT!
+ BUE_pact_of_san_jose_de_flores: "Пакт Сан-Хосе-де-Флорес" #NT!
+ BUE_leavy_tariffs_on_ARG: "Взимание пошлин с Конфедерации" #NT!
  BUE_valentin_alsinas_govenership: "Губернаторство Валентина Альсины" #NT!
  ARG_decentral_government: "Децентрализованное правительство" #NT!
- ARG_military_buildup: "Военное наращивание" #NT!
- ARG_military_buildup_idea: "Военное наращивание" #NT!
+ ARG_military_buildup: "Наращивание военной мощи" #NT!
+ ARG_military_buildup_idea: "Наращивание военной мощи" #NT!
  BUE_government_unitario: "Правительство Унитарио" #NT!
  ARG_government_federales: "Федеральное правительство" #NT!
- BUE_found_rail_project: "Нашел железнодорожный проект" #NT!
- BUE_call_up_more_men: "Звоните больше мужчин" #NT!
+ ARG_government_federales_desc: "Правительство — это ядро ​​любого национального государства в мире. Наше правительство — федерация, состоящая из автономных провинций. Нас возглавляет великая партия Федералес, а нашим лидером является губернатор/президент. Несмотря на большинство мнений, наше правительство сильное и представляет собой мощную силу в Южной Америке! ¡Viva Argentina!" #NT!
+ BUE_found_rail_project: "Найден железнодорожный проект" #NT!
+ BUE_call_up_more_men: "Вызовите больше мужчин" #NT!
  BUE_provinical_rail_lines: "Провинциальные железнодорожные линии" #NT!
  BUE_modern_tatics: "Современная тактика" #NT!
  ARG_true_constitution: "Истинная Конституция" #NT!
  ARG_the_rule_of_law: "Верховенство закона" #NT!
  ARG_establishment_of_supreme_court: "Создание Верховного суда" #NT!
+ ARG_establishment_of_supreme_court_desc: "В каждом современном штате есть свой Верховный суд, который принимает самые важные решения о штате. Но у нас его нет! К счастью, мы можем черпать вдохновение из Верховного суда Соединенных Штатов, чтобы сформировать наш суд." #NT!
  ARG_decentralised_state: "Децентрализованное государство" #NT!
- ARG_develop_entre_ros: "Развитие Междуречья" #NT!
+ ARG_decentralised_state_desc: "Наша конституция определяет наше государство как конфедерацию без главы государства, где каждая провинция имеет свою собственную автономию и роль в великой схеме вещей в нашей стране. Мы должны следовать конституции, чтобы мы могли умиротворить людей." #NT!
+ ARG_develop_entre_ros: "Развивать Энтре-Риос" #NT!
+ ARG_develop_entre_ros_desc: "Энтре-Риос — это регион, в котором расположена наша столица. Несмотря на это, он остается в основном неразвитым, без крупных промышленных центров, примитивного сельского хозяйства и инфраструктуры. Мы должны использовать высокий потенциал этого важного региона и развивать его!" #NT!
  ARG_promotion_of_education: "Продвижение образования" #NT!
  ARG_founding_new_schools: "Основание новых школ" #NT!
+ ARG_founding_new_schools_desc: "Большинство нашего населения остается необразованным и неграмотным. Это население в основном проживает в сельской местности, но есть много людей в крупных городах и поселках, которые разделяют ту же проблему. Мы решим эту весьма проблемную ситуацию, направив наши средства на строительство школ для базового и продвинутого образования." #NT!
  ARG_university_of_cordoba: "Университет Кордовы" #NT!
- ARG_working_with_local_groups: "Работа с локальными группами" #NT!
+ ARG_working_with_local_groups: "Работа с местными группами" #NT!
  ARG_tie_military_together: "Свяжите армию вместе" #NT!
  ARG_military_innovations: "Военные инновации" #NT!
- ARG_found_rail_project: "Нашел железнодорожный проект" #NT!
+ ARG_found_rail_project: "Найден железнодорожный проект" #NT!
+ ARG_found_rail_project_desc: "Наши города в настоящее время в основном разъединены, имея лишь незначительные связи через старые и разбитые дороги. Вслед за европейскими странами и Соединенными Штатами мы выделим время, людей и ресурсы на создание эффективной железнодорожной системы, чтобы лучше соединить наших людей." #NT!
  ARG_cordoba_section: "Раздел Кордова" #NT!
+ ARG_cordoba_section_desc: "В рамках нашего железнодорожного проекта мы построим и расширим железные дороги в регионе Кордовы. Кордова богата разнообразной сельскохозяйственной продукцией, но что еще важнее, там находится Национальный университет Кордовы, наш крупнейший образовательный центр. Все эти факты говорят о том, что мы должны соединить этот важный регион с остальной частью нашей Конфедерации." #NT!
  ARG_mendoza_section: "Раздел Мендоса" #NT!
- BUE_entice_british_interest: "Привлеките британский интерес" #NT!
+ ARG_mendoza_section_desc: "В рамках нашего железнодорожного проекта мы построим и расширим железные дороги в регионе Мендоса. Мендоса, как известно, является крупнейшим винодельческим регионом в Южной Америке, а также крупным производителем оливкового масла. Таким образом, мы должны развивать железную дорогу и станции, чтобы экспорт мог быть более эффективно отправлен из штата." #NT!
+ BUE_entice_british_interest: "Привлечь британский интерес" #NT!
  BUE_purchase_artillery: "Покупка артиллерии" #NT!
  BUE_abolish_slavery: "Отменить рабство" #NT!
  BUE_extend_customs: "Продлить таможню" #NT!
@@ -54,11 +62,12 @@
  ARG_vic_inf_investments: "Инвестиции в инфраструктуру" #NT!
  ARG_inf_investments_idea: "Инвестиции в инфраструктуру" #NT!
  ARG_vic_BUE_integration: "Интеграция Буэнос-Айреса" #NT!
- ARG_vic_unifying_military: "Объединение армии" #NT!
- ARG_vic_dealing_with_penaloza: "Разбираемся с Пеналосой" #NT!
+ ARG_vic_unifying_military: "Объединение военных" #NT!
+ ARG_vic_dealing_with_penaloza: "Работа с Пеньялосой" #NT!
  ARG_vic_national_army: "Национальная армия" #NT!
- ARG_vic_1866_constitutional_reforms: "1866 г. Конституционные реформы" #NT!
- gone_rogue: "Ушел изгой" #NT!
+ ARG_vic_1866_constitutional_reforms: "Конституционные реформы 1866 г." #NT!
+ ARG_vic_1866_constitutional_reforms_desc: "Наша конституция 1853 года хороша сама по себе, но все еще требует некоторых реформ, чтобы стать идеальной. В частности, эти реформы связаны с экономикой и международной торговлей. Мы проведем небольшую реформу, в рамках которой установим налоги на экспорт и импорт, которые будут направляться в Национальную казну на неопределенный срок." #NT!
+ gone_rogue: "Ушел из-под контроля" #NT!
  ARG_milita_idea: "Идеалы Милиты" #NT!
  ARG_local_milita_idea: "Местная мобилизация" #NT!
  ARG_national_milita_idea: "Национальная мобилизация" #NT!
