--- a/toi/localisation/russian/ashanti_l_russian.yml
+++ b/toi/localisation/russian/ashanti_l_russian.yml
@@ -1,37 +1,37 @@
 ﻿l_russian:
   ##ASH FT 1857 
  ASH_the_golden_stool: "Золотой табурет" #NT!
- ASH_the_golden_stool_desc: "Империя Ашанти изобилует такими предметами роскоши, как золото, какао-бобы, слоновая кость, драгоценные камни, и их торговля контролируется королем на золотом табурете Асантехене." #NT!
+ ASH_the_golden_stool_desc: "Империя Ашанти изобилует предметами роскоши, такими как золото, какао-бобы, слоновая кость, драгоценные камни, а торговля ими контролируется королем на золотом табурете — Асантехене." #NT!
  ASH_imperial_economy: "Имперская экономика" #NT!
- ASH_imperial_economy_desc: "Нам следует расширять нашу экономику, если мы хотим обеспечить свое правление в эти переменчивые времена." #NT!
+ ASH_imperial_economy_desc: "Нам следует расширять нашу экономику, если мы хотим сохранить нашу власть в это переменчивое время." #NT!
  ASH_ashanti_gold: "Ашанти Голд" #NT!
- ASH_ashanti_gold_desc: "Золото всегда было важно для нас, оно имеет не только материальную ценность, но и имеет для нас духовное значение." #NT!
- ASH_chirano_gold_deposit: "Месторождение золота Чирано" #NT!
- ASH_chirano_gold_deposit_desc: "Мы начнем добывать золото на крупнейшем месторождении золота на нашей священной земле, однако для этого нам потребуются самые сильные люди." #NT!
+ ASH_ashanti_gold_desc: "Золото всегда было важно для нас, оно не только имеет материальную ценность, но и имеет для нас духовное значение." #NT!
+ ASH_chirano_gold_deposit: "Золотоносное месторождение Чирано" #NT!
+ ASH_chirano_gold_deposit_desc: "Мы начнем добывать золото на самом крупном месторождении на нашей священной земле, однако для этого нам потребуются самые сильные люди." #NT!
  ASH_mines_in_bono: "Шахты в Боно" #NT!
  ASH_mines_in_bono_desc: "Мы построим еще больше золотых приисков в регионе Боно." #NT!
  ASH_mines_in_ahafo: "Шахты в Ахафо" #NT!
- ASH_mines_in_ahafo_desc: "Мы построим еще больше золотых приисков в регионе Ахафо." #NT!
+ ASH_mines_in_ahafo_desc: "Мы построим еще больше золотых рудников в регионе Ахафо." #NT!
  ASH_adress_the_slavery: "Традиция рабства" #NT!
- ASH_adress_the_slavery_desc: "Хотя британцы требуют от нас отказаться от использования рабского труда, мы не должны отвергать наши традиции." #NT!
+ ASH_adress_the_slavery_desc: "Хотя британцы требуют от нас отказаться от использования рабского труда, мы не должны отказываться от наших традиций." #NT!
  ASH_expand_slave_labour: "Расширить рабский труд" #NT!
  ASH_slave_plantations_desc: ""
  ASH_cotton_plantations: "Хлопковые плантации" #NT!
  ASH_cotton_plantations_desc: ""
- ASH_construct_logging_camps: "Построить лесозаготовительные лагеря" #NT!
+ ASH_construct_logging_camps: "Строительство лесозаготовительных лагерей" #NT!
  ASH_construct_logging_camps_desc: ""
- ASH_expanding_our_trade_routes: "Расширьте наши торговые пути" #NT!
+ ASH_expanding_our_trade_routes: "Расширяем наши торговые пути" #NT!
  ASH_expanding_our_trade_routes_desc: ""
- ASH_trade_with_inland_villages: "Торговля с внутренними деревнями" #NT!
+ ASH_trade_with_inland_villages: "Торговля с деревнями внутри страны" #NT!
  ASH_trade_with_inland_villages_desc: ""
  ASH_improve_our_pastures: "Расширить пастбища для животных" #NT!
  ASH_improve_our_pastures_desc: ""
  ASH_connecting_the_isolated_villages: "Соедините изолированные деревни" #NT!
  ASH_connecting_the_isolated_villages_desc: ""
- ASH_pave_our_dirt_roads: "Промостить наши грунтовые дороги" #NT!
- ASH_pave_our_dirt_roads_desc: "Мы заложим камнями древние грунтовые дороги, веками соединявшие наши народы." #NT!
- ASH_communal_horses: "Коммунальные лошади" #NT!
- ASH_communal_horses_desc: "Король сказал! Каждое село получит несколько государственных лошадей, которые будут помогать нашим людям в повседневной жизни, будь то сельское хозяйство или путешествия." #NT!
+ ASH_pave_our_dirt_roads: "Заасфальтируйте наши грунтовые дороги" #NT!
+ ASH_pave_our_dirt_roads_desc: "Мы положим камни на древние грунтовые дороги, которые на протяжении веков соединяли наши народы." #NT!
+ ASH_communal_horses: "Лошади общего пользования" #NT!
+ ASH_communal_horses_desc: "Король сказал свое слово! Каждая деревня получит несколько государственных лошадей, которые помогут нашему народу в повседневной жизни, будь то сельское хозяйство или путешествия." #NT!
  ASH_travel_to_the_distant_parts_of_our_empire: "Путешествие в отдаленные уголки Империи" #NT!
  ASH_travel_to_the_distant_parts_of_our_empire_desc: ""
  ASH_asantehenes_rule: "Правило Асантехене" #NT!
@@ -39,22 +39,22 @@
  ASH_empires_administration: "Администрация Империи" #NT!
  ASH_empires_administration_desc: ""
  ASH_trust_the_europeans: "Доверьтесь европейцам" #NT!
- ASH_trust_the_europeans_desc: "Мы должны начать доверять им." #NT!
- ASH_distrust_the_europeans: "Недоверие к европейцам" #NT!
+ ASH_trust_the_europeans_desc: "Нам следует начать доверять им." #NT!
+ ASH_distrust_the_europeans: "Не доверяйте европейцам" #NT!
  ASH_distrust_the_europeans_desc: "Мы не можем и не будем им доверять." #NT!
- ASH_untying_our_hands: "Развязываем руки" #NT!
+ ASH_untying_our_hands: "Развязывая руки" #NT!
  ASH_untying_our_hands_desc: ""
- ASH_welcome_the_foreign_merchants: "Добро пожаловать, иностранные торговцы" #NT!
+ ASH_welcome_the_foreign_merchants: "Приветствуем иностранных торговцев" #NT!
  ASH_welcome_the_foreign_merchants_desc: ""
  ASH_promises_of_gold: "Обещания золота" #NT!
  ASH_promises_of_gold_desc: ""
- ASH_sign_trading_deals: "Подписывать торговые сделки" #NT!
+ ASH_sign_trading_deals: "Подписание торговых сделок" #NT!
  ASH_sign_trading_deals_desc: ""
- ASH_a_trading_empire: "Стройте торговые аванпосты" #NT!
+ ASH_a_trading_empire: "Постройте торговые аванпосты" #NT!
  ASH_a_trading_Empire_desc: ""
  ASH_issue_guns_to_hunting_parties: "Выдача оружия охотничьим отрядам" #NT!
  ASH_issue_guns_to_hunting_parties_desc: ""
- ASH_from_farmer_to_warrior: "От фермера к воину" #NT!
+ ASH_from_farmer_to_warrior: "От фермера до воина" #NT!
  ASH_from_farmer_to_warrior_desc: ""
  ASH_chiefs_as_landowners: "Вожди как землевладельцы" #NT!
  ASH_chiefs_as_landowners_desc: ""
@@ -62,23 +62,23 @@
  ASH_obirempon_as_landowners_desc: ""
  ASH_work_for_your_freedom: "Работайте ради своей свободы" #NT!
  ASH_work_for_your_freedom_desc: ""
- ASH_work_for_your_asantehene: "Работайте ради своего асантехене" #NT!
+ ASH_work_for_your_asantehene: "Работайте на свой Asantehene" #NT!
  ASH_work_for_your_asantehene_desc: ""
  ASH_gold_mining_taxes: "Налоги на добычу золота" #NT!
- ASH_gold_mining_taxes_desc: "Кинг введет более высокие налоги из-за высокого спроса на добычу золота. Все, кто хочет добывать золото, должны отдавать треть своего заработка государству." #NT!
+ ASH_gold_mining_taxes_desc: "Король введет более высокие налоги из-за высокого спроса на добычу золота. Все, кто хочет добывать золото, должны отдавать треть своих доходов государству." #NT!
  ASH_exporting_our_gold: "Экспортируйте наше золото!" #NT!
  ASH_exporting_our_gold_desc: ""
  ASH_from_farmers_to_miners: "От фермеров к шахтерам" #NT!
  ASH_from_farmers_to_miners_desc: ""
  ASH_arming_our_villages_with_guns: "Вооружить деревни оружием" #NT!
  ASH_arming_our_villages_with_guns_desc: ""
- ASH_defend_your_asantehene: "Защитите свой асантехене" #NT!
+ ASH_defend_your_asantehene: "Защитите свой Асантехене" #NT!
  ASH_defend_your_asantehene_desc: ""
  ASH_the_legacy_of_anglo_ashanti_war: "Наследие англо-ашантийской войны" #NT!
  ASH_the_legacy_of_anglo_ashanti_war_desc: ""
  ASH_prepare_our_men_and_villages: "Подготовьте наших людей и деревни" #NT!
  ASH_prepare_our_men_and_villages_desc: ""
- ASH_barricades_along_the_pra: "Баррикады вдоль реки Пра" #NT!
+ ASH_barricades_along_the_pra: "Баррикады вдоль Пра" #NT!
  ASH_barricades_along_the_pra_desc: ""
  ASH_second_war: "Вторая война" #NT!
  ASH_second_war_desc: ""
@@ -86,19 +86,19 @@
  ASH_missionary_crisis_desc: ""
  ASH_third_war: "Третья война" #NT!
  ASH_third_war_desc: ""
- ASH_defend_our_land: "Защити нашу землю" #NT!
+ ASH_defend_our_land: "Защитим нашу землю" #NT!
  ASH_defend_our_land_desc: ""
- ASH_dealing_with_the_british: "Общение с британцами" #NT!
+ ASH_dealing_with_the_british: "Работа с британцами" #NT!
  ASH_dealing_with_the_british_desc: ""
  ASH_british_protectorate: "Британский протекторат" #NT!
  ASH_british_protectorate_desc: ""
- ASH_resist_foreign_influence: "Сопротивляйтесь иностранному влиянию" #NT!
+ ASH_resist_foreign_influence: "Противостоять иностранному влиянию" #NT!
  ASH_resist_foreign_influence_desc: ""
  ASH_partial_isolation: "Начать частичную изоляцию" #NT!
  ASH_partial_isolation_desc: ""
- ASH_centralized_empire: "Централизованная империя" #NT!
+ ASH_centralized_empire: "Централизованная Империя" #NT!
  ASH_centralized_empire_desc: ""
- ASH_decentralized_empire: "Децентрализованная империя" #NT!
+ ASH_decentralized_empire: "Децентрализованная Империя" #NT!
  ASH_decentralized_empire_desc: ""
  ASH_invest_in_kumasi: "Инвестируйте в Кумаси" #NT!
  ASH_invest_in_kumasi_desc: ""
@@ -108,9 +108,9 @@
  ASH_clans_and_chiefdoms_desc: ""
  ASH_education_in_hands_of_priests: "Образование в руках священников" #NT!
  ASH_education_in_hands_of_priests_desc: ""
- ASH_animistic_beliefs: "Анимистические убеждения" #NT!
+ ASH_animistic_beliefs: "Анимистические верования" #NT!
  ASH_animsitc_beliefs_desc: ""
- ASH_build_new_shrines: "Стройте новые святыни" #NT!
+ ASH_build_new_shrines: "Стройте новые святилища" #NT!
  ASH_build_new_shrines_desc: ""
  ASH_expanding_our_rituals: "Расширьте наши ритуалы" #NT!
  ASH_expanding_our_rituals_desc: ""
@@ -119,8 +119,8 @@
  ASH_deport_the_missionaires: "Депортировать христианских миссионеров" #NT!
  ASH_deport_the_missionaires_desc: ""
  ASH_a_grand_ceremony: "Грандиозная церемония" #NT!
- ASH_a_grand_ceremony_desc: "Спасибо за игру в Ашанти!" #NT!
- ASH_kumasi_palace: "Кумаси Палас" #NT!
+ ASH_a_grand_ceremony_desc: "Спасибо за игру в Ashanti!" #NT!
+ ASH_kumasi_palace: "Дворец Кумаси" #NT!
  ASH_kumasi_palace_desc: ""
  ASH_all_roads_lead_to_kumasi: "Все дороги ведут в Кумаси" #NT!
  ASH_all_roads_lead_to_kumasi_desc: ""
@@ -128,13 +128,13 @@
  ASH_invest_in_education_desc: ""
  ASH_unite_people_with_religion: "Объединяйте людей с помощью религии" #NT!
  ASH_unite_people_with_religion_desc: ""
- ASH_inward_regional_power_address_tribal_military: "Ашантийские военные" #NT!
+ ASH_inward_regional_power_address_tribal_military: "Военные Ашанта" #NT!
  ASH_inward_regional_power_address_tribal_military_desc: ""
- ASH_inward_regional_power_specialized_army_doctrine: "Доктрина специализированной армии" #NT!
+ ASH_inward_regional_power_specialized_army_doctrine: "Специализированная армейская доктрина" #NT!
  ASH_inward_regional_power_specialized_army_doctrine_desc: ""
  ASH_inward_regional_power_special_infantry_corps: "Королевская гвардия" #NT!
  ASH_inward_regional_power_special_infantry_corps_desc: ""
- ASH_inward_regional_power_massive_army_doctrine: "Доктрина массивной армии" #NT!
+ ASH_inward_regional_power_massive_army_doctrine: "Массовая армейская доктрина" #NT!
  ASH_inward_regional_power_massive_army_doctrine_desc: ""
  ASH_inward_regional_power_recruitment_drives: "Нанять Способного" #NT!
  ASH_inward_regional_power_recruitment_drives_desc: ""
@@ -142,11 +142,11 @@
  ASH_inward_regional_power_stockpile_tribal_weapons_desc: ""
  ASH_inward_regional_power_loyal_soldiers: "Верный Асантехене" #NT!
  ASH_inward_regional_power_loyal_soldiers_desc: ""
- ASH_inward_regional_power_improve_our_designs: "Улучшенная конструкция Акрафена" #NT!
+ ASH_inward_regional_power_improve_our_designs: "Улучшенные конструкции Акрафены" #NT!
  ASH_inward_regional_power_improve_our_designs_desc: ""
- ASH_inward_regional_power_superior_weaponry: "Продвижение опытных кузнецов" #NT!
+ ASH_inward_regional_power_superior_weaponry: "Поощряйте квалифицированных кузнецов" #NT!
  ASH_inward_regional_power_superior_weaponry_desc: ""
- ASH_getting_our_hands_on_european_guns: "Получение европейского оружия" #NT!
+ ASH_getting_our_hands_on_european_guns: "Заполучить европейское оружие" #NT!
  ASH_getting_our_hands_on_european_guns_desc: ""
  ASH_improve_anglo_ashanti_relations: "Улучшение англо-ашантийских отношений" #NT!
  ASH_improve_anglo_ashanti_relations_desc: ""
@@ -156,7 +156,7 @@
  ASH_invest_in_villages_desc: ""
  ASH_united_in_faith: "Объединенные в вере" #NT!
  ASH_united_in_faith_desc: ""
- ASH_inward_regional_power_advanced_tribal_tactics: "Вестернизируйте нашу тактику" #NT!
+ ASH_inward_regional_power_advanced_tribal_tactics: "Вестернизируем нашу тактику" #NT!
  ASH_inward_regional_power_advanced_tribal_tactics_desc: ""
  ASH_inward_regional_power_early_medicine: "Использование ранней медицины" #NT!
  ASH_inward_regional_power_early_medicine_desc: ""
