--- a/toi/localisation/russian/bulgaria_events_l_russian.yml
+++ b/toi/localisation/russian/bulgaria_events_l_russian.yml
@@ -7,18 +7,18 @@
  eoanb_bulgaria.2.d: ""
  eoanb_bulgaria.2.a: "Замечательный" #NT!
   
- eoanb_bulgaria.3.t: "Варненский проект" #NT!
+ eoanb_bulgaria.3.t: "Проект Варна" #NT!
  eoanb_bulgaria.3.d: ""
- eoanb_bulgaria.3.a: "Вкладывать деньги" #NT!
- eoanb_bulgaria.3.b: "Поддержите только проект озерной гавани" #NT!
+ eoanb_bulgaria.3.a: "Инвестировать" #NT!
+ eoanb_bulgaria.3.b: "Поддержите только проект гавани озера." #NT!
  eoanb_bulgaria.3.c: "Отказаться от сделки" #NT!
   
  eoanb_bulgaria.4.t: "Кого нам следует нанять?" #NT!
  eoanb_bulgaria.4.d: ""
- eoanb_bulgaria.4.a: "Помощь Парижа наиболее очевидна" #NT!
- eoanb_bulgaria.4.b: "Поверьте Лондону, они знатоки морей." #NT!
+ eoanb_bulgaria.4.a: "Помощь Парижа совершенно верна." #NT!
+ eoanb_bulgaria.4.b: "Доверьтесь Лондону, они эксперты в морях." #NT!
  eoanb_bulgaria.4.c: "Назначить болгарскую фирму «Михайловский-Хайрабедян»" #NT!
- eoanb_bulgaria.4.d: "Поручите задачу гамбургской компании" #NT!
+ eoanb_bulgaria.4.d: "Поручить задачу компании в Гамбурге" #NT!
  eoanb_bulgaria.4.tt: "§BЭтот выбор является историческим вариантом.§!" #NT!
   
  eoanb_bulgaria.5.t: "Кабинет инженера Бёмена" #NT!
@@ -28,7 +28,7 @@
   
  eoanb_bulgaria.6.t: "Джерард представляет новые рисунки" #NT!
  eoanb_bulgaria.6.d: ""
- eoanb_bulgaria.6.a: "Примите план" #NT!
+ eoanb_bulgaria.6.a: "Принять план" #NT!
  eoanb_bulgaria.6.b: "Мусор" #NT!
   
  eoanb_bulgaria.7.t: "Строительство порта Варна" #NT!
@@ -43,6 +43,6 @@
  eoanb_bulgaria.9.d: ""
  eoanb_bulgaria.9.a: "Большой" #NT!
   
- eoanb_bulgaria.10.t: "«Гирдап»" #NT!
- eoanb_bulgaria.10.d: "Учредительное собрание Гирдапа состоялось 1 декабря 1881 года, менее чем через четыре года после освобождения Болгарии от османского владычества и образования Княжества Болгария. Русе процветал благодаря своей роли крупного порта на Дунае, быстрому промышленному развитию и прочным связям с Центральной Европой по этой реке. Однако банковское дело было новой концепцией, поскольку большинство людей пользовались услугами ростовщиков и доверяли свои сбережения людям, которых они знали лично. Основатели «Гирдапа» стремились «освободить население от ростовщиков», как выразился позднее директор банка Бончо Боев. Из-за общей нехватки капитала в стране процентные ставки по кредитам, предоставленным Гирдапом, тем не менее, были высокими: 15-18% по сравнению с более чем 20-30% процентной ставкой ростовщиков. Банк официально начал свою деятельность 1 января 1882 года. Свое название он получил от района Гирдап в Русе, где проводилось учредительное собрание." #NT!
+ eoanb_bulgaria.10.t: "\"Гирдап\"" #NT!
+ eoanb_bulgaria.10.d: "Учредительное собрание Гирдапа состоялось 1 декабря 1881 года, менее чем через четыре года после освобождения Болгарии от османского владычества и создания княжества Болгария. Русе процветал благодаря своей роли крупного порта на Дунае, быстрому промышленному развитию и прочным связям с Центральной Европой вдоль этой реки. Банковское дело, однако, было новой концепцией, поскольку большинство людей пользовались услугами ростовщиков и доверяли свои сбережения людям, которых знали лично. Основатели Гирдапа стремились «освободить население от ростовщиков», как выразился будущий директор банка Бончо Боев. Из-за общей нехватки капитала в стране процентные ставки по кредитам, выдаваемым Гирдапом, тем не менее были высокими: 15-18% по сравнению с более чем 20-30% процентной ставкой ростовщиков. Банк официально начал свою деятельность 1 января 1882 года. Он получил свое название от района Гирдап в Русе, где проводилось учредительное собрание." #NT!
  eoanb_bulgaria.10.a: "Начало банковского дела" #NT!
