--- a/toi/localisation/russian/caucasus_l_russian.yml
+++ b/toi/localisation/russian/caucasus_l_russian.yml
@@ -3,46 +3,46 @@
   
  	# IDEAS 
  CAU_fighters: "Кавказский Газават" #NT!
- CAU_fighters_desc: "Газва (множественное число Газават) — это битва или набег против немусульман; Народы Кавказа сплотились под исламом, чтобы противостоять российскому вторжению - они делают это посредством нерегулярной войны, которая особенно эффективна в горной местности Черкесии и Дагестана." #NT!
+ CAU_fighters_desc: "Газва (множественное число Газават) — это битва или набег на немусульман; народы Кавказа объединились под влиянием ислама, чтобы противостоять российскому вторжению — они делают это посредством нерегулярных боевых действий, которые особенно эффективны в горной местности Черкесии и Дагестана." #NT!
  CAU_muridism: "Мюридизм" #NT!
- CAU_muridism_desc: "Мюридизм — военно-политическая идеология народов Северного Кавказа в 1820—1860-х гг. Его целью было объединить всех мусульман Кавказа (таким образом устранив раскол, вызванный различными школами ислама, существовавшими на Кавказе) в священной войне за свободу против русских оккупантов. Мюридизм был глубоко основан на исламской вере и использовался для построения современного, эффективного, единого и централизованного государства. В игре он представлен национальными идеями и законами." #NT!
- CAU_fierce_resistance: "Яростное сопротивление" #NT!
- CAU_fierce_resistance_weak: "Яростное сопротивление" #NT!
- CAU_nomadic_artillery: "Стреляй и беги" #NT!
- CAU_nomadic_artillery_desc: "Для царских войск нововведения Тальхига были совершенно неожиданными. Артиллерия Тальхига была практически неуловима: сделав несколько выстрелов из орудий по царским войскам, он быстро перебрался на конном экипаже в другое место, откуда снова нанес урон русским. Это повторялось периодически. Драгуны и казаки, бросившиеся на звук выстрелов, не обнаружили на месте артиллерии. Русские назвали такую ​​тактику горцев «кочевой артиллерией»." #NT!
- CAU_supply_node_nerf: "Зависимость от местной поддержки" #NT!
+ CAU_muridism_desc: "Мюридизм был военно-политической идеологией северных кавказцев с 1820-х по 1860-е годы. Он был направлен на объединение всех кавказских мусульман (тем самым устраняя раскол, вызванный различными школами ислама, существовавшими на Кавказе) в священной войне за свободу против русских захватчиков. Мюридизм был глубоко укоренен в исламской вере и использовался для построения современного, эффективного, единого и централизованного государства. Он представлен в игре национальными идеями и законами." #NT!
+ CAU_fierce_resistance: "Ожесточенное сопротивление" #NT!
+ CAU_fierce_resistance_weak: "Ожесточенное сопротивление" #NT!
+ CAU_nomadic_artillery: "Стреляй и убегай" #NT!
+ CAU_nomadic_artillery_desc: "Для царских войск нововведения Талхига оказались совершенно неожиданными. Артиллерия Талхига была практически неуловимой: дав несколько выстрелов из пушек по царским войскам, он быстро перемещался на конном экипаже в другое место, откуда снова наносил урон русским. Это повторялось периодически. Драгуны и казаки, прибежавшие на звук выстрелов, не обнаружили артиллерии на месте. Русские называли такую ​​тактику горцев «кочевой артиллерией»." #NT!
+ CAU_supply_node_nerf: "Опора на местную поддержку" #NT!
   
  	# DECISIONS 
- CIR_Unite_Tribes: "Объедините черкесские племена" #NT!
- CIR_Seek_Help_UK: "Ищите поддержку Великобритании" #NT!
- CIR_Seek_Help_OTO: "Ищите поддержку Османской империи" #NT!
+ CIR_Unite_Tribes: "Объединим черкесские племена" #NT!
+ CIR_Seek_Help_UK: "Ищите британскую поддержку" #NT!
+ CIR_Seek_Help_OTO: "Ищите поддержку у Османской империи" #NT!
  CIR_Surrender_To_RUS: "Сдаться России" #NT!
- CIR_nomadic_artillery_tactics: "Восстание отряда Талхига" #NT!
+ CIR_nomadic_artillery_tactics: "Возвышение отряда Талхига" #NT!
   
  	# PARTY NAMES 
- CIR_1860_REP: "Черкесский меджлис" #NT!
+ CIR_1860_REP: "Черкесский Меджлис" #NT!
   
  	# TOOLTIPS 
  CIR_vic_Surrender_To_Russia_tt: "§YМы откажемся от борьбы в обмен на автономию§!" #NT!
   
  	# EVENTS 
  circassia.1.t: "Черкесы просят о помощи" #NT!
- circassia.1.d: "Русские воюют на Кавказе уже несколько десятилетий. Однако сегодня к нам обратился посланник «Независимой Республики Черкесии» с просьбой о любой поддержке. Хотя среди населения есть поддержка оказания помощи черкесскому народу, должны ли мы действительно подрывать наши отношения с русскими?" #NT!
- circassia.1.a: "У нас нет причин их каким-либо образом поддерживать." #NT!
- circassia.1.b: "Организуем поставку вооружения и расходных материалов." #NT!
+ circassia.1.d: "Русские воюют на Кавказе уже несколько десятилетий. Однако сегодня к нам обратился посланник \"Независимой Республики Черкесия\" с просьбой о какой-либо поддержке. Пока среди населения есть поддержка оказания помощи черкесскому народу, должны ли мы действительно подрывать наши отношения с русскими?" #NT!
+ circassia.1.a: "У нас нет никаких причин поддерживать их каким-либо образом." #NT!
+ circassia.1.b: "Мы организуем поставку оружия и припасов" #NT!
   
  circassia.2.t: "Британцы отказываются нас поддерживать" #NT!
  circassia.2.d: ""
- circassia.2.a: "стоило попробовать" #NT!
+ circassia.2.a: "Это стоило попробовать." #NT!
   
- circassia.3.t: "Британцы согласны поддержать нас" #NT!
+ circassia.3.t: "Британцы соглашаются поддержать нас" #NT!
  circassia.3.d: ""
  circassia.3.a: "Большой!" #NT!
   
  circassia.4.t: "Черкесы просят о помощи" #NT!
- circassia.4.d: "Русские воюют на Кавказе уже несколько десятилетий. Однако сегодня к нам обратился посланник «Независимой Республики Черкесии» с просьбой о любой поддержке. Хотя среди населения есть поддержка оказания помощи черкесскому народу, должны ли мы действительно подрывать наши отношения с русскими?" #NT!
- circassia.4.a: "Мы создадим специальную комиссию по черкесским делам." #NT!
- circassia.4.b: "Организуем поставку вооружения и расходных материалов." #NT!
+ circassia.4.d: "Русские воюют на Кавказе уже несколько десятилетий. Однако сегодня к нам обратился посланник \"Независимой Республики Черкесия\" с просьбой о какой-либо поддержке. Пока среди населения есть поддержка оказания помощи черкесскому народу, должны ли мы действительно подрывать наши отношения с русскими?" #NT!
+ circassia.4.a: "Образуем особый комитет по черкесским делам." #NT!
+ circassia.4.b: "Мы организуем поставку оружия и припасов" #NT!
   
  circassia.5.t: "Османы поддерживают нас политически" #NT!
  circassia.5.d: ""
@@ -53,39 +53,39 @@
  circassia.6.a: "Большой!" #NT!
   
  circassia.7.t: "Черкесы предлагают сдаться" #NT!
- circassia.7.d: "Правительство Меджлиса предложило мирные переговоры и выразило готовность принять российское гражданство. Мы получили следующее письмо от Керандико Берзега:\n\n\n \"Эти земли принадлежат нам. \n\nНаше намерение - управлять нашей страной со строгой справедливостью, не причиняя никому несправедливости.\n\nНарод с такие добрые намерения, как мы, должны были вдохновить такую ​​могущественную страну, как ваша.\n\nМы делаем все возможное, чтобы справедливо управлять нашей страной, мы хотим справедливо относиться к нашим соотечественникам и уважать жизнь и собственность иностранцев, которые приезжают к нам.\n\nКакова задача такой могущественной нации, как ваша, претендующей на честь: уничтожить народ?\n\nБудьте справедливы к нам и не уничтожайте нашу собственность и наши мечети, это позорно для сильного государства жизнь человека без надобности.\n\nВы вводите в заблуждение весь мир, распространяя слухи о том, что мы дикий народ, однако мы такие же люди, как и вы.\n\nНе стремитесь проливать нашу кровь, позвольте нам жить здесь. \"" #NT!
- circassia.7.a: "Мы полностью отвергаем! Нам нужны черкесские земли, но черкесы нам не нужны!" #NT!
- circassia.7.b: "Эта война длится слишком долго - давайте закончим ее сейчас" #NT!
+ circassia.7.d: "Правительство Меджлиса предложило провести мирные переговоры и выразило готовность принять российское гражданство. Мы получили следующее письмо от Керандико Берзега:\n\n\n «Эти земли принадлежат нам.\n\nНаше намерение — править нашей страной со строгой справедливостью, не причиняя никому несправедливости.\n\nНарод с добрыми намерениями, как у нас, должен был вдохновить такую ​​могущественную страну, как ваша.\n\nМы делаем все возможное, чтобы управлять нашей страной справедливо, мы хотим справедливо относиться к нашим соотечественникам и уважать жизнь и имущество иностранцев, которые приезжают к нам.\n\nКакова задача такой могущественной нации, как ваша страна, заявляющей о своей чести: уничтожать народ?\n\nБудьте справедливы к нам и не уничтожайте нашу собственность и наши мечети, для могущественного государства позорно лишать человека жизни без необходимости.\n\nВы вводите в заблуждение весь мир, распространяя слухи о том, что мы дикие люди; однако мы такие же люди, как и вы.\n\nНе пытайтесь пролить нашу кровь, дайте нам жить здесь.\"" #NT!
+ circassia.7.a: "Мы полностью отвергаем! Нам нужны черкесские земли, но нам не нужны черкесы!" #NT!
+ circassia.7.b: "Эта война длится слишком долго — давайте положим ей конец сейчас." #NT!
   
- circassia.8.t: "Россияне отвергают наше предложение" #NT!
- circassia.8.d: "Русский царь заявил, что Черкесия не только будет безоговорочно присоединена к России, но и черкесы уйдут, и если черкесский народ не согласится на насильственную миграцию в Турцию, русские генералы не видят проблемы в убийстве всех черкесов." #NT!
- circassia.8.a: "Тогда будем бороться до конца!" #NT!
+ circassia.8.t: "Русские отвергают наше предложение" #NT!
+ circassia.8.d: "Русский царь заявил, что Черкесия не только будет безоговорочно присоединена к России, но и черкесы уйдут оттуда, и если черкесский народ не согласится на насильственное переселение в Турцию, русские генералы не видят никакой проблемы в том, чтобы убить всех черкесов." #NT!
+ circassia.8.a: "Тогда мы будем бороться до конца!" #NT!
   
  circassia.9.t: "Мир установлен!" #NT!
  circassia.9.d: "Русский царь согласился на мир, и мы станем автономной частью России." #NT!
  circassia.9.a: "Большой!" #NT!
   
- circassia.10.t: "Польские легионеры прибыли в Черкесию" #NT!
+ circassia.10.t: "Польские легионеры прибывают в Черкесию" #NT!
  circassia.10.d: ""
  circassia.10.a: "Большой!" #NT!
   
  imamate.1.t: "Банда Ахушана Абакара-Хияджи совершает набеги на наши деревни" #NT!
- imamate.1.d: "Одно из наших сел на севере Дагестана - Охли, где располагался укрепленный гарнизон, подверглось нападению отряда Имамата. Поздно вечером они подверглись внезапному нападению, в ходе которого воину, известному как Губдалан Таймас, вместе со своими двумя товарищами удалось уничтожить сигнальный маяк форта, что позволило банде беспрепятственно вступить в бой и уничтожить дислоцированных там наших солдат." #NT!
+ imamate.1.d: "Одно из наших селений на севере Дагестана - Охли - где располагался укрепленный гарнизон, подверглось нападению со стороны отряда имамата. Поздним вечером они подверглись внезапному нападению, в ходе которого воину по имени Губдалан Таймас с двумя товарищами удалось уничтожить сигнальный маяк форта, что позволило отряду беспрепятственно вступить в бой и уничтожить наших солдат, размещенных там." #NT!
  imamate.1.a: "Блин" #NT!
   
  imamate.2.t: "Губдалан Таймас убит" #NT!
- imamate.2.d: "Губдалан Таймас, свирепый дагестанский воин, был убит сегодня возле горы Гуниб. После того, как он был вынужден отступить со своим отрядом в близлежащее село, разразилась кровавая рукопашная схватка, когда он и его войска атаковали русских солдат штыками и саблями - всего погибло 100 русских солдат, однако каждый дагестанский воин был убит в бою." #NT!
+ imamate.2.d: "Губдалан Таймас, свирепый дагестанский воин, был убит сегодня у горы Гуниб. После того, как он был вынужден отступить со своим отрядом в близлежащее село, началась кровавая схватка, когда он и его отряды атаковали русских солдат штыками и саблями - в общей сложности погибло 100 русских солдат, однако все дагестанские воины были сражены в бою." #NT!
  imamate.2.a: "Одной проблемой меньше" #NT!
   
  imamate.3.t: "Религиозное учение Кунта-хаджи Кишиева" #NT!
- imamate.3.d: "Кунта-хаджи, чеченский мусульманский мистик, недавно вернулся в Чечню из хаджа (ежегодного паломничества в Мекку). Он сторонник пацифизма и пассивного сопротивления, получивший большое влияние в регионе, раздираемом войной за последние 50 лет. Ему удалось привлечь последователей из 5000 мюридов (новичков, посвятивших себя духовному просветлению под руководством духовного наставника) – вопрос в том, стоит ли нам терпеть это." #NT!
- imamate.3.a: "Оставь его в покое" #NT!
+ imamate.3.d: "Кунта-хаджи, чеченский мусульманский мистик, недавно вернулся в Чечню из своего хаджа (ежегодного паломничества в Мекку). Он сторонник пацифизма и пассивного сопротивления, который приобрел большое влияние в регионе, который был раздираем войной в последние 50 лет. Он сумел обрести последователей в 5000 мюридов (новичков, стремящихся к духовному просветлению под руководством духовного наставника) — вопрос в том, должны ли мы это терпеть." #NT!
+ imamate.3.a: "Оставьте его в покое." #NT!
  imamate.3.b: "Арестуйте его!" #NT!
   
- imamate.4.t: "Кинжальное восстание" #NT!
- imamate.4.d: "После того, как мы заключили Кишиева в тюрьму, группа из 3000 мюридов, вооруженных лишь церемониальными кинжалами, попыталась освободить своего учителя. Повстанцы были рассеяны регулярными войсками генерала Туманова, 160 повстанцев были убиты." #NT!
+ imamate.4.t: "Восстание кинжалов" #NT!
+ imamate.4.d: "После того, как мы заключили Кишиева в тюрьму, группа из 3000 мюридов, вооруженных только церемониальными кинжалами, попыталась освободить своего учителя. Восставшие были рассеяны регулярными войсками генерала Туманова, и 160 мятежников были убиты." #NT!
  imamate.4.a: "Хм..." #NT!
   
- circassianews.1.t: "Черкесский комитет помощи" #NT!
- circassianews.1.d: "Комитет помощи черкесам был недавно сформирован в Соединенном Королевстве в ответ на исход черкесского населения, совершенный Российской империей. Вдохновленный более ранними сборами, например, собранными г-жой Хорнби, женой британского консульского судьи в Стамбуле, для доставки еды и одежды беженцам, организация начала сбор пожертвований от британской общественности. Он заручился услугами доктора Миллингена, который впоследствии станет инспектором по карантину в Трабзоне, чтобы соответствующим образом распределить собранные средства среди беженцев в Стамбуле. Доктор Миллинген регулярно отправлял новости в прессу дома в надежде, что его рассказы о страданиях беженцев привлекут больше поддержки. Пожертвования отправлялись сразу по мере их поступления, «поскольку каждый отправленный сразу фунт может спасти жизнь»." #NT!
+ circassianews.1.t: "Комитет Помощи Черкесам" #NT!
+ circassianews.1.d: "Комитет помощи черкесам был недавно сформирован в Соединенном Королевстве в ответ на исход черкесского населения, учиненный Российской империей. Вдохновленный более ранними сборами, такими как тот, который был сделан г-жой Хорнби, женой британского консульского судьи в Стамбуле, чтобы принести еду и одежду беженцам, он начал собирать пожертвования от британской общественности. Он заручился услугами доктора Миллингена, который стал карантинным офицером в Трабзоне, чтобы распределить собранные средства надлежащим образом среди беженцев в Стамбуле. Доктор Миллинген регулярно отправлял обновления в Press на родине в надежде, что его рассказы о страданиях беженцев привлекут больше поддержки. Пожертвования отправлялись сразу же по мере поступления, «поскольку каждый фунт, отправленный сразу, может спасти жизнь»." #NT!
  circassianews.1.a: "Интересный..." #NT!
