--- a/toi/localisation/russian/change_government_structure_l_russian.yml
+++ b/toi/localisation/russian/change_government_structure_l_russian.yml
@@ -1,14 +1,14 @@
 ﻿l_russian:
- gov_change_to_absolute_monarchy_tt: "§CНаше правительство станет §!§Rабсолютной монархией§!" #NT!
- gov_change_to_constitutional_monarchy_tt: "§CНаше правительство станет §!§Rконституционной монархией§!" #NT!
+ gov_change_to_absolute_monarchy_tt: "§CНаше правительство станет §!§Абсолютной монархией§!" #NT!
+ gov_change_to_constitutional_monarchy_tt: "§CНаше правительство станет §!§Конституционной монархией§!" #NT!
  gov_change_to_parliamentary_monarchy_tt: "§CНаше правительство станет §!§Rпарламентской монархией§!" #NT!
- gov_change_to_parliamentary_republic_tt: "§CНаше правительство станет §!§RПарламентской республикой§!" #NT!
- gov_change_to_semi_presidential_republic_tt: "§CНаше правительство станет §!§полупрезидентской республикой§!" #NT!
- gov_change_to_presidential_republic_tt: "§CНаше правительство станет §!§RПрезидентской Республикой§!" #NT!
+ gov_change_to_parliamentary_republic_tt: "§CНаше правительство станет §!§Парламентской Республикой§!" #NT!
+ gov_change_to_semi_presidential_republic_tt: "§CНаше правительство станет §!§Rполупрезидентской республикой§!" #NT!
+ gov_change_to_presidential_republic_tt: "§CНаше правительство станет §!§Президентской Республикой§!" #NT!
  gov_change_to_socialist_republic_tt: "§CНаше правительство станет §!§RСоциалистической Республикой§!" #NT!
  gov_change_to_socialist_state_tt: "§CНаше правительство станет §!§Rсоциалистическим государством§!" #NT!
  gov_change_to_revolutionary_government_tt: "§CНаше правительство станет §!§Rреволюционным правительством§!" #NT!
  gov_change_to_totalitarian_dictatorship_tt: "§CНаше правительство станет §!§Rтоталитарной диктатурой§!" #NT!
- gov_change_to_free_city_tt: "§CНаше правительство станет §!§RВольным городом§!" #NT!
- gov_change_to_military_junta_tt: "§CНаше правительство станет §!§RВоенной хунтой§!" #NT!
- gov_change_to_anarchy_tt: "§CНаше правительство войдет в §!§РАНархию§!" #NT!
+ gov_change_to_free_city_tt: "§CНаше правительство станет §!§Свободным городом§!" #NT!
+ gov_change_to_military_junta_tt: "§CНаше правительство станет §!§Военной хунтой§!" #NT!
+ gov_change_to_anarchy_tt: "§CНаше правительство войдет в §!§Rархию§!" #NT!
