--- a/toi/localisation/russian/country_l_russian.yml
+++ b/toi/localisation/russian/country_l_russian.yml
@@ -1,6 +1,6 @@
 ﻿l_russian:
  POLITICAL_POWER: "Законодательная власть" #NT!
- POLITICAL_POWER_DESC: "Какой §HЗаконодательной властью§! обладают лидеры этой страны." #NT!
+ POLITICAL_POWER_DESC: "Насколько §Hзаконодательной властью§! обладают лидеры этой страны?" #NT!
  POLITICS_POLITICAL_POWER_INCREASE: "\nЕжедневное изменение: $VALUE|2=+$" #NT!
  STABILITY: "Национальная стабильность" #NT!
  WAR_SUPPORT: "Поддержка войны"
@@ -14,10 +14,10 @@
  WAR_SUPPORT_EFFECT_TITLE: "\n§HВлияние нашей текущей поддержки войны:§!\n"
  WAR_SUPPORT_AT_OFFENSIVE_WAR: "Наступательная война: $VALUE|+=2%H$" #NT!
  WAR_SUPPORT_AT_DEFENSIVE_WAR: "Оборонительная война: $VALUE|+=2%H$" #NT!
- WAR_SUPPORT_TENSION: "Мировое напряжение: $VALUE|+=2%H$" #NT!
- WAR_SUPPORT_BEING_BOMBED: "Бомбардировка противника: $VALUE|+=2%H$" #NT!
+ WAR_SUPPORT_TENSION: "Мировая напряженность: $VALUE|+=2%H$" #NT!
+ WAR_SUPPORT_BEING_BOMBED: "Бомбардировки противника: $VALUE|+=2%H$" #NT!
  WAR_SUPPORT_INTERCEPTION: "Перехват: $VALUE|+=2%H$" #NT!
- WAR_SUPPORT_HEROES_BEING_KILLED: "Убитые герои войны: $VALUE|+=2%H$" #NT!
+ WAR_SUPPORT_HEROES_BEING_KILLED: "Герои войны погибают: $VALUE|+=2%H$" #NT!
  MANPOWER: "Людские ресурсы"
  SERVICE_MANPOWER: "£manpower_texticon Обслуживающий персонал:"
  SERVICE_MANPOWER_DESC: "Обслуживающий персонал необходим для поддержания работоспособности разных видов техники."
@@ -25,17 +25,17 @@
  EXILE_COUNTRY_NORMAL_MANPOWER_DAILY_GROWTH: "\n    Ежедневный прирост от §Hлегитимности§!: $AMOUNT|H^$"
   
  MANPOWER_TOTAL: "Всего людских ресурсов: $MAX|0H*$"
- MANPOWER_USAGE: "Свободная рабочая сила: $FREE|^2H$\nИспользованная рабочая сила:\nАрмия: $ARMY|^2H$\n - В полевых условиях: $FIELD|^2H$\n - На обучении: $TRAINING|^2H$\nВоздух: $AIR|^2H$\nВоенно-морской флот: $NAVAL|^2H$" #NT!
+ MANPOWER_USAGE: "Свободная рабочая сила: $FREE|^2H$\nИспользованная рабочая сила:\nАрмия: $ARMY|^2H$\n - В полевых условиях: $FIELD|^2H$\n - В обучении: $TRAINING|^2H$\nВВС: $AIR|^2H$\nВМФ: $NAVAL|^2H$" #NT!
  MANPOWER_CURRENT: "Всего людских ресурсов: $TOTAL|^2H$\nДоступно $PERC|2%H$ от общего населения страны ($ELIGIBLE|^H$)"
- MANPOWER_CURRENT_MOBILIZATION: "Общая численность рабочей силы: $TOTAL|^2H$\n$PERC|2%H$ (около $MOB|+3H%$ мобилизуется в день) доступного основного населения, отвечающего требованиям ($ELIGIBLE|^H$)" #NT!
+ MANPOWER_CURRENT_MOBILIZATION: "Общая численность рабочей силы: $TOTAL|^2H$\n$PERC|2%H$ (около $MOB|+3H%$ мобилизуется в день) имеющегося основного населения ($ELIGIBLE|^H$)" #NT!
  MANPOWER_NON_CORE: "$NC_PERC|3%H$ из подходящего населения не национальных регионов доступно ($NC_ELIGIBLE|^H$)"
  MANPOWER_GROWTH: "§YЕжемесячный прирост в регионах§!\nПризывники: $RECRUITABLE|^G$\nГражданские: $CIVILIAN|^G$"
  MANPOWER_VALUE: "$USAGE$\n\n$CURRENT$\n$GROWTH$"
- MANPOWER_DESC: "В этой стране можно набирать солдат. Принять более строгие законы о призыве на военную службу, чтобы увеличить его." #NT!
+ MANPOWER_DESC: "Солдаты, подлежащие призыву в этой стране. Принять более строгие законы о воинской повинности, чтобы увеличить." #NT!
  MANPOWER_DIVISION: "Людские ресурсы дивизии"
  MANPOWER_DIVISION_DESC: "§TКоличество солдат в этой §Hдивизии§!. Погибших заменяют пополнения из общего пула §Hлюдских ресурсов§! вашей страны.§!"
  MANPOWER_DIVISION_SIZE_DESC: "§TКоличество солдат в этой §Hдивизии§!: $AMOUNT|G$. Погибших заменяют пополнения из общего пула §Hлюдских ресурсов§! вашего государства.§!"
- MANPOWER_DIVISION_SIZE_BREAKDOWN_DESC: "§TЭто §HDivision§! содержит войска $AMOUNT|G$. В его состав входят:" #NT!
+ MANPOWER_DIVISION_SIZE_BREAKDOWN_DESC: "§TЭтот §HDivision§! содержит $AMOUNT|G$ войска. Он имеет рабочую силу из:" #NT!
  MANPOWER_BREAKDOWN_ENTRY: "$FLAG$ $COUNTRY|H$: $CURRENT|H$/$MAX|H$"
  MANPOWER_BREAKDOWN_ENTRY_FULL: "$FLAG$ $COUNTRY|H$: $CURRENT|G$/$MAX|G$"
  MANPOWER_SHIP: "Обслуживающий персонал корабля"
@@ -46,8 +46,8 @@
  MANPOWER_AIRWING_DESC: "§TЭтому §Hавиакрылу§! необходимо $AMOUNT|G$ ед. обслуживающего персонала.§!"
  CONSCRIPTION_TOTAL_FACTOR_EXTRA_DESC: "\nЭффективная общая численность рабочей силы изменена на $VAL|-%0$ из-за\n" #NT!
  CONSCRIPTION_TOTAL_FACTOR_EXTRA_DESC: "\nЭффективная общая численность рабочей силы изменена на $VAL|-%0$ из-за\n" #NT!
- EQUIPMENT_DIVISION: "Коэффициент оснащения дивизиона" #NT!
- EQUIPMENT_DIVISION_DESC: "Показывает, как дивизия наполняется необходимым оборудованием." #NT!
+ EQUIPMENT_DIVISION: "Коэффициент оснащения дивизии" #NT!
+ EQUIPMENT_DIVISION_DESC: "Показывает, как дивизия укомплектована необходимым оборудованием." #NT!
  DIVISION_IN_TEMPLATE_TRANSFER: "Дивизия сейчас меняет свой шаблон с $OLD|H$ на $NEW|H$. Реорганизация завершится, когда будет получена первая необходимая единица техники, а старая техника вернется в резерв."
  MANPOWER_MONTHLY_TOTAL: "Ежемесячный прирост людских ресурсов: $VALUE|^+1$($PERC|2%H$)\nСуммарный прирост населения: $MAX|^2H$($FACTOR|2%H$ от общей численности)\n\nБазовый прирост: $RATIO|%H$"
  MANPOWER_MODIFIER_APPLIED: "Применяемые коэффициенты:\n$MODIFIERS$"
@@ -55,21 +55,21 @@
  MANPOWER_MONTHLY_TECH_FACTOR: "Из-за технологий: $VALUE|+%$"
  MANPOWER_PROVINCE_TOOLTIP: "Людские ресурсы: $VAL|*Y$"
  INDUSTRIAL_CAPACITY: "Фабрики"
- INDUSTRIAL_CAPACITY_DESC: "Есть три разных типа фабрик, каждый из которых имеет свою цель." #NT!
+ INDUSTRIAL_CAPACITY_DESC: "Существует три различных типа фабрик, каждая из которых имеет свое предназначение." #NT!
  INDUSTRIAL_CAPACITY_DESC_OCCUPATION: "Количество фабрик, доступных вам в оккупированных регионах, зависит от вашей оккупационной политики."
  ARMY_EXPERIENCE: "Опыт армии"
  ARMY_EXPERIENCE_GAIN_TRAINING: "Из упражнений: $VALUE|=+3$ ежедневно" #NT!
- ARMY_EXPERIENCE_DESC: "Когда ваше снаряжение используется в бою, вы получаете армейский опыт. Это означает, что вы можете получить армейский опыт, когда ваш §HDivisions§! вступить в бой или если у вас есть §HLend-Leased§! оборудование для войн ваших союзников.\nВы также получаете опыт, проводя учения с войсками уровня не ниже $UNIT_TRAINING_LEVEL|Y$ и из определенных §HНациональных фокусов§!. Некоторые §HМинистры§! могут увеличивать получаемый опыт.\n\nАрмейский опыт необходим для создания и изменения §HШаблонов дивизий§!." #NT!
+ ARMY_EXPERIENCE_DESC: "Поскольку ваше снаряжение используется в бою, вы получаете армейский опыт. Это означает, что вы можете получить армейский опыт, когда ваше §HDivisions§! участвует в битве или если у вас есть §HLend-Leased§! снаряжение в войнах ваших союзников.\nВы также получаете опыт, проводя учения с войсками, которые находятся по крайней мере на уровне $UNIT_TRAINING_LEVEL|Y$ и от определенных §HНациональных фокусов§!. Некоторые §Hминистры§! могут увеличить получаемый опыт.\n\nАрмейский опыт необходим для создания и изменения ваших §HШаблонов дивизий§!." #NT!
  NAVY_EXPERIENCE: "Опыт флота"
- NAVY_EXPERIENCE_DESC: "По мере того, как ваши корабли используются в бою, вы получаете опыт военно-морского флота. Некоторые §HНациональные фокусы§! дают дополнительный опыт, а некоторые §HМинистры§! могут увеличить получаемый опыт.\n\nВоенно-морской опыт используется для разработки лучших вариантов существующих кораблей." #NT!
+ NAVY_EXPERIENCE_DESC: "Когда ваши корабли используются в бою, вы получаете опыт флота. Некоторые §HНациональные фокусы§! дают дополнительный опыт, а некоторые §HМинистры§! могут увеличить получаемый опыт.\n\nОпыт флота используется для разработки лучших вариантов существующих кораблей." #NT!
  NAVY_EXPERIENCE_GAIN_TRAINING: "От §Hморских учений§!: $VALUE|=+3$ ежедневно"
  AIR_EXPERIENCE: "Опыт авиации"
- AIR_EXPERIENCE_DESC: "Поскольку ваши самолеты используются в миссиях и в контакте с противником, вы получаете опыт полета. Это означает, что вы можете получить опыт в воздухе, когда ваши §HВоздушные крылья§! вступают в бой или если у вас есть §Hарендованное§! оборудование для войн ваших союзников.\nОпределенные §HНациональные фокусы§! дают дополнительный опыт, а некоторые §HМинистры§ _1 может увеличить получаемый опыт.\n\nВоздушный опыт используется для разработки лучших вариантов существующих самолетов." #NT!
+ AIR_EXPERIENCE_DESC: "Поскольку ваши самолеты используются на миссиях и в контакте с противником, вы получаете Воздушный Опыт. Это означает, что вы можете получить Воздушный Опыт, когда ваши §HВоздушные Крылья§! участвуют в битве или если у вас есть §HЛенд-Лиз§! оборудование для войн ваших союзников.\nНекоторые §HНациональные Фокусы§! дают дополнительный опыт, а некоторые §HМинистры§! могут увеличить получаемый опыт.\n\nВоздушный Опыт используется для разработки лучших вариантов существующих самолетов." #NT!
  AIR_EXPERIENCE_GAIN_TRAINING: "От §Hвоздушных учений§!: $VALUE|=+3$ ежедневно"
  COMMAND_POWER: "Командный ресурс"
- COMMAND_POWER_DESC: "§HКомандная сила§! используется для различных военных операций и продвижения генералов. Его можно потратить на разовые операции или выделить на непрерывные операции. Рост и максимальный потенциал §HКомандной Силы§! можно увеличить с помощью различных Доктрин и Национальных Духов." #NT!
- CURRENT_COMMAND_POWER_TOPBAR: "§HТекущая командная власть: $VALUE|G1$§!" #NT!
- COMMAND_POWER_GAIN: "Ежедневный выигрыш: $VALUE|Y2$" #NT!
+ COMMAND_POWER_DESC: "§HСила командования§! используется для различных военных операций и продвижения генералов. Она может быть потрачена на одноразовые операции или может быть выделена для постоянных операций. Рост и максимальная емкость §HСилы командования§! могут быть увеличены различными Доктринами и Национальными Духами." #NT!
+ CURRENT_COMMAND_POWER_TOPBAR: "§HТекущая командная мощность: $VALUE|G1$§!" #NT!
+ COMMAND_POWER_GAIN: "Ежедневный прирост: $VALUE|Y2$" #NT!
  MAX_COMMAND_POWER_TEXT: "Текущий максимум: $VALUE|Y0$"
  COMMAND_POWER_ALLOCATED: "Зарезервировано: $VALUE|R1$"
  COMMAND_POWER_ALLOCATION: "Выделено:"
@@ -79,8 +79,8 @@
  COMMAND_POWER_TOOLTIP_AIR_MISSION_UNASSIGNED: "$MISSION_TYPE$ ($WING_NAME|H$)"
  MANPOWER_IN_USE: "Людские ресурсы в бою"
  MANPOWER_IN_USE_DESC: "§TКоличество солдат в бою. Погибших заменяют пополнения из пула §Hлюдских ресурсов§! вашей страны.§!"
- EQUIPMENT_IN_USE: "Оборудование в полевое соотношение" #NT!
- EQUIPMENT_IN_USE_DESC: "Показывает, как дивизии наполняются необходимой техникой." #NT!
+ EQUIPMENT_IN_USE: "Соотношение оборудования в полевых условиях" #NT!
+ EQUIPMENT_IN_USE_DESC: "Показывает, как дивизии укомплектованы необходимым оборудованием." #NT!
  #EQUIPMENT_TOTAL: "Общее количество кораблей" #NT!
  NAVY_EQUIPMENT_TOTAL_DESC: "Показывает, сколько всего у нас кораблей." #NT!
  MANPOWER_IN_USE_GARRISON: "Людские ресурсы в гарнизонах"
@@ -90,9 +90,9 @@
  NAVY_EQUIPMENT_TOTAL: "Общее количество кораблей"
  NAVAL_SERVICE_MANPOWER_DESC: "Обслуживающий персонал необходим для поддержания работоспособности нашего флота."
  AIR_EQUIPMENT_TOTAL: "Общее количество самолетов" #NT!
- AIR_EQUIPMENT_TOTAL_DESC: "Показывает, сколько у нас всего самолетов." #NT!
- AIR_EQUIPMENT_IN_USE: "Плоскости в соотношении полей" #NT!
- AIR_EQUIPMENT_IN_USE_DESC: "Показано, как авиакрылья наполняются необходимым оборудованием." #NT!
+ AIR_EQUIPMENT_TOTAL_DESC: "Показывает, сколько всего у нас самолетов." #NT!
+ AIR_EQUIPMENT_IN_USE: "Соотношение самолетов в поле" #NT!
+ AIR_EQUIPMENT_IN_USE_DESC: "Показывает, как авиакрылья оснащаются необходимым оборудованием." #NT!
  AIR_SERVICE_MANPOWER_DESC: "Обслуживающий персонал необходим для поддержания работоспособности наших ВВС."
  EQUIPMENT_IN_USE_HEADER: "Снаряжение в войсках"
  EQUIPMENT_IN_GARRISON_HEADER: "Снаряжение в гарнизонах"
@@ -102,5 +102,5 @@
  EXPERIENCE_DAILY_GAIN_TOPBAR: "§TЕжедневный прирост: $VALUE|Y2$§!\n"
  EXPERIENCE_FROM_ATTACHES: "Наши атташе в государстве $COUNTRIES$ передали нам $XPSHARE|H%0$ их военного опыта"
  RULES_TITLE: "§HОбщие сведения по законам:§!"
- RULES_DESC: "The Rules of your Country are controlled by your Ideology, the Ideology of your Faction and your National Spirits" DAILY_EXPERIENCE_GAIN_OFFICERS: "Правила вашей страны контролируются вашей идеологией, идеологией вашей фракции и вашим национальным духом" DAILY_EXPERIENCE_GAIN_OFFICERS:0 "Ежедневный выигрыш:" #NT!
+ RULES_DESC: "The Rules of your Country are controlled by your Ideology, the Ideology of your Faction and your National Spirits" DAILY_EXPERIENCE_GAIN_OFFICERS: "Правила вашей страны контролируются вашей идеологией, идеологией вашей фракции и вашим национальным духом" DAILY_EXPERIENCE_GAIN_OFFICERS:0 "Ежедневный прирост:" #NT!
  DAILY_EXPERIENCE_GAIN_OFFICERS: "Ежедневный прирост:"
