--- a/toi/localisation/russian/csa_member_states_l_russian.yml
+++ b/toi/localisation/russian/csa_member_states_l_russian.yml
@@ -2,31 +2,31 @@
   
  csa_member_state_opinion_modifier: "Государство-член Конфедерации" #NT!
  csa_recognized_cored_provinces_opinion_modifier: "Они признали наши основные провинции" #NT!
- csa_old_civil_war_enemies_opinion_modifier: "Старые враги гражданской войны" #NT!
+ csa_old_civil_war_enemies_opinion_modifier: "Старые враги времен Гражданской войны" #NT!
   
  csa_member_state_select_platform.1.t: "Децентрализованный [CSA.GetName]!" #NT!
- csa_member_state_select_platform.1.d: "Поскольку [CSA.GetName] формально принял децентрализованную форму правления, государства-члены конфедерации обладают значительной автономией. Будущее позиций и политики нашей страны в настоящее время обсуждается. Мы можем в некоторой степени влиять на решение Конгресса нашего штата, но это не гарантия того, что предлагаемые нами позиции победят. Возникает вопрос: какой будет наша избирательная платформа?" #NT!
- csa_member_state_select_platform.1.a: "Мы выберем позиции на платформе!" #NT!
- csa_member_state_select_platform.1.b: "Платформы нет, пусть решает Конгресс." #NT!
+ csa_member_state_select_platform.1.d: "С официальным принятием [CSA.GetName] децентрализованной формы правления, штаты-члены конфедерации имеют большую автономию. Будущее позиций и политики нашей страны в настоящее время обсуждается. Мы можем влиять на то, что будет в конгрессе нашего штата в некоторой степени, но нет гарантии, что наши предлагаемые позиции победят. Возникает вопрос, какой будет наша предвыборная платформа?" #NT!
+ csa_member_state_select_platform.1.a: "Мы выберем наши позиции на платформе!" #NT!
+ csa_member_state_select_platform.1.b: "Платформы нет, пусть решает конгресс." #NT!
   
- csa_member_state_select_platform_tooltip: "§RЭтот вариант находится в стадии незавершенного производства и не завершен. Пока он не будет завершен, этот вариант будет решать конгресс.§!" #NT!
- csa_member_state_congress_platform_tooltip: "Конгресс проголосует и определит политику §Y[ROOT.GetName]§! без нашего влияния." #NT!
+ csa_member_state_select_platform_tooltip: "§RЭтот вариант находится в разработке и не закончен. Пока он не будет закончен, этот вариант будет решать конгресс.§!" #NT!
+ csa_member_state_congress_platform_tooltip: "Конгресс будет голосовать и определять политику §Y[ROOT.GetName]§! без нашего влияния." #NT!
   
  csa_member_state_congress_voted.1.t: "Конгресс завершил голосование!" #NT!
- csa_member_state_congress_voted.1.d: "Сегодня орган Конгресса [ROOT.GetAdjective] завершил рассмотрение законодательства и политики. Вновь обретенная автономия нашей страны позволит нам делать то, чего мы никогда не смогли бы сделать под управлением Соединенных Штатов!" #NT!
+ csa_member_state_congress_voted.1.d: "Сегодня [ROOT.GetAdjective] конгресс завершил свои раунды законодательства и политики. Новообретенная автономия нашей страны позволит нам делать то, что мы никогда не могли делать под гнетом Соединенных Штатов!" #NT!
  csa_member_state_congress_voted.1.a: "Это новый день для всех [ROOT.GetAdjective]" #NT!
   
- CSA_member_state_policies_voted_choices: "§YРезультаты принятия закона Конгрессом:§!" #NT!
+ CSA_member_state_policies_voted_choices: "§YРезультаты законопроекта Конгресса:§!" #NT!
  CSA_member_state_policies_voted_privileged_education: "Политика в области образования: §YПривилегированное образование§!\n" #NT!
- CSA_member_state_policies_voted_open_schools: "Политика в области образования: §YОткрытые школы§!\n" #NT!
- CSA_member_state_policies_voted_export_focus: "Торговая политика: §YЭкспортная ориентация§!\n" #NT!
+ CSA_member_state_policies_voted_open_schools: "Образовательная политика: §YОткрытые школы§!\n" #NT!
+ CSA_member_state_policies_voted_export_focus: "Торговая политика: §YЭкспортный фокус§!\n" #NT!
  CSA_member_state_policies_voted_free_trade: "Торговая политика: §YСвободная торговля§!\n" #NT!
  CSA_member_state_policies_voted_very_high_taxes: "Налоговая политика: §YОчень высокие налоги§!\n" #NT!
  CSA_member_state_policies_voted_high_taxes: "Налоговая политика: §YВысокие налоги§!\n" #NT!
  CSA_member_state_policies_voted_normal_taxes: "Налоговая политика: §YОбычные налоги§!\n" #NT!
  CSA_member_state_policies_voted_low_taxes: "Налоговая политика: §YНизкие налоги§!\n" #NT!
  CSA_member_state_policies_voted_very_low_taxes: "Налоговая политика: §YОчень низкие налоги§!\n" #NT!
- CSA_member_state_policies_voted_universal_male_suffrage: "Политика голосования: §YТолько белые мужчины§!\n" #NT!
+ CSA_member_state_policies_voted_universal_male_suffrage: "Политика голосования: §YТолько для белых мужчин§!\n" #NT!
  CSA_member_state_policies_voted_property_owners_suffrage: "Политика голосования: §YБелые владельцы недвижимости§!\n" #NT!
  CSA_member_state_policies_voted_universal_suffrage: "Политика голосования: §YВсе граждане§!\n" #NT!
  CSA_member_state_policies_voted_free_elections: "Избирательная политика: §YСвободные выборы§!\n" #NT!
