--- a/toi/localisation/russian/custom_alerts_l_russian.yml
+++ b/toi/localisation/russian/custom_alerts_l_russian.yml
@@ -1,15 +1,15 @@
 ﻿l_russian:
   ###TOOLTIPS### 
  CUSTOM_ALERTS_TOOLTIP_PROXY: "[CUSTOM_ALERTS_TOOLTIP]" #NT!
- CUSTOM_ALERTS_TOOLTIP_DELAYED_PROXY: "[CUSTOM_ALERTS_TOOLTIP_DELAYED]\n§GНажмите правой кнопкой мыши, чтобы уволить на один месяц§!\n§_1Нажмите правой кнопкой мыши, удерживая клавишу Alt, чтобы уволить на один год§!" #NT!
+ CUSTOM_ALERTS_TOOLTIP_DELAYED_PROXY: "[CUSTOM_ALERTS_TOOLTIP_DELAYED]\n§GЩелкните правой кнопкой мыши, чтобы закрыть на один месяц§!\n§GЩелкните правой кнопкой мыши, удерживая клавишу Alt, чтобы закрыть на один год§!" #NT!
   
- CUSTOM_ALERTS_MHC_POWERFUL_ADVISOR: "§YМогущественные советники в высшем военном командовании§!" #NT!
- CUSTOM_ALERTS_TOOLTIP_DELAYED_MHC_POWERFUL_ADVISOR: "Один или несколько советников вашего военного командования очень влиятельны. Если их властью не управлять тщательно, это может привести к проблемам." #NT!
- CUSTOM_ALERTS_MHC_POWERFUL_ORG: "§YМощная организация(и) в высшем военном командовании§!" #NT!
- CUSTOM_ALERTS_TOOLTIP_DELAYED_MHC_POWERFUL_ORG: "Одна или несколько организаций вашего высшего военного командования очень сильны. Если их властью не управлять тщательно, это может привести к серьезным проблемам." #NT!
- CUSTOM_ALERTS_MHC_UNFIT: "§YНеподходящие лидеры в высшем военном командовании§!" #NT!
- CUSTOM_ALERTS_TOOLTIP_DELAYED_MHC_UNFIT: "Один или несколько руководителей вашего военного командования не подходят для этой должности. Если его не заменить более компетентным человеком, это может привести к потере баланса сил." #NT!
- CUSTOM_ALERTS_MHC_ACTIVE_NO_WAR: "§YАктивный советник(и) высшего военного командования в мирное время§!" #NT!
- CUSTOM_ALERTS_TOOLTIP_DELAYED_MHC_ACTIVE_NO_WAR: "Один или несколько ваших советников вашего военного командования в настоящее время активны, несмотря на отсутствие войны. Это может привести к непреднамеренному увеличению мощности." #NT!
- CUSTOM_ALERTS_MHC_INACTIVE_WAR: "§YНеактивные советники в высшем военном командовании на войне§!" #NT!
- CUSTOM_ALERTS_TOOLTIP_DELAYED_MHC_INACTIVE_WAR: "Никакие советники вашего военного командования в настоящее время не активны, несмотря на бушующую войну. Модификаторы, предоставляемые советниками, применяются только при активации." #NT!
+ CUSTOM_ALERTS_MHC_POWERFUL_ADVISOR: "§YВлиятельный(е) советник(и) в высшем военном командовании§!" #NT!
+ CUSTOM_ALERTS_TOOLTIP_DELAYED_MHC_POWERFUL_ADVISOR: "Один или несколько советников вашего военного командования очень могущественны. Если их власть не будет управляться осторожно, это может привести к проблемам." #NT!
+ CUSTOM_ALERTS_MHC_POWERFUL_ORG: "§YМощная организация(ы) в высшем военном командовании§!" #NT!
+ CUSTOM_ALERTS_TOOLTIP_DELAYED_MHC_POWERFUL_ORG: "Одна или несколько организаций вашего военного командования очень могущественны. Если их власть не будет управляться осторожно, это может привести к серьезным проблемам." #NT!
+ CUSTOM_ALERTS_MHC_UNFIT: "§YНепригодный(е) лидер(ы) в военном высшем командовании§!" #NT!
+ CUSTOM_ALERTS_TOOLTIP_DELAYED_MHC_UNFIT: "Один или несколько руководителей организаций вашего военного командования не подходят для этой должности. Если их не заменить более компетентным человеком, это может привести к потере баланса сил." #NT!
+ CUSTOM_ALERTS_MHC_ACTIVE_NO_WAR: "§YАктивный(е) советник(и) в военном командовании в мирное время§!" #NT!
+ CUSTOM_ALERTS_TOOLTIP_DELAYED_MHC_ACTIVE_NO_WAR: "Один или несколько ваших советников из вашего военного командования в настоящее время активны, несмотря на то, что нет войны. Это может привести к непреднамеренному усилению власти." #NT!
+ CUSTOM_ALERTS_MHC_INACTIVE_WAR: "§YНеактивные советники в высшем военном командовании во время войны§!" #NT!
+ CUSTOM_ALERTS_TOOLTIP_DELAYED_MHC_INACTIVE_WAR: "Ни один советник вашего военного командования в настоящее время не активен, несмотря на бушующую войну. Модификаторы, предоставляемые советниками, применяются только при активации." #NT!
