--- a/toi/localisation/russian/eoanb_flavour_l_russian.yml
+++ b/toi/localisation/russian/eoanb_flavour_l_russian.yml
@@ -3,23 +3,23 @@
  eoanb_category_world_fairs: "Ярмарки и выставки" #NT!
  eoanb_category_world_fairs_desc: ""
   
- eoanb_decision_hold_world_fair: "Проведите Всемирную выставку" #NT!
+ eoanb_decision_hold_world_fair: "Провести всемирную ярмарку" #NT!
  eoanb_decision_hold_world_fair_desc: ""
- eoanb_tt_hold_world_fair: "Проведите §YВсемирную ярмарку§! в §Y[Root.Capital.GetName]§! – это будет стоить значительную сумму §RЗаконодательной власти§! и §RДенег§!, но принесет нам §Gмеждународное признание§! и §Gпрестиж. §!" #NT!
- eoanb_tt_hold_world_fair_preparations: "Начнем подготовку к §YВсемирной выставке§!" #NT!
- eoanb_decision_hold_world_fair_counter: "§YПодготовка к Всемирной выставке§!" #NT!
+ eoanb_tt_hold_world_fair: "Проведите §YВсемирную ярмарку§! в §Y[Root.Capital.GetName]§! — это будет стоить значительного количества §RЗаконодательной власти§! и §RДенег§!, но вознаградит нас §Gмеждународным признанием§! и §Gпрестижем§!" #NT!
+ eoanb_tt_hold_world_fair_preparations: "Мы начнем подготовку к §YВсемирной Ярмарке§!" #NT!
+ eoanb_decision_hold_world_fair_counter: "§YПодготовьтесь к Всемирной выставке§!" #NT!
  eoanb_decision_hold_world_fair_counter_desc: ""
- eoanb_decision_hold_world_fair_review_budget: "Обзор бюджета" #NT!
+ eoanb_decision_hold_world_fair_review_budget: "Пересмотреть бюджет" #NT!
  eoanb_decision_hold_world_fair_review_budget_desc: ""
  eoanb_decision_hold_world_fair_invite_attendees: "Пригласить участников" #NT!
  eoanb_decision_hold_world_fair_invite_attendees_desc: ""
  eoanb_decision_hold_world_fair_main_buildings: "Обзор основных зданий" #NT!
  eoanb_decision_hold_world_fair_main_buildings_desc: ""
- eoanb_tt_hold_world_fair_review_budget: "Пересмотрите бюджет: чем больше бюджет, тем больше шансов на успех." #NT!
- eoanb_tt_hold_world_fair_invite_attendees: "Пригласите участников – чем больше Великих и Второстепенных держав примут участие, тем больше шансов на успех." #NT!
- eoanb_tt_hold_world_fair_main_buildings: "Просмотрите главные здания: чем они великолепны, тем больше шансов на успех." #NT!
- eoanb_tt_hold_world_fair_start: "§YВсемирная выставка§! начнется!" #NT!
- eoanb_tt_world_fair_preparation_done: "Подготовка завершена" #NT!
+ eoanb_tt_hold_world_fair_review_budget: "Пересмотрите бюджет — чем больше бюджет, тем больше шансов на успех." #NT!
+ eoanb_tt_hold_world_fair_invite_attendees: "Пригласите участников — чем больше великих и второстепенных держав примут участие, тем больше шансов на успех." #NT!
+ eoanb_tt_hold_world_fair_main_buildings: "Осмотрите главные здания — чем они великолепнее, тем больше шансов на успех." #NT!
+ eoanb_tt_hold_world_fair_start: "§YВсемирная ярмарка§! начнется!" #NT!
+ eoanb_tt_world_fair_preparation_done: "Подготовка завершена." #NT!
  eoanb_decision_hold_world_fair_cost_tt: "[eoanb_decision_hold_world_fair_cost_tt_scripted]" #NT!
  eoanb_decision_hold_world_fair_cost_tt_blocked: "[eoanb_decision_hold_world_fair_cost_tt_scripted_blocked]" #NT!
  eoanb_decision_hold_world_fair_cost_great: "£pol_power §Y200§!" #NT!
@@ -28,44 +28,44 @@
  eoanb_decision_hold_world_fair_cost_other_blocked: "£pol_power §R300§1" #NT!
   
  eoanbworldfair.1.t: "Начало подготовки к Всемирной выставке" #NT!
- eoanbworldfair.1.d: "Необходимые документы заполнены, и теперь принимающий город готов взять на себя задачу по подготовке к предстоящей Всемирной выставке. В течение следующих пяти месяцев мы должны принять необходимые решения, чтобы сделать Всемирную выставку максимально успешной." #NT!
+ eoanbworldfair.1.d: "Необходимые документы были заполнены, и принимающий город теперь готов взять на себя задачу по подготовке к предстоящей Всемирной ярмарке. В течение следующих пяти месяцев мы должны принять необходимые решения, чтобы сделать Всемирную ярмарку максимально успешной." #NT!
  eoanbworldfair.1.a: "Очень хорошо" #NT!
   
  eoanbworldfair.2.t: "Подготовка завершена" #NT!
- eoanbworldfair.2.d: "Этапы планирования, проектирования и строительства Всемирной выставки и ее площадок уже завершены, и пришло время открыть Всемирную выставку для всего мира." #NT!
- eoanbworldfair.2.a: "Пусть ярмарка начнется" #NT!
+ eoanbworldfair.2.d: "Этапы планирования, проектирования и строительства Всемирной выставки и ее площадок уже завершены, и настало время представить Всемирную выставку всему миру." #NT!
+ eoanbworldfair.2.a: "Да начнётся ярмарка" #NT!
   
- eoanbworldfair.3.t: "[GetYear] [From.Capital.GetName] Всемирная выставка" #NT!
- eoanbworldfair.3.d: "Всемирная выставка [From.Capital.GetName] началась сегодня и продлится больше месяца. Ярмарку открыл [From.GetHoSTitle] [From.GetHeadofState][From.GetHoGAttendance] Несколько стран со всего мира посетили ярмарку, [GetWorldFairSuccess1] [From.Capital.GetName], чтобы восхититься чудесами современной науки, а также богатствами мира.\n [GetWorldFairSuccess2].\n [GetWorldFairExhibition1] [GetWorldFairExhibition2]" #NT!
+ eoanbworldfair.3.t: "Всемирная ярмарка [GetYear] [From.Capital.GetName]" #NT!
+ eoanbworldfair.3.d: "Сегодня началась [From.Capital.GetName] Всемирная ярмарка, которая продлится больше месяца. Ярмарку открыл [From.GetHoSTitle] [From.GetHeadofState][From.GetHoGAttendance] Несколько стран со всего мира посетили ярмарку, [GetWorldFairSuccess1] [From.Capital.GetName] чтобы подивиться чудесам современной науки, а также богатствам мира.\n [GetWorldFairSuccess2].\n [GetWorldFairExhibition1] [GetWorldFairExhibition2]" #NT!
  eoanbworldfair.3.a: "Очень хорошо" #NT!
   
- eoanbworldfair.4.t: "Обзор бюджета" #NT!
- eoanbworldfair.4.d: "Чтобы успешно провести Всемирную выставку, мы должны определить соответствующий бюджет. Чем выше бюджет, тем больше мы произведем впечатление на иностранных гостей и повысим престиж нашей страны, но мы должны позаботиться о том, чтобы не разорить себя, потратив больше, чем можем, и, возможно, не залезть в долги." #NT!
+ eoanbworldfair.4.t: "Пересмотреть бюджет" #NT!
+ eoanbworldfair.4.d: "Чтобы успешно провести Всемирную ярмарку, мы должны принять решение о соответствующем бюджете. Чем больше бюджет, тем больше мы произведем впечатление на иностранных гостей и повысим престиж нашей страны, но мы должны убедиться, что не разоримся, потратив больше, чем можем, и, возможно, не влезем в долги." #NT!
  eoanbworldfair.4.a: "Не жалейте расходов" #NT!
  eoanbworldfair.4.b: "Средний бюджет" #NT!
- eoanbworldfair.4.c: "Сохраните то, что мы можем" #NT!
+ eoanbworldfair.4.c: "Спасаем то, что можем" #NT!
   
- eoanbworldfair.5.t: "[From.GetName] приглашает нас на Всемирную выставку" #NT!
- eoanbworldfair.5.d: "[From.GetName] пригласил нас на Всемирную выставку, которую он проводит в [From.Capital.GetName]. Мы можем решить присоединиться и принять участие в этом замечательном мероприятии, где мы также сможем улучшить свое положение среди стран мира, или мы можем не присоединиться и вместо этого сосредоточиться на более насущных вопросах." #NT!
- eoanbworldfair.5.a: "Естественно, мы присоединимся" #NT!
+ eoanbworldfair.5.t: "[From.GetName] приглашает нас на Всемирную Ярмарку" #NT!
+ eoanbworldfair.5.d: "[From.GetName] пригласил нас на Всемирную ярмарку, которую он проводит в [From.Capital.GetName]. Мы можем решить присоединиться и принять участие в этом замечательном мероприятии, где мы также можем улучшить свое положение среди стран мира, или мы можем не присоединяться и вместо этого сосредоточиться на более насущных вопросах." #NT!
+ eoanbworldfair.5.a: "Естественно, мы присоединимся." #NT!
  eoanbworldfair.5.b: "А отчет по фондовому рынку?" #NT!
   
  eoanbworldfair.6.t: "Проектирование основных зданий" #NT!
- eoanbworldfair.6.d: "Важной частью нашей Всемирной выставки является правильное проектирование основных зданий. Мы всегда можем сосредоточиться на стиле и нанять лучших архитекторов, чтобы произвести впечатление на посетителей, или же мы можем сосредоточиться на использовании новейших технологий и строительных материалов, чтобы произвести впечатление на мир нашими промышленными достижениями. Наконец, если у нас много денег и ресурсов, мы можем сделать места проведения как можно более роскошными, хотя эстетическая и технологическая ценность этого может быть сомнительной." #NT!
+ eoanbworldfair.6.d: "Важной частью нашей Всемирной ярмарки является проектирование основных зданий в адекватном стиле. Мы всегда можем сосредоточиться на стиле и нанять лучших архитекторов, чтобы произвести впечатление на посетителей, или же мы можем сосредоточиться на использовании новейших технологий и строительных материалов, чтобы произвести впечатление на мир нашими промышленными достижениями. Наконец, если у нас много денег и ресурсов, мы можем сделать места проведения максимально роскошными, хотя эстетическая и технологическая ценность этого может быть сомнительной." #NT!
  eoanbworldfair.6.a: "Нанять лучшего архитектора" #NT!
  eoanbworldfair.6.b: "Используйте новейшие материалы и технологии" #NT!
- eoanbworldfair.6.c: "Сделайте их максимально большими и роскошными." #NT!
+ eoanbworldfair.6.c: "Сделайте их настолько большими и роскошными, насколько это возможно." #NT!
   
  eoanbworldfair.7.t: "Всемирная выставка завершилась" #NT!
- eoanbworldfair.7.d1: "Спустя целый месяц Всемирная выставка завершилась. Сейчас начинается процесс перепрофилирования выставочных площадей. Ярмарка имела триумфальный успех, в отличие от любой другой ярмарки, и это определенно укрепит наше международное положение и наш авторитет. Совсем скоро такая великолепная ярмарка повторится снова." #NT!
- eoanbworldfair.7.d2: "Спустя целый месяц Всемирная выставка завершилась. Сейчас начинается процесс перепрофилирования выставочных площадей. Ярмарка прошла успешно, безусловно, одна из лучших из когда-либо существовавших, и это укрепит нашу международную репутацию и наш авторитет. Надеемся, что в будущем мы сможем снова провести ярмарку и превзойти даже нынешний успех." #NT!
- eoanbworldfair.7.d3: "Спустя целый месяц Всемирная выставка завершилась. Сейчас начинается процесс перепрофилирования выставочных площадей. Ярмарка имела довольно посредственный успех, в ней не было ничего необычного или исключительного, и мы можем лишь надеяться, что это укрепит наше международное положение и наш авторитет. Надеюсь, в будущем мы сможем снова провести ярмарку и сделать ее еще лучше." #NT!
- eoanbworldfair.7.d4: "Спустя целый месяц Всемирная выставка завершилась. Сейчас начинается процесс перепрофилирования выставочных площадей. Ярмарка потерпела позорный провал, изобилуя худшими выставками, которые только можно себе представить, и потребовалось чудо, чтобы избежать международного позора. Надеемся, что в будущем нам представится возможность снова провести ярмарку и наверстать упущенное." #NT!
+ eoanbworldfair.7.d1: "После целого месяца работы Всемирная ярмарка завершилась. Сейчас начинается процесс перепрофилирования выставочных площадок. Ярмарка имела триумфальный успех, не похожий ни на один из когда-либо виденных, и это, безусловно, укрепит наши международные позиции и нашу репутацию. Не пройдет много времени, чтобы такая великолепная ярмарка снова состоялась." #NT!
+ eoanbworldfair.7.d2: "После целого месяца работы Всемирная ярмарка завершилась. Сейчас начинается процесс перепрофилирования выставочных площадок. Ярмарка прошла успешно, безусловно, одна из лучших, которые мы видели до сих пор, и это укрепит наши международные позиции и нашу репутацию. Надеюсь, в будущем мы сможем снова провести ярмарку и превзойти даже нынешний успех." #NT!
+ eoanbworldfair.7.d3: "После целого месяца работы Всемирная ярмарка завершилась. Сейчас начинается процесс перепрофилирования выставочных площадок. Ярмарка имела довольно посредственный успех, ничего необычного или исключительного, и мы можем только надеяться, что это укрепит наши международные позиции и нашу репутацию. Надеюсь, в будущем мы сможем снова провести ярмарку, а затем сделать ее лучше." #NT!
+ eoanbworldfair.7.d4: "После целого месяца работы Всемирная ярмарка завершилась. Сейчас начинается процесс перепрофилирования выставочных площадок. Ярмарка была позорным провалом, полным худших выставок, которые только можно себе представить, и потребовалось бы чудо, чтобы избежать международного позора. Надеюсь, в будущем нам дадут возможность снова провести ярмарку и компенсировать этот провал." #NT!
  eoanbworldfair.7.a: "Отличный" #NT!
  eoanbworldfair.7.b: "Очень хорошо" #NT!
- eoanbworldfair.7.c: "В следующий раз мы сделаем лучше" #NT!
- eoanbworldfair.7.d: "Быстро, прячьтесь!" #NT!
+ eoanbworldfair.7.c: "В следующий раз мы сделаем лучше." #NT!
+ eoanbworldfair.7.d: "Скорее прячься!" #NT!
   
  eoanbworldfair.8.t: "Всемирная выставка отменена" #NT!
- eoanbworldfair.8.d: "Из-за нашей неспособности вовремя подготовиться Всемирная выставка была отменена, и из-за этого мы подверглись международному унижению. Теперь нам предстоит расплатиться с кредиторами и возместить ущерб." #NT!
- eoanbworldfair.8.a: "Всегда есть следующий раз" #NT!
+ eoanbworldfair.8.d: "Из-за нашей неспособности должным образом подготовиться вовремя Всемирная выставка была отменена, и мы понесли международное унижение из-за этого. Теперь нам нужно расплатиться с кредиторами и покрыть ущерб." #NT!
+ eoanbworldfair.8.a: "Всегда есть следующий раз." #NT!
