--- a/toi/localisation/russian/eoanbr_mapmodes_l_russian.yml
+++ b/toi/localisation/russian/eoanbr_mapmodes_l_russian.yml
@@ -1,65 +1,65 @@
 ﻿l_russian:
  MAPMODE_SPHERE_MAP_MODE_NAME: "Сферы" #NT!
  MAPMODE_SPHERE_MAP_MODE: "§HSpheres§! режим карты" #NT!
- MAPMODE_SPHERE_MAP_MODE_DESCRIPTION: "Показывает политическое соответствие стран мировым нынешним великим и второстепенным державам." #NT!
+ MAPMODE_SPHERE_MAP_MODE_DESCRIPTION: "Показывает политическое соотношение стран с нынешними великими и второстепенными мировыми державами." #NT!
  sphere_map_mode_tooltip: "[FROM.GetOwnerDebugTag]§Y[FROM.GetOwnerSphereLeader]§! Политическая сфера" #NT!
- sphere_map_mode_tooltip_delayed: "§Y[FROM.OWNER.GetNameWithFlag]§! является частью §Y[FROM.GetOwnerSphereLeader]§! Политическая сфера" #NT!
+ sphere_map_mode_tooltip_delayed: "§Y[FROM.OWNER.GetNameWithFlag]§! является членом §Y[FROM.GetOwnerSphereLeader]§! Сферы" #NT!
   
   
  MAPMODE_EXPANSION_MAP_MODE_NAME: "Расширение" #NT!
  MAPMODE_EXPANSION_MAP_MODE: "§HExpansion§! режим карты" #NT!
- MAPMODE_EXPANSION_MAP_MODE_DESCRIPTION: "Показывает потенциальные возможности расширения нашей страны." #NT!
- expansion_map_mode_tooltip: "[FROM.GetOwnerDebugTag]§Y[FROM.GetExpansionOpportunityName]§!" #NT!
+ MAPMODE_EXPANSION_MAP_MODE_DESCRIPTION: "Демонстрирует потенциальные возможности расширения для нашей страны." #NT!
+ expansion_map_mode_tooltip: "[FROM.GetDebugID][ROOT.GetFlag]§Y[ROOT.GetAdjective]§! Возможность расширения\n\n §Y[FROM.GetName]§! - [FROM.GetExpansionOpportunityAction]" #NT!
  expansion_map_mode_tooltip_delayed: "Этот режим карты — §HWIP§!" #NT!
   
  MAPMODE_CULTURE_MAP_MODE_NAME: "Культуры" #NT!
  MAPMODE_CULTURE_MAP_MODE: "§HCulture§! режим карты" #NT!
- MAPMODE_CULTURE_MAP_MODE_DESCRIPTION: "Отображает этническую структуру населения штата." #NT!
- culture_map_mode_tooltip: "[FROM.GetDebugID]§Y[FROM.GetName] Культура§!\n\nНациональная культура: §C[GetOwnerCultureName]§_3\nГосударственное большинство: §C[?pops_culture_array^0.GetTokenLocalizedKey]§_3" #NT!
+ MAPMODE_CULTURE_MAP_MODE_DESCRIPTION: "Отображает этнический состав населения штата." #NT!
+ culture_map_mode_tooltip: "[FROM.GetDebugID]§Y[FROM.GetName] Культура§!\n\nНациональная культура: §C[FROM.GetOwnerCultureName]§!\nГосударственное большинство: §C[?FROM.pops_culture_array^0.GetTokenLocalizedKey]§!" #NT!
  culture_map_mode_tooltip_delayed: "$culture_desc$" #NT!
  eoanbr_culture_mapmode_country_tt: "[THIS.GetFlag] §C[THIS.GetName]§! Культура: §H[?pops_primary_culture_array^0.GetTokenLocalizedKey]§!" #NT!
  eoanbr_culture_mapmode_country_tt_delayed: "\n[GetPrimaryCultureList]§!\n\n[GetPromotedCultureList]\n\n[GetMarginalizedCultureList]" #NT!
   
  MAPMODE_RELIGION_MAP_MODE_NAME: "Религия" #NT!
  MAPMODE_RELIGION_MAP_MODE: "§HReligion§! режим карты" #NT!
- MAPMODE_RELIGION_MAP_MODE_DESCRIPTION: "Отображает религиозный раскол населения штата." #NT!
- religion_map_mode_tooltip: "[FROM.GetDebugID]§Y[FROM.GetName] Религия§!\n\nНациональная религия: §C[GetOwnerReligionName]§_3\nГосударственное большинство: §C[?pops_religion_array^0.GetTokenLocalizedKey]§_3" #NT!
+ MAPMODE_RELIGION_MAP_MODE_DESCRIPTION: "Отображает религиозный состав населения штата." #NT!
+ religion_map_mode_tooltip: "[FROM.GetDebugID]§Y[FROM.GetName] Религия§!\n\nНациональная религия: §C[FROM.GetOwnerReligionName]§!\nГосударственное большинство: §C[?FROM.pops_religion_array^0.GetTokenLocalizedKey]§!" #NT!
  religion_map_mode_tooltip_delayed: "$religion_desc$" #NT!
  eoanbr_religion_mapmode_country_tt: "[THIS.GetFlag] §C[THIS.GetName]§! Религия: §H[?pops_primary_religion_array^0.GetTokenLocalizedKey]§!" #NT!
  eoanbr_religion_mapmode_country_tt_delayed: "\n[GetPrimaryReligionList]§!\n\n[GetPromotedReligionList]\n\n[GetMarginalizedReligionList]" #NT!
   
  MAPMODE_DETRIMENTAL_IMPACT_MAP_MODE_NAME: "Вредное воздействие" #NT!
  MAPMODE_DETRIMENTAL_IMPACT_MAP_MODE: "§HВредное воздействие§! режим карты" #NT!
- MAPMODE_DETRIMENTAL_IMPACT_MAP_MODE_DESCRIPTION: "Отображает пагубное воздействие, от которого пострадало государство." #NT!
- detrimental_impact_map_mode_tooltip: "§YВредное воздействие§! в §C[FROM.GetName]§_1: §Y[?FROM.detrimental_colonial_impact_value|0]§!" #NT!
- detrimental_impact_map_mode_tooltip_delayed: "Вредное воздействие нанесено §Y[FROM.GetName]§!" #NT!
+ MAPMODE_DETRIMENTAL_IMPACT_MAP_MODE_DESCRIPTION: "Отображает пагубное воздействие, которому подверглось государство." #NT!
+ detrimental_impact_map_mode_tooltip: "§YВредное воздействие§! в §C[FROM.GetName]§!: §Y[?FROM.detrimental_colonial_impact_value|0]§!" #NT!
+ detrimental_impact_map_mode_tooltip_delayed: "Вредное воздействие получил §Y[FROM.GetName]§!" #NT!
   
  MAPMODE_INSTITUTION_MAP_MODE_NAME: "Учреждения" #NT!
  MAPMODE_INSTITUTION_MAP_MODE: "§HInstitution§! режим карты" #NT!
- MAPMODE_INSTITUTION_MAP_MODE_DESCRIPTION: "Отображает технико-социальный прогресс между странами." #NT!
+ MAPMODE_INSTITUTION_MAP_MODE_DESCRIPTION: "Отображает технологический и общественный прогресс между странами." #NT!
  institution_map_mode_tooltip: "§YInstitutions§!: [GetOwnerInstitutionCount]" #NT!
- institution_map_mode_tooltip_delayed: "Количество учреждений, открытых §Y[FROM.OWNER.GetName]§!" #NT!
+ institution_map_mode_tooltip_delayed: "Количество учреждений, обнаруженных §Y[FROM.OWNER.GetName]§!" #NT!
   
- MAPMODE_MARKET_MAP_MODE: "Рынок" #NT!
- MAPMODE_MARKET_MAP_MODE_NAME: "Рынок" #NT!
- MAPMODE_MARKET_MAP_MODE_DESCRIPTION: "Отображает экономический рынок страны." #NT!
- market_map_mode_tooltip: "§Y[GetOwnerMarketLeader]§! Экономический рынок" #NT!
+ MAPMODE_MARKET_MAP_MODE: "Рынки" #NT!
+ MAPMODE_MARKET_MAP_MODE_NAME: "Рынки" #NT!
+ MAPMODE_MARKET_MAP_MODE_DESCRIPTION: "Отображает экономические рынки национальных стран." #NT!
+ market_map_mode_tooltip: "§YТорговый рынок§! из [FROM.CONTROLLER.GetFlag] §C[FROM.CONTROLLER.GetName]§!:\n §LЗона:§! [FROM.GetControllerMarketWithFlag]\n §LКапитал:§! [FROM.GetControllerMarketCapital]\n §LЧленство:§! [FROM.GetControllerMarketMembershipRank]\n\n§YДоступ к торговле:§! §!2" #NT!
  market_map_mode_tooltip_delayed: ""
   
  MAPMODE_SOL_MAP_MODE: "Уровень жизни" #NT!
  MAPMODE_SOL_MAP_MODE_NAME: "Уровень жизни" #NT!
- MAPMODE_SOL_MAP_MODE_DESCRIPTION: "Отображает уровень жизни каждого штата, причем более яркие штаты имеют более высокий уровень жизни." #NT!
- sol_map_mode_tooltip: "§YУровень жизни§! в §C[FROM.GetName]§_1: §Y[?FROM.pops_sol|1]§!" #NT!
- sol_map_mode_tooltip_delayed: "§YУровень жизни§! (§YВВП/c§!) является мерой того, насколько все население штата в целом обеспечено благосостоянием и условиями жизни." #NT!
+ MAPMODE_SOL_MAP_MODE_DESCRIPTION: "Отображает уровень жизни каждого штата: более ярким цветом обозначены штаты с более высоким уровнем жизни." #NT!
+ sol_map_mode_tooltip: "§YУровень жизни§! в §C[FROM.GetName]§!: §Y[?FROM.pops_sol|1]§!" #NT!
+ sol_map_mode_tooltip_delayed: "§YУровень жизни§! (§YВВП/чел.§!) — это показатель того, насколько обеспечено население штата в целом и насколько хороши условия его жизни." #NT!
   
  MAPMODE_GDP_MAP_MODE: "Валовой внутренний продукт" #NT!
  MAPMODE_GDP_MAP_MODE_NAME: "Валовой внутренний продукт" #NT!
- MAPMODE_GDP_MAP_MODE_DESCRIPTION: "Отображает ВВП каждого штата, причем более яркие штаты имеют более высокий ВВП." #NT!
- gdp_map_mode_tooltip: "§YВаловой внутренний продукт§! в §C[FROM.GetName]§_1: §Y[?FROM.gdp_amount|3]§![FROM.GetCurrencyTextIconState]" #NT!
- gdp_map_mode_tooltip_delayed: "§YВаловой внутренний продукт§! (§YВВП§!) является мерой стоимости товаров, произведенных в данном регионе за год. Это сумма производства каждого товара, произведенного в данном штате, умноженная на соответствующую цену." #NT!
+ MAPMODE_GDP_MAP_MODE_DESCRIPTION: "Отображает ВВП каждого штата: более ярким цветом обозначены штаты с более высоким ВВП." #NT!
+ gdp_map_mode_tooltip: "§YВаловой внутренний продукт§! в §C[FROM.GetName]§!: §Y[?FROM.gdp_amount|3]§![FROM.GetCurrencyTextIconState]" #NT!
+ gdp_map_mode_tooltip_delayed: "§YВаловой внутренний продукт§! (§YВВП§!) — это мера стоимости товаров, произведенных в данном регионе за год. Это сумма производства каждого товара, произведенного в штате, умноженная на их соответствующую цену." #NT!
   
  MAPMODE_GDP_C_MAP_MODE: "Валовой внутренний продукт на душу населения" #NT!
  MAPMODE_GDP_C_MAP_MODE_NAME: "Валовой внутренний продукт на душу населения" #NT!
- MAPMODE_GDP_C_MAP_MODE_DESCRIPTION: "Отображает ВВП/c каждого штата с более яркими штатами, имеющими более высокий ВВП/c." #NT!
- gdp_c_map_mode_tooltip: "§YВаловой внутренний продукт на душу населения§! в §C[FROM.GetName]§_1: §Y[?FROM.gdp_per_capita|3]§![FROM.GetCurrencyTextIconState]" #NT!
- gdp_c_map_mode_tooltip_delayed: "§YВаловой внутренний продукт на душу населения§! (§YВВП/c§!) — это мера стоимости товаров, произведенных в данном регионе за год, деленная на общую численность населения." #NT!
+ MAPMODE_GDP_C_MAP_MODE_DESCRIPTION: "Отображает ВВП/чел. каждого штата: более ярким цветом выделены штаты с более высоким ВВП/чел." #NT!
+ gdp_c_map_mode_tooltip: "§YВаловой внутренний продукт на душу населения§! в §C[FROM.GetName]§!: §Y[?FROM.gdp_per_capita|3]§![FROM.GetCurrencyTextIconState]" #NT!
+ gdp_c_map_mode_tooltip_delayed: "§YВаловой внутренний продукт на душу населения§! (§YВВП/ц§!) — это мера стоимости товаров, произведенных в данном регионе за год, деленная на общую численность населения." #NT!
