--- a/toi/localisation/russian/eoanbspainzap_l_russian.yml
+++ b/toi/localisation/russian/eoanbspainzap_l_russian.yml
@@ -1,5 +1,5 @@
 ﻿l_russian:
- eoanbspainzap.1.title: "Создание шахт Rio Tinto" #NT!
- eoanbspainzap.1.desc: "ЗАМЕСИТЕЛЬ" #NT!
- eoanbspainzap.1.a: "Дайте британскому разрешению" #NT!
+ eoanbspainzap.1.title: "Создание рудников Рио-Тинто" #NT!
+ eoanbspainzap.1.desc: "ЗАПОЛНИТЕЛЬ" #NT!
+ eoanbspainzap.1.a: "Дайте британское разрешение" #NT!
  eoanbspainzap.1.b: "Мы сделаем это по-своему!" #NT!
