--- a/toi/localisation/russian/eoanbsys_diplomacy_l_russian.yml
+++ b/toi/localisation/russian/eoanbsys_diplomacy_l_russian.yml
@@ -1,21 +1,22 @@
 ﻿l_russian:
  EOANBDIPLO_DESIGNATE_RIVAL_ACTION_ACTION_DESC: "Наше правительство опорочит имя этого правительства и объявит его врагом нашей великой нации." #NT!
  EOANBDIPLO_DESIGNATE_RIVAL_ACTION_TITLE: "Назначить соперника" #NT!
- eoanb_diplo_designate_rival_recent: "§YНазначал соперника за последние два года§!" #NT!
+ SEND_CREDIT_GIFT_ACTION_KEY_TITLE: "Отправить подарок" #NT!
+ eoanb_diplo_designate_rival_recent: "§YНазначал соперника в последние два года§!" #NT!
  eoanbdiplo_has_rivaled_us_tt: "Соперничал с нами" #NT!
- eoanbdiplo_rival_action_target_sent: "§Y[Root.GetAdjective]§! правительство объявит §Y[THIS.GetNameDef]§! неполноценный и враг §Y[Root.GetAdjective]§! нация!\n \nВы не можете назначить нового соперника в течение следующих двух лет." #NT!
- eoanbdiplo_rival_action_target_recieved: "Коварное правительство §B[FROM.GetNameDef]§! объявил нас своим соперником!" #NT!
- EOANBDIPLO_REMOVE_RIVAL_ACTION_ACTION_DESC: "Неопределенный соперник" #NT!
- EOANBDIPLO_REMOVE_RIVAL_ACTION_TITLE: "Неопределенный соперник" #NT!
- eoanbdiplo_clear_rival_action_target_sent: "§Y[Root.GetAdjective]§! постановит, что правительство §Y[THIS.GetNameDef]§! больше нет конкурентов!" #NT!
- eoanbdiplo_clear_rival_action_target_recieved: "Правительство §B[FROM.GetNameDef]§! отказался от соперничества с нами!" #NT!
- EOANBDIPLO_TRIBAL_BORDER_RAID_ACTION_ACTION_DESC: "Начать племенной рейд" #NT!
- EOANBDIPLO_TRIBAL_BORDER_RAID_ACTION_TITLE: "Начать рейд" #NT!
- eoanbdiplo_tribal_border_raid_action_target_sent: "Объявлен рейд на §B[THIS.GetAdjective]§! деревня!" #NT!
- eoanbdiplo_tribal_border_raid_action_target_recieved: "§B[FROM.GetNameDef]§! объявил облаву на нашу деревню!" #NT!
+ eoanbdiplo_rival_action_target_sent: "Правительство §Y[Root.GetAdjective]§! объявит §Y[THIS.GetNameDef]§! неполноценным и врагом нации §Y[Root.GetAdjective]§!!\n \nВы не сможете назначить нового соперника в течение следующих двух лет." #NT!
+ eoanbdiplo_rival_action_target_recieved: "Коварное правительство §B[FROM.GetNameDef]§! объявило нас своим соперником!" #NT!
+ EOANBDIPLO_REMOVE_RIVAL_ACTION_ACTION_DESC: "Снять обозначение соперника" #NT!
+ EOANBDIPLO_REMOVE_RIVAL_ACTION_TITLE: "Снять обозначение соперника" #NT!
+ eoanbdiplo_clear_rival_action_target_sent: "§Y[Root.GetAdjective]§! постановит, что правительство §Y[THIS.GetNameDef]§! больше не имеет конкурентов!" #NT!
+ eoanbdiplo_clear_rival_action_target_recieved: "Правительство §B[FROM.GetNameDef]§! прекратило соперничество с нами!" #NT!
+ EOANBDIPLO_TRIBAL_BORDER_RAID_ACTION_ACTION_DESC: "Инициировать племенной рейд" #NT!
+ EOANBDIPLO_TRIBAL_BORDER_RAID_ACTION_TITLE: "Инициировать рейд" #NT!
+ eoanbdiplo_tribal_border_raid_action_target_sent: "Объявлен рейд на деревню §B[THIS.GetAdjective]§!" #NT!
+ eoanbdiplo_tribal_border_raid_action_target_recieved: "§B[FROM.GetNameDef]§! объявили набег на нашу деревню!" #NT!
  EOANBDIPLO_RAID_COLONIAL_NEIGHBOR_ACTION_ACTION_DESC: "[afr_tribal_raid_colonial_neighbor_desc_scripted]" #NT!
- EOANBDIPLO_RAID_COLONIAL_NEIGHBOR_ACTION_TITLE: "Рейд «Колониальный захватчик»" #NT!
- EOANBDIPLO_AFR_EMPIRE_POLITICS_LOWER_SUBJECT_LEVEL_ACTION_DESC: "Мы объявим нашим субъектам, что они больше не достойны своего нынешнего статуса автономии." #NT!
- EOANBDIPLO_AFR_EMPIRE_POLITICS_LOWER_SUBJECT_LEVEL_TITLE: "Уменьшите автономию субъектов" #NT!
- EOANBDIPLO_AFR_EMPIRE_POLITICS_RAISE_SUBJECT_LEVEL_ACTION_DESC: "Мы потребуем, чтобы наш повелитель признал нашу ценность и предоставил нам более автономный статус." #NT!
+ EOANBDIPLO_RAID_COLONIAL_NEIGHBOR_ACTION_TITLE: "Набег на колониального захватчика" #NT!
+ EOANBDIPLO_AFR_EMPIRE_POLITICS_LOWER_SUBJECT_LEVEL_ACTION_DESC: "Мы объявим нашим подданным, что они больше не достойны своего нынешнего статуса автономии." #NT!
+ EOANBDIPLO_AFR_EMPIRE_POLITICS_LOWER_SUBJECT_LEVEL_TITLE: "Уменьшить самостоятельность субъекта" #NT!
+ EOANBDIPLO_AFR_EMPIRE_POLITICS_RAISE_SUBJECT_LEVEL_ACTION_DESC: "Мы потребуем, чтобы наш сюзерен признал нашу ценность и предоставил нам более автономный статус." #NT!
  EOANBDIPLO_AFR_EMPIRE_POLITICS_RAISE_SUBJECT_LEVEL_TITLE: "Требуйте большей автономии" #NT!
