--- a/toi/localisation/russian/expedition_cochinchina_l_russian.yml
+++ b/toi/localisation/russian/expedition_cochinchina_l_russian.yml
@@ -1,96 +1,96 @@
 ﻿l_russian:
   
   
- SPR_cochinchina_expedition_begin_invasion: "Начните экспедицию в Кочинчину" #NT!
- SPR_cochinchina_expedition_begin_invasion_desc: "Как только экспедиция в Кочинчину будет подготовлена, начнется совместное вторжение в Кочинчину тех, кто согласился на это." #NT!
- SPR_cochinchina_expedition_begin_invasion_ready_trigger: "§YЭкспедиция в Кохинхину§! готова к старту" #NT!
+ SPR_cochinchina_expedition_begin_invasion: "Начало экспедиции в Кохинхину" #NT!
+ SPR_cochinchina_expedition_begin_invasion_desc: "Как только экспедиция в Кохинхину будет подготовлена, начнется совместное вторжение в Кохинхину тех, кто на это согласился." #NT!
+ SPR_cochinchina_expedition_begin_invasion_ready_trigger: "§YЭкспедиция в Кочинчину§! готова к старту" #NT!
  SPR_cochinchina_expedition_begin_invasion_trigger: "§YSpain§! готов начать экспедицию" #NT!
  FRA_cochinchina_expedition_begin_invasion_trigger: "§YFrance§! готов начать экспедицию" #NT!
   
- SPR_cochinchina_expedition_state_controlled_trigger: "Управляется §YEuropean§! участник" #NT!
+ SPR_cochinchina_expedition_state_controlled_trigger: "Управляется участником §YEuropean§!" #NT!
  SPR_cochinchina_expedition_state_not_controlled_trigger: "Не контролируется §Y[VIN.GetName]§!" #NT!
   
- FRA_cochinchina_expedition_support_malina_port: "Помощь в инвестициях в испанский порт" #NT!
+ FRA_cochinchina_expedition_support_malina_port: "Помощь испанским портовым инвестициям" #NT!
  FRA_cochinchina_expedition_support_malina_port_desc: ""
- SPR_develop_manila_port_decision_started: "Начал расширять портовую инфраструктуру Манилы." #NT!
- FRA_cochinchina_expedition_support_malina_port_tooltip: "\n§Y[FRA.GetName]§! и §Y[SPR.GetName]§! получите §YУлучшение отношений§!, которое обеспечивает изменение §G+25§_3 мнений между обеими нациями.\n" #NT!
- SPR_interest_in_cochinchina_expedition_trigger: "По-прежнему проявляет интерес к §YЭкспедиции в Кохинхину§!." #NT!
+ SPR_develop_manila_port_decision_started: "Начал расширять портовую инфраструктуру Манилы" #NT!
+ FRA_cochinchina_expedition_support_malina_port_tooltip: "\n§Y[FRA.GetName]§! и §Y[SPR.GetName]§! получают §YУлучшенные отношения§!, что обеспечивает изменение §G+25§! Мнения между обеими странами.\n" #NT!
+ SPR_interest_in_cochinchina_expedition_trigger: "Все еще интересуется §YЭкспедицией в Кочинчину§!" #NT!
   
- SPR_cochinchina_expedition_ready_for_invasion: "Готов к экспедиции в Кочинчину" #NT!
+ SPR_cochinchina_expedition_ready_for_invasion: "Готовы к экспедиции в Кохинхину" #NT!
  SPR_cochinchina_expedition_ready_for_invasion_desc: ""
- SPR_cochinchina_expedition_has_not_began: "§YЭкспедиция в Кохинхину§! не началась" #NT!
+ SPR_cochinchina_expedition_has_not_began: "§YЭкспедиция в Кочинчину§! не началась" #NT!
   
- SPR_cochinchina_expedition_take_port_mission: "Вторжение в Кочинчину" #NT!
- SPR_cochinchina_expedition_take_port_mission_desc: "Сайгон и Дананг — крупные портовые города, способные выдержать вторжение и быстро положить конец войне. Они являются краеугольным камнем всей операции, без них европейские силы будут вынуждены отказаться от своих амбиций." #NT!
+ SPR_cochinchina_expedition_take_port_mission: "Вторжение в Кохинхину" #NT!
+ SPR_cochinchina_expedition_take_port_mission_desc: "Сайгон и Дананг — крупные портовые города, которые могут выдержать вторжение и быстро закончить войну. Они являются краеугольными камнями всей операции, без них европейские силы будут вынуждены отказаться от своих амбиций." #NT!
   
   
- cochinchina_expedition.2.t: "Растущее католическое влияние в [286.GetName]!" #NT!
+ cochinchina_expedition.2.t: "Рост католического влияния в [286.GetName]!" #NT!
  cochinchina_expedition.2.d: ""
- cochinchina_expedition.2.a: "Расправьтесь и казните миссионеров!" #NT!
- cochinchina_expedition.2.b: "Пусть они будут." #NT!
+ cochinchina_expedition.2.a: "Пресекайте и казните миссионеров!" #NT!
+ cochinchina_expedition.2.b: "Пусть будут." #NT!
   
  cochinchina_expedition.3.t: "Миссионеры убиты в [286.GetName]!" #NT!
  cochinchina_expedition.3.d: ""
- cochinchina_expedition.3.a: "Может, нам стоит вмешаться в Кочинчину?" #NT!
- cochinchina_expedition.3.b: "Это безобразие!" #NT!
+ cochinchina_expedition.3.a: "Может быть, нам следует вмешаться в дела Кохинхины?" #NT!
+ cochinchina_expedition.3.b: "Это возмутительно!" #NT!
   
  cochinchina_expedition.4.t: "[FROM.GetName] Возмущен миссионерской казнью!" #NT!
  cochinchina_expedition.4.d: ""
- cochinchina_expedition.4.a: "Попросим [FROM.GetName] о совместном вмешательстве." #NT!
+ cochinchina_expedition.4.a: "Давайте попросим [FROM.GetName] о совместном вмешательстве." #NT!
  cochinchina_expedition.4.b: "Мы можем сделать это в одиночку." #NT!
   
- cochinchina_expedition.5.t: "[FROM.GetName] Просьба о совместной экспедиции в Кохинхину!" #NT!
+ cochinchina_expedition.5.t: "[FROM.GetName] Запрашивает совместную экспедицию в Кохинхину!" #NT!
  cochinchina_expedition.5.d: ""
- cochinchina_expedition.5.a: "Скажи им, что мы с ними." #NT!
- cochinchina_expedition.5.b: "Мы не будем вмешиваться в дела Кочинчины." #NT!
+ cochinchina_expedition.5.a: "Скажите им, что мы с ними." #NT!
+ cochinchina_expedition.5.b: "Мы не будем вмешиваться в дела Кохинхины." #NT!
   
- cochinchina_expedition.6.t: "[FROM.GetName] Присоединяйтесь к экспедиции в Кочинчину!" #NT!
+ cochinchina_expedition.6.t: "[FROM.GetName] Присоединяйтесь к экспедиции в Кохинхину!" #NT!
  cochinchina_expedition.6.d: ""
- cochinchina_expedition.6.a: "Вперед в Кочинчину!" #NT!
+ cochinchina_expedition.6.a: "Вперед в Кохинхину!" #NT!
   
- cochinchina_expedition.7.t: "[FROM.GetName] Отклоняет интервенцию в Кочинчину!" #NT!
+ cochinchina_expedition.7.t: "[FROM.GetName] Отклоняет вмешательство Кохинхины!" #NT!
  cochinchina_expedition.7.d: ""
- cochinchina_expedition.7.a: "Они нам все равно были не нужны!" #NT!
+ cochinchina_expedition.7.a: "Они нам все равно не нужны!" #NT!
   
  cochinchina_expedition.8.t: "[FROM.GetName] Финансирует расширение порта Манилы!" #NT!
  cochinchina_expedition.8.d: ""
  cochinchina_expedition.8.a: "Очень признателен!" #NT!
   
- cochinchina_expedition.18.t: "Начните экспедицию в Кочинчину!" #NT!
+ cochinchina_expedition.18.t: "Начните экспедицию в Кохинхину!" #NT!
  cochinchina_expedition.18.d: ""
  cochinchina_expedition.18.a: "На войну!" #NT!
   
- cochinchina_expedition.23.t: "Посадка в Кочинчине не удалась!" #NT!
+ cochinchina_expedition.23.t: "Посадка в Кохинхине провалилась!" #NT!
  cochinchina_expedition.23.d: ""
  cochinchina_expedition.23.a: "Отмените экспедицию!" #NT!
   
- cochinchina_expedition.24.t: "Успешная посадка в Кочинчине!" #NT!
+ cochinchina_expedition.24.t: "Успешная высадка в Кохинхине!" #NT!
  cochinchina_expedition.24.d: ""
- cochinchina_expedition.24.a: "Мы добились успеха!" #NT!
+ cochinchina_expedition.24.a: "Нам это удалось!" #NT!
   
- cochinchina_expedition.364.t: "Успешного завоевания Кочинчины!" #NT!
+ cochinchina_expedition.364.t: "Успешное завоевание Кохинхины!" #NT!
  cochinchina_expedition.364.d: ""
  cochinchina_expedition.364.a: "Отличный!" #NT!
   
  cochinchina_expedition.365.t: "Ультиматум [VIN.GetName]" #NT!
  cochinchina_expedition.365.d: ""
- cochinchina_expedition.365.a: "Оставить Испанию вне мирных переговоров." #NT!
- cochinchina_expedition.365.b: "Пригласите Испанию к мирным переговорам." #NT!
- cochinchina_expedition.365.c: "Пусть мирные переговоры начнутся." #NT!
+ cochinchina_expedition.365.a: "Исключить Испанию из мирных переговоров." #NT!
+ cochinchina_expedition.365.b: "Пригласить Испанию к мирным переговорам." #NT!
+ cochinchina_expedition.365.c: "Да начнутся мирные переговоры." #NT!
   
- cochinchina_expedition.3655.t: "Франция исключила Испанию из переговоров!" #NT!
+ cochinchina_expedition.3655.t: "Франция исключает Испанию из переговоров!" #NT!
  cochinchina_expedition.3655.d: ""
- cochinchina_expedition.3655.a: "Мальдита Море! Эти французы нас предали!" #NT!
- cochinchina_expedition.3655.b: "Без нас они не смогли бы этого сделать! Нажмите на проблему!" #NT!
+ cochinchina_expedition.3655.a: "Мальдита-Си! Эти французы нас предали!" #NT!
+ cochinchina_expedition.3655.b: "Они не смогли бы сделать это без нас! Поднимите вопрос!" #NT!
   
  cochinchina_expedition.3656.t: "Испания требует присутствия!" #NT!
  cochinchina_expedition.3656.d: ""
- cochinchina_expedition.3656.a: "Мы не хотим и дальше сеять отношения..." #NT!
+ cochinchina_expedition.3656.a: "Мы не хотим еще больше обострять отношения..." #NT!
  cochinchina_expedition.3656.b: "Что они могут с этим поделать? Мы сильнее." #NT!
   
  cochinchina_expedition.3657.t: "Франция приглашает Испанию к переговорам!" #NT!
  cochinchina_expedition.3657.d: ""
- cochinchina_expedition.3657.a: "Как и договорились!" #NT!
+ cochinchina_expedition.3657.a: "Как и договаривались!" #NT!
   
  cochinchina_expedition.3658.t: "Франция удваивает ставки!" #NT!
  cochinchina_expedition.3658.d: ""
@@ -100,14 +100,14 @@
  cochinchina_expedition.366.d: ""
  cochinchina_expedition.366.a: "У нас нет другого выбора..." #NT!
   
- cochinchina_expedition.21.t: "[VIT.GetName] Требования принимает!" #NT!
+ cochinchina_expedition.21.t: "[VIT.GetName] Принимает требования!" #NT!
  cochinchina_expedition.21.d: ""
  cochinchina_expedition.21.a: "Экспедиция окончена." #NT!
   
- cochinchina_expedition.3611.t: "Конец экспедиции в Кочинчину!" #NT!
+ cochinchina_expedition.3611.t: "Конец экспедиции в Кохинхину!" #NT!
  cochinchina_expedition.3611.d: ""
  cochinchina_expedition.3611.a: "Интересный." #NT!
- cochinchina_expedition.3611.b: "За новые колонии!" #NT!
+ cochinchina_expedition.3611.b: "В новые колонии!" #NT!
  cochinchina_expedition.3611.c: "Это ужасно!" #NT!
   
   
