--- a/toi/localisation/russian/expedition_morocco_l_russian.yml
+++ b/toi/localisation/russian/expedition_morocco_l_russian.yml
@@ -1,47 +1,47 @@
 ﻿l_russian:
   
  SPR_morocco_expedition_fortify_ceuta_decision: "Укрепить [1029.GetName]" #NT!
- SPR_morocco_expedition_fortify_ceuta_decision_desc: "Если мы укрепим [1029.GetName], мы гарантируем, что Марокко будет трудно совершать набеги на него в будущем и использовать его для атаки." #NT!
+ SPR_morocco_expedition_fortify_ceuta_decision_desc: "Если мы укрепим [1029.GetName], то гарантируем, что Марокко будет трудно совершить набег на него в будущем и использовать его для начала атаки." #NT!
  SPR_prepare_ceuta_tooltip: "Разблокирует решения, связанные с укреплением §Y[1029.GetName]§!." #NT!
  SPR_morocco_expedition_fortify_melilla_decision: "Укрепить [1030.GetName]" #NT!
- SPR_morocco_expedition_fortify_melilla_decision_desc: "Если мы укрепим [1030.GetName], мы гарантируем, что Марокко будет трудно совершать набеги на него в будущем и использовать его для атаки." #NT!
+ SPR_morocco_expedition_fortify_melilla_decision_desc: "Если мы укрепим [1030.GetName], то гарантируем, что Марокко будет трудно совершить набег на него в будущем и использовать его для начала атаки." #NT!
  SPR_prepare_melilla_tooltip: "Разблокирует решения, связанные с укреплением §Y[1030.GetName]§!." #NT!
   
- SPR_morocco_expedition_begin_invasion: "Начните войну [MOR.GetAdjective]" #NT!
+ SPR_morocco_expedition_begin_invasion: "Начать [MOR.GetAdjective] войну" #NT!
  SPR_morocco_expedition_begin_invasion_desc: "Теперь, когда мы готовы, мы можем начать вторжение в [MOR.GetName]." #NT!
   
- SPR_morocco_expedition_take_er_rif_mission: "Испано-Марокканская война" #NT!
- SPR_morocco_expedition_take_er_rif_mission_desc: "[1030.GetName] и [1029.GetName] — важные портовые города, способные выдержать вторжение в Марокко. Они являются краеугольным камнем всей операции, без них испанские войска будут вынуждены отказаться от войны. Если Испания достигнет [290.GetName], она начнет мирные переговоры с Марокко и окончит войну." #NT!
- SPR_morocco_expedition_take_casablanca_mission: "Испано-Марокканская война" #NT!
- SPR_morocco_expedition_take_casablanca_mission_desc: "[1030.GetName] и [1029.GetName] — важные портовые города, способные выдержать вторжение в Марокко. Они являются краеугольным камнем всей операции, без них испанские войска будут вынуждены отказаться от войны. Касабланка является критически важным городом для [MOR.GetName], и в случае ее потери у Марокко больше не будет желания сражаться." #NT!
+ SPR_morocco_expedition_take_er_rif_mission: "Испано-марокканская война" #NT!
+ SPR_morocco_expedition_take_er_rif_mission_desc: "[1030.GetName] и [1029.GetName] — критически важные портовые города, которые могут выдержать вторжение в Марокко. Они являются краеугольными камнями всей операции, без них испанские войска будут вынуждены отказаться от войны. Если Испания достигнет [290.GetName], она начнет мирные переговоры с Марокко и положит конец войне." #NT!
+ SPR_morocco_expedition_take_casablanca_mission: "Испано-марокканская война" #NT!
+ SPR_morocco_expedition_take_casablanca_mission_desc: "[1030.GetName] и [1029.GetName] — критически важные портовые города, которые могут выдержать вторжение в Марокко. Они являются краеугольными камнями всей операции, без них испанские войска будут вынуждены отказаться от войны. Касабланка — критически важный город для [MOR.GetName], и если она будет потеряна, у Марокко больше не будет воли к борьбе." #NT!
   
  SPR_morocco_expedition_state_controlled_trigger: "Управляется §Y[SPR.GetName]§!" #NT!
  SPR_morocco_expedition_state_not_controlled_trigger: "Не контролируется §Y[MOR.GetName]§!" #NT!
   
  SPR_morocco_expedition_has_not_began: "§YМарокканская война§! не началась" #NT!
   
- morocco.2.t: "Племена совершают несанкционированный набег на Испанию!" #NT!
+ morocco.2.t: "Племена совершили несанкционированный рейд на Испанию!" #NT!
  morocco.2.d: ""
- morocco.2.a: "Это вполне могло быть происшествием!" #NT!
+ morocco.2.a: "Это может быть действительно примечательным инцидентом!" #NT!
   
  SPR_morocco_expedition.1.t: "Марокканские племена совершают набег на нашу границу!" #NT!
  SPR_morocco_expedition.1.d: ""
- SPR_morocco_expedition.1.a: "Требуйте прекращения набегов!" #NT!
- SPR_morocco_expedition.1.b: "У нас есть дела поважнее." #NT!
+ SPR_morocco_expedition.1.a: "Требуйте прекращения рейдов!" #NT!
+ SPR_morocco_expedition.1.b: "У нас есть более важные дела." #NT!
   
  SPR_morocco_expedition.2.t: "Испания требует прекращения рейдов" #NT!
  SPR_morocco_expedition.2.d: ""
  SPR_morocco_expedition.2.a: "Это вне нашего контроля..." #NT!
- SPR_morocco_expedition.2.b: "Слово султана – закон, они прекратят!" #NT!
+ SPR_morocco_expedition.2.b: "Слово султана – закон, они прекратятся!" #NT!
   
- SPR_morocco_expedition.3.t: "Марокканские племена снова совершили набег!" #NT!
+ SPR_morocco_expedition.3.t: "Марокканские племена снова совершают набег!" #NT!
  SPR_morocco_expedition.3.d: ""
- SPR_morocco_expedition.3.a: "Мы позаботимся о том, чтобы подобное не повторилось..." #NT!
+ SPR_morocco_expedition.3.a: "Мы сделаем так, чтобы это не повторилось..." #NT!
   
  SPR_morocco_expedition.4.t: "Испания готовится к войне!" #NT!
  SPR_morocco_expedition.4.d: ""
- SPR_morocco_expedition.4.a: "Будем надеяться, что они передумают..." #NT!
- SPR_morocco_expedition.4.b: "Объявите войну, прежде чем они подготовятся!" #NT!
+ SPR_morocco_expedition.4.a: "Будем надеяться, что они изменят свое мнение..." #NT!
+ SPR_morocco_expedition.4.b: "Объявите войну, пока они не подготовились!" #NT!
   
  SPR_morocco_expedition.5.t: "Местные племена совершают набег на Испанию!" #NT!
  SPR_morocco_expedition.5.d: ""
@@ -49,57 +49,57 @@
   
  SPR_morocco_expedition.6.t: "Испания объявляет войну!" #NT!
  SPR_morocco_expedition.6.d: ""
- SPR_morocco_expedition.6.a: "Готовьтесь! На войну!" #NT!
+ SPR_morocco_expedition.6.a: "Готовимся! К войне!" #NT!
   
  SPR_morocco_expedition.7.t: "Марокко объявляет войну!" #NT!
  SPR_morocco_expedition.7.d: ""
  SPR_morocco_expedition.7.a: "Что?!" #NT!
   
- SPR_morocco_expedition.8.t: "Испания занимает [290.GetName]!" #NT!
+ SPR_morocco_expedition.8.t: "Испания берет [290.GetName]!" #NT!
  SPR_morocco_expedition.8.d: ""
  SPR_morocco_expedition.8.a: "Все кончено!" #NT!
- SPR_morocco_expedition.8.b: "Продолжать бороться!" #NT!
+ SPR_morocco_expedition.8.b: "Продолжайте бороться!" #NT!
   
- SPR_morocco_expedition.9.t: "Марокко продолжает сражаться!" #NT!
+ SPR_morocco_expedition.9.t: "Марокко продолжает бороться!" #NT!
  SPR_morocco_expedition.9.d: ""
  SPR_morocco_expedition.9.a: "Вперед в Касабланку!" #NT!
   
- SPR_morocco_expedition.10.t: "Испания захватывает Касабланку!" #NT!
+ SPR_morocco_expedition.10.t: "Испания берет Касабланку!" #NT!
  SPR_morocco_expedition.10.d: ""
- SPR_morocco_expedition.10.a: "Это действительно конец!" #NT!
+ SPR_morocco_expedition.10.a: "Все действительно кончено!" #NT!
   
  SPR_morocco_expedition.11.t: "Марокко сдается!" #NT!
  SPR_morocco_expedition.11.d: ""
  SPR_morocco_expedition.11.a: "Теперь о переговорах..." #NT!
   
- SPR_morocco_expedition.12.t: "Устали от войны!" #NT!
+ SPR_morocco_expedition.12.t: "Измученные войной!" #NT!
  SPR_morocco_expedition.12.d: ""
- SPR_morocco_expedition.12.a: "У нас нет другого выбора, кроме как Уайтпис..." #NT!
+ SPR_morocco_expedition.12.a: "У нас нет выбора, кроме как белый мир..." #NT!
   
- SPR_morocco_expedition.13.t: "Марокко имеет [1029.GetName] и [1030.GetName]!" #NT!
+ SPR_morocco_expedition.13.t: "Марокко держит [1029.GetName] и [1030.GetName]!" #NT!
  SPR_morocco_expedition.13.d: ""
- SPR_morocco_expedition.13.a: "У нас нет другого выбора, кроме как вести переговоры..." #NT!
+ SPR_morocco_expedition.13.a: "У нас нет выбора, кроме как вести переговоры..." #NT!
   
- SPR_morocco_expedition.14.t: "Марокко имеет [1029.GetName] и [1030.GetName]!" #NT!
+ SPR_morocco_expedition.14.t: "Марокко держит [1029.GetName] и [1030.GetName]!" #NT!
  SPR_morocco_expedition.14.d: ""
  SPR_morocco_expedition.14.a: "Теперь о переговорах..." #NT!
   
- SPR_morocco_expedition.15.t: "Марокко соглашается с требованиями!" #NT!
+ SPR_morocco_expedition.15.t: "Марокко соглашается на требования!" #NT!
  SPR_morocco_expedition.15.d: ""
- SPR_morocco_expedition.15.a: "А теперь фиеста!" #NT!
+ SPR_morocco_expedition.15.a: "А теперь — праздник!" #NT!
   
  SPR_morocco_expedition.16.t: "Требования Испании!" #NT!
  SPR_morocco_expedition.16.d: ""
  SPR_morocco_expedition.16.a: "Это нас погубило!" #NT!
   
- SPR_morocco_expedition.17.t: "Торговые требования прессы к Марокко?" #NT!
+ SPR_morocco_expedition.17.t: "Пресс-Торговые требования к Марокко?" #NT!
  SPR_morocco_expedition.17.d: ""
- SPR_morocco_expedition.17.a: "Они не имеют права отказать." #NT!
- SPR_morocco_expedition.17.b: "Мы уже получили достаточно выплат..." #NT!
+ SPR_morocco_expedition.17.a: "Они не в состоянии отказаться." #NT!
+ SPR_morocco_expedition.17.b: "Мы уже получили достаточно платежей..." #NT!
   
  SPR_morocco_expedition.18.t: "Испания выдвигает торговые требования!" #NT!
  SPR_morocco_expedition.18.d: ""
- SPR_morocco_expedition.18.a: "Мы не имеем права отказать..." #NT!
+ SPR_morocco_expedition.18.a: "Мы не в том положении, чтобы отказывать..." #NT!
   
  SPR_morocco_expedition.19.t: "Марокко принимает торговые требования!" #NT!
  SPR_morocco_expedition.19.d: ""
@@ -107,5 +107,5 @@
   
  SPR_morocco_expedition.20.t: "Испания полна решимости остановить рейдеров" #NT!
  SPR_morocco_expedition.20.d: ""
- SPR_morocco_expedition.20.a: "Мы можем позволить Испании научить Марокко некоторым манерам." #NT!
+ SPR_morocco_expedition.20.a: "Мы можем позволить Испании научить Марокко хорошим манерам." #NT!
   
