--- a/toi/localisation/russian/foreign_influence_l_russian.yml
+++ b/toi/localisation/russian/foreign_influence_l_russian.yml
@@ -6,66 +6,66 @@
   
   ### GENERIC LOCALISATION ### 
  eoanb_category_foreign_influence_actions: "Действия иностранного влияния" #NT!
- eoanb_category_foreign_influence_actions_desc: "Существует 2 вида §GInfluence§!. §YMinor§! и §YMajor§! Влияние.\n§YMinor§! влияние длится один год, и после §C180§ ему может противостоять другая нация! дней.\n§YMajor§! Влияние длится 2 года, и после §C365§ ему может противостоять другая нация! дней.\nЗа каждый уровень влияния вы платите §R0.1§! §YЗаконодательная власть§!, и вы получаете §YMinor§0_9 §YПотребительские товары§!.\n\nЕсли у другой §YВеликой державы§! есть §YMinor§! влияние на §YЦелевую страну§!, то вы заплатите §YMinor§8_9 дополнительных законодательных полномочий, чтобы получить влияние для себя.\nЕсли другая §YВеликая держава§! имеет §YMajor§! влияние на §YЦелевую страну§!, то вы заплатите §YMajor§4_9 дополнительных законодательных полномочий, и обе страны получат §YMinor§! влияние на §YЦелевую страну§!.\n\nЗахват §GInfluence§! другой §YВеликой Державы§!, §YMinor§1_9 будет §YMinor§2_9 между вашими Нациями.\n§YMinor§3Пока решение активно, ваше влияние не может быть перенято другой Великой Державой.§!" #NT!
+ eoanb_category_foreign_influence_actions_desc: "Существует 2 вида §GInfluence§!. §YMinor§! и §YMajor§! влияния.\n§YMinor§! влияние длится один год и может быть отменено другой страной через §C180§! дня.\n§YMajor§! влияние длится 2 года и может быть отменено другой страной через §C365§! дня.\nЗа каждый уровень влияния вы платите §R0.1§! §Yзаконодательную власть§! и получаете §G-2.5%§! §Yпотребительские товары§!.\n\nЕсли у другой §Yвеликой державы§! есть §YMinor§! влияние на §YЦелевую страну§!, то вы заплатите §R+25§! дополнительных законодательных полномочий, чтобы получить влияние для себя.\nЕсли другая §YВеликая держава§! имеет §YMajor§! влияние на §YЦелевую страну§!, то вы заплатите §R+50§! дополнительных законодательных полномочий, и обе страны получат §YMinor§! влияние на §YЦелевую страну§!.\n\nПринятие §GInfluence§! другой §YВеликой державы§! §Rухудшит§! §GОтношения§! между вашими странами.\n§YMinor§3Пока решение активно, ваше влияние не может быть отобрано другой Великой державой.§!" #NT!
   
   ### Decisions 
- Minor_Influence: "Незначительное влияние [FROM.GetAdjective] \nЗаинтересованные стороны: [GetNationFlagsInfluencingCountry]" #NT!
+ Minor_Influence: "Незначительное [FROM.GetAdjective] Влияние \nЗаинтересованные стороны: [GetNationFlagsInfluencingCountry]" #NT!
  Minor_Influence_desc: "Соревнуйтесь за влияние в целевой стране." #NT!
- Major_Influence: "Основное [FROM.GetAdjective] Влияние" #NT!
- Major_Influence_desc: "Соревнуйтесь за значительное влияние на целевую страну." #NT!
- no_foreign_influence_country: "Никакой другой §YВеликой державы§!" #NT!
+ Major_Influence: "Главное [FROM.GetAdjective] Влияние" #NT!
+ Major_Influence_desc: "Соревнуйтесь за значительное влияние в целевой стране." #NT!
+ no_foreign_influence_country: "Никакая другая §YВеликая держава§!" #NT!
   
   
   ### Custom effect tooltips ### 
  custom_tt_influence_generic_country: "§Y[GetNationInfluencingCountry]§! в настоящее время влияет на §Y[FROM.GetFlag][FROM.GetName]§!.\n\n" #NT!
  custom_tt_generic_influence_availability_major: "Чтобы получить это решение, вы должны иметь незначительное влияние на §Y[FROM.GetFlag][FROM.GetName]§!." #NT!
   
- target_is_not_great_power: "§Y[FROM.GetFlag][FROM.GetName]§! не является великой державой." #NT!
- Great_Power_influence_over_country: "Нет §YMinor/Major§! влияние других §YВеликих держав§! на §Y[FROM.GetFlag][FROM.GetName]§! в течение менее §C180/365§_2 дней.\n§YOR§!\nНи одна §YВеликая держава§! не имеет влияния на §Y[FROM .GetFlag][FROM.GetName]§!.\n§YOR§!\nДве §YВеликие Державы§! не имеют §YМладшего§! влияния на §Y[FROM.GetFlag][FROM.GetName]§! на в то же время.\n§YOR§!\nНе §YОсновное§! Влияние на §Y[FROM.GetFlag][FROM.GetName]§!." #NT!
- target_is_not_influenced_by_this: "§Y[THIS.GetFlag][THIS.GetName]§! не имеет §YMinor§! влияние на §Y[FROM.GetFlag][FROM.GetName]§!\n§YOR§!\n§Y[THIS.GetFlag][THIS.GetName]§! не имеет §YMinor§! влияние на §Y[FROM.GetFlag][FROM.GetName]§! менее чем за §C180§! дни." #NT!
+ target_is_not_great_power: "§Y[FROM.GetFlag][FROM.GetName]§! не является Великой Державой." #NT!
+ Great_Power_influence_over_country: "Нет §YMinor/Major§! влияния от других §YВеликих держав§! на §Y[FROM.GetFlag][FROM.GetName]§! менее §C180/365§! дней.\n§YИЛИ§!\nНи одна §YВеликая держава§! не имеет влияния на §Y[FROM.GetFlag][FROM.GetName]§!.\n§YИЛИ§!\nДве §YВеликие державы§! не имеют §YНезначительного§! влияния на §Y[FROM.GetFlag][FROM.GetName]§! одновременно.\n§YИЛИ§!\nНе §YОсновное§! Влияние на §Y[FROM.GetFlag][FROM.GetName]§!." #NT!
+ target_is_not_influenced_by_this: "§Y[THIS.GetFlag][THIS.GetName]§! не имеет §YMinor§! влияния на §Y[FROM.GetFlag][FROM.GetName]§!\n§YOR§!\n§Y[THIS.GetFlag][THIS.GetName]§! не имеет §YMinor§! влияния на §Y[FROM.GetFlag][FROM.GetName]§! менее §C180§! дней." #NT!
   
- root_has_minor_influence_over_target: "§Y[THIS.GetFlag][THIS.GetName]§! имеет §YMinor/Major§! влияние на §Y[FROM.GetFlag][FROM.GetName]§! более §C180/365§! дни." #NT!
- foreign_influence_cost_based_on_distance: "§CДипломатические сборы§! на основании §Gdistance§_1:" #NT!
- take_over_cost: "§CЗатраты на поглощение:§!" #NT!
+ root_has_minor_influence_over_target: "§Y[THIS.GetFlag][THIS.GetName]§! имеет §YMinor/Major§! влияние на §Y[FROM.GetFlag][FROM.GetName]§! более §C180/365§! дней." #NT!
+ foreign_influence_cost_based_on_distance: "§CДипломатические сборы§! в зависимости от §Gрасстояния§!:" #NT!
+ take_over_cost: "§CРасходы на сдачу в эксплуатацию:§!" #NT!
   
   ### Ideas ### 
- idea_minor_external_influence: "Незначительное влияние [?influenced_by.GetFlag][?influenced_by.GetAdjective]" #NT!
- idea_major_external_influence: "Основное влияние [?influenced_by.GetFlag][?influenced_by.GetAdjective]" #NT!
- idea_shared_external_influence: "Конкурирующие [?influenced_by.GetFlag][?influenced_by.GetAdjective] и [?influenced_by2.GetFlag][?influenced_by2.GetAdjective] Иностранное влияние" #NT!
+ idea_minor_external_influence: "Незначительное [?influenced_by.GetFlag][?influenced_by.GetAdjective] влияние" #NT!
+ idea_major_external_influence: "Основное [?influenced_by.GetFlag][?influenced_by.GetAdjective] влияние" #NT!
+ idea_shared_external_influence: "Конкуренция [?influenced_by.GetFlag][?influenced_by.GetAdjective] и [?influenced_by2.GetFlag][?influenced_by2.GetAdjective] Иностранное влияние" #NT!
   
   ### Dynamic Modifiers 
  dynmod_foreign_influence: "Эффекты иностранного влияния" #NT!
   
- idea_centrism_drift: "Под влиянием дрейфа центризма" #NT!
- idea_traditional_conservatism_drift: "Повлиял на дрейф традиционного консерватизма" #NT!
- idea_autocracy_drift: "Под влиянием дрейфа автократии" #NT!
- idea_collectivist_socialism_drift: "Повлиял на дрейф коллективистского социализма" #NT!
+ idea_centrism_drift: "Дрейф центризма под влиянием" #NT!
+ idea_traditional_conservatism_drift: "Влияние традиционного консерватизма" #NT!
+ idea_autocracy_drift: "Влияние дрейфа автократии" #NT!
+ idea_collectivist_socialism_drift: "Влияние коллективистского социализма на дрейф" #NT!
  idea_social_egalitarianism_drift: "Влияние социального эгалитаризма на дрейф" #NT!
   
   ###Events 
  foreign_influence.1.t: "[From.GetFlag][FROM.GetAdjective] Влияние" #NT!
- foreign_influence.1.d: "Сегодня в нашу страну прибыли несколько иностранных [FROM.GetFlag][FROM.GetAdjective] дипломатов. Похоже, что [FROM.GetName] пытается установить прочные связи с нашей страной." #NT!
- foreign_influence.1.a: "Замечательно! Они нужны нам." #NT!
+ foreign_influence.1.d: "Сегодня в нашу страну прибыли несколько иностранных дипломатов [FROM.GetFlag][FROM.GetAdjective]. Похоже, что [FROM.GetName] пытается установить прочные связи с нашей страной." #NT!
+ foreign_influence.1.a: "Это здорово! Они нам нужны." #NT!
  foreign_influence.1.b: "О, нет!" #NT!
   
  foreign_influence.2.t: "[FROM.FROM.GetFlag][FROM.FROM.GetAdjective] Влияние потеряно" #NT!
- foreign_influence.2.d: "Сегодня наш посол в [FROM.FROM.GetFlag][FROM.FROM.GetName] был оклеветан несколькими слухами, распространенными дипломатами [FROM.GetFlag][FROM.GetAdjective]. Как нам следует реагировать на это?" #NT!
- foreign_influence.2.a: "Ох, ну, бывает." #NT!
- foreign_influence.2.b: "Со временем они заплатят за это..." #NT!
+ foreign_influence.2.d: "Сегодня наш посол в [FROM.FROM.GetFlag][FROM.FROM.GetName] был оклеветан несколькими слухами, распространенными дипломатами [FROM.GetFlag][FROM.GetAdjective]. Как нам следует на это реагировать?" #NT!
+ foreign_influence.2.a: "Ну что ж, такое случается." #NT!
+ foreign_influence.2.b: "Со временем они за это заплатят..." #NT!
   
- foreign_influence.3.t: "Конфликт с крупным иностранным влиянием" #NT!
- foreign_influence.3.d: "[FROM.GetFlag][FROM.GetName] перенял наше влияние на [FROM.FROM.GetFlag][FROM.FROM.GetName]. Как нам следует реагировать на это?" #NT!
+ foreign_influence.3.t: "Конкуренция за значительное иностранное влияние" #NT!
+ foreign_influence.3.d: "[FROM.GetFlag][FROM.GetName] перенял наше влияние на [FROM.FROM.GetFlag][FROM.FROM.GetName]. Как нам на это реагировать?" #NT!
  foreign_influence.3.a: "Нет! [FROM.FROM.GetFlag][FROM.FROM.GetName] наш." #NT!
- foreign_influence.3.b: "Со временем они заплатят за это..." #NT!
+ foreign_influence.3.b: "Со временем они за это заплатят..." #NT!
   
  foreign_influence.4.t: "Опасные уровни влияния [FROM.GetFlag][FROM.GetAdjective]" #NT!
- foreign_influence.4.d: "Дипломаты [FROM.GetFlag][FROM.GetAdjective] имеют опасный уровень влияния по вопросам [THIS.GetFlag][THIS.GetAdjective]! Мы должны остановить их!" #NT!
+ foreign_influence.4.d: "[FROM.GetFlag][FROM.GetAdjective] дипломаты имеют опасный уровень влияния на [THIS.GetFlag][THIS.GetAdjective] вопросы! Мы должны остановить их!" #NT!
  foreign_influence.4.a: "Суверенитет нашей страны в опасности!" #NT!
  foreign_influence.4.b: "Мы ничего не можем сделать." #NT!
   
  foreign_influence.5.t: "Множественное внешнее влияние" #NT!
  foreign_influence.5.d: "Несколько иностранных дипломатов из [?influenced_by.GetFlag][?influenced_by.GetName] и [?infuenced_by2.GetFlag][?influenced_by2.GetName] соревнуются за влияние нашей страны!" #NT!
- foreign_influence.5.a: "Пусть они сражаются!" #NT!
+ foreign_influence.5.a: "Пусть дерутся!" #NT!
   
  foreign_influence_test: "[eoanb_foreign_influence_array_test]" #NT!
   
