--- a/toi/localisation/russian/global_news_flavor_l_russian.yml
+++ b/toi/localisation/russian/global_news_flavor_l_russian.yml
@@ -1,17 +1,17 @@
 ﻿l_russian:
  worldnewsfl.11.t: "Трансатлантический телеграф" #NT!
- worldnewsfl.11.d: "Последние новости из Европы и Америки! После нескольких лет, казалось бы, бесплодных попыток, начиная с 1857 года, сегодня г-ну Чарльзу Т. Брайту и его экспедиционной группе инженеров и механиков компании Atlantic Telegraph удалось успешно проложить телеграфный кабель по морскому дну Атлантического океана!\n\nБлагодаря финансированию Как от британского, так и от американского правительств, кабель был проложен с использованием списанных военных кораблей HMS Agamemnon и USS Niagara и простирается от острова Валентия в Ирландии до Сердца в Ньюфаундленде.\n\nЛиния была открыта после обмена поздравлениями между королевой Викторией и президентом США Джеймсом Бьюкененом. . Линия связывает мир еще теснее, позволяя отправлять сообщения за считанные минуты, а не дни, когда слово доставляется на корабле." #NT!
+ worldnewsfl.11.d: "Срочные новости из Европы и Америки! После многих лет, казалось бы, бесплодных попыток с 1857 года, сегодня г-н Чарльз Т. Брайт и его экспедиционная группа инженеров и механиков Atlantic Telegraph Company успешно проложили телеграфный кабель по дну Атлантического океана!\n\nИспользуя финансирование от британского и американского правительств, кабель был проложен с использованием списанных военных кораблей HMS Agamemnon и USS Niagara и протянулся от острова Валентия в Ирландии до Хартс-Контента в Ньюфаундленде.\n\nЛиния была открыта поздравлениями, которыми обменялись королева Виктория и президент США Джеймс Бьюкенен. Линия связывает мир еще теснее, отправляя сообщения за считанные минуты вместо дней, когда новости передавались на корабле." #NT!
  worldnewsfl.11.a: "Впечатляющий подвиг!" #NT!
- worldnewsfl.11.b: "Поздравления из-за Пруда!" #NT!
+ worldnewsfl.11.b: "Поздравления из-за пруда!" #NT!
  worldnewsfl.11.c: "Мы слышим тебя, Европа!" #NT!
   ## 
  worldnewsfl.12.t: "Открытие солнечных вспышек" #NT!
- worldnewsfl.12.d: "Открытия из-за пределов небес!\n\nБританские астрономы Ричард К. Кэррингтон и Ричард Ходжсон сообщили о странной активности среди звезд, исследуя мощные геомагнитные колебания в электромагнитном поле Земли. Их наблюдения привели их к выводу, что эти колебания исходят от нашего Солнца, и назвали их «солнечными вспышками»; волны, которые, как предполагается, возникают во время колебаний вдоль поверхности Солнца.\n\nАстрономические сообщества в Европе и во всем мире смотрят на это открытие с волнением, поскольку была открыта еще одна часть знаний, позволяющая понять нашу Вселенную." #NT!
+ worldnewsfl.12.d: "Открытия из-за пределов небес!\n\nБританские астрономы Ричард К. Каррингтон и Ричард Ходжсон сообщили о странной активности среди звезд, исследуя мощные геомагнитные колебания в электромагнитном поле Земли. Их наблюдения привели их к выводу, что эти колебания исходят от нашего Солнца, назвав их «солнечными вспышками»; волны, которые, как предполагается, возникают во время колебаний вдоль поверхности Солнца.\n\nАстрономические сообщества в Европе и во всем мире с волнением наблюдают за открытием, поскольку было обнаружено еще одно знание для понимания нашей Вселенной." #NT!
  worldnewsfl.12.a: "Очаровательный!" #NT!
  worldnewsfl.12.b: "Передайте наши поздравления!" #NT!
   ## 
  worldnewsfl.21.t: "Велосипеды, велосипеды, велосипеды!" #NT!
- worldnewsfl.21.d: "Запад поразила новая лихорадка, и вылечить ее можно только с помощью велосипеда!\n\nВновь обретенный интерес к велосипедам распространился как лесной пожар среди жителей Европы и Америки, ознаменовав рекордно высокий рейтинг популярности этого транспортного средства. Популярность была связана с умными проектами братьев Оливье в Париже, которые предоставили гонщикам лучшую платформу для скорости по улицам.\n\nКак бы то ни было, людей предупреждали, когда они бродили по дорогам, поскольку популярность стала свидетелем роста популярности. рост числа аварий, связанных со столкновениями велосипедов." #NT!
+ worldnewsfl.21.d: "Новая лихорадка поразила Запад, и ее лечит только велосипед!\n\nВновь обретенный интерес к велосипеду распространился как лесной пожар среди людей Европы и Америки, отметив рекордно высокий рейтинг популярности этого транспортного средства. Популярность была связана с умными проектами братьев Оливье в Париже, которые давали велосипедистам лучшую платформу для скоростного передвижения по улицам.\n\nКак бы то ни было, люди были предупреждены, когда бродили по дорогам, поскольку популярность привела к росту числа несчастных случаев, связанных со столкновениями с велосипедами." #NT!
  worldnewsfl.21.a: "Великолепно!" #NT!
  worldnewsfl.21.b: "Осторожно!" #NT!
   ## 
@@ -23,26 +23,26 @@
  #worldnewsfl.31.d: ""
  #worldnewsfl.31.a: ""
   ## 
- worldnewsfl.41.t: "1883 г. Извержение Кракатау." #NT!
- worldnewsfl.41.d: "Ужасные новости из Индонезии! Буквально сегодня на вулканическом острове Кракатау произошло мощное извержение невиданных ранее масштабов!\n\nАктивность вокруг острова в предыдущие годы, хотя и была интенсивной, не предполагала событий, разворачивающихся сейчас. Барометры по всему миру смогли семь раз зафиксировать ударные волны, проходившие по земной поверхности, что является свидетельством силы взрыва. По сообщениям из региона, извержение было слышно даже в Перте, Австралия, а барабанные перепонки моряков лопнули на расстоянии 63 км от места взрыва.\n\nИзвержение вулкана оказалось смертельным для несчастных жителей Себеси. был утоплен набежавшей волной. Власти все еще находят и подсчитывают тела, и, по оценкам, число жертв составляет 20 000–30 000 человек." #NT!
- worldnewsfl.41.a: "Святой ад!?" #NT!
+ worldnewsfl.41.t: "Извержение Кракатау 1883 г." #NT!
+ worldnewsfl.41.d: "Ужасные новости из Индонезии! Только сегодня на вулканическом острове Кракатау произошло мощное извержение невиданных ранее масштабов!\n\nАктивность вокруг острова в предыдущие годы, хотя и интенсивная, не указывала на события, которые разворачиваются сейчас. Барометры по всему миру смогли зафиксировать ударные волны семь раз, пока они проходили по поверхности земли, что свидетельствует о мощности взрыва. Сообщения из региона свидетельствуют о том, что извержение было слышно даже в Перте, Австралия, и у моряков разорвались барабанные перепонки на расстоянии 63 км от места взрыва.\n\nИзвержение вулкана оказалось смертельным для несчастных жителей Себеси, которые утонули в последовавшей волне. Власти все еще находят и подсчитывают тела, и сообщается о приблизительно 20000 - 30000 жертв." #NT!
+ worldnewsfl.41.a: "Господи!?" #NT!
  worldnewsfl.41.b: "Свидетельство силы природы..." #NT!
- worldnewsfl.41.c: "Организуйте ответ прямо сейчас!" #NT!
+ worldnewsfl.41.c: "Организуйте ответ сейчас!" #NT!
   ## 
  #worldnewsfl.51.t: ""
  #worldnewsfl.51.d: ""
  #worldnewsfl.51.a: ""
   ## 
  worldnewsfl.61.t: "Тунгусский взрыв" #NT!
- worldnewsfl.61.d: "Сообщается о сильном взрыве в глухих сибирских лесах России!\n\nНесколько дней назад холодные сибирские ветры неожиданно превратились в тлеющий огонь во вспышке над тайгой Тунгуски. В странных рассказах очевидцев, видевших это событие, говорится, что взрыв был вызван массивным объектом, упавшим с неба на головокружительной скорости, причем свет был настолько сильным, что затмил солнце, сгоревшее во время полета. Сообщается, что в результате последовавшего столкновения с Тунгусской тайгой была уничтожена территория площадью 2150 квадратных километров и, по оценкам, 80 миллионов деревьев. Несмотря на огромную мощность взрыва, ни одного ударного кратера или следов удара обнаружено не было.\n\nХотя это событие на данный момент унесло только три жизни, оно повысило осведомленность о вопросе защиты от метеоритов во всем мире и начинают приниматься меры предосторожности." #NT!
+ worldnewsfl.61.d: "Сообщается о сильном взрыве в бесплодных сибирских лесах России!\n\nНесколько дней назад холодные ветры Сибири неожиданно превратились в тлеющий огонь над тайгой Тунгуски. Странные свидетельства очевидцев из числа местных жителей, которые видели это событие, утверждают, что взрыв был вызван падением с неба массивного объекта на головокружительной скорости, с таким сильным светом, что он затмил солнце, когда он сгорел в полете. Последующее столкновение с тайгой Тунгуски, как сообщается, сравняло с землей территорию площадью 2150 квадратных километров и повалило около 80 миллионов деревьев. Несмотря на огромную мощность взрыва, не было обнаружено ни кратера от удара, ни следов удара.\n\nХотя это событие пока унесло жизни только 3 человек, оно повысило осведомленность о вопросе защиты от метеоритов во всем мире, и меры предосторожности начинают приниматься." #NT!
  worldnewsfl.61.a: "Бог бросает в нас камни!" #NT!
  worldnewsfl.61.b: "Нам нужно подготовиться!" #NT!
   ## 
  worldnewsfl.62.t: "Нобелевский фонд" #NT!
- worldnewsfl.62.d: "По воле бывшего промышленного магната сэра Альфреда Нобеля был создан фонд для управления и систематизации фондов для премий людям, которые «внесли наибольший вклад в развитие человечества». Сэр Альфред Нобель заработал состояние на сталелитейной и оружейной промышленности вместе со своей компанией Bofors, и его завещание, прочитанное и подтвержденное в 1896 году, о создании этого фонда стало большим потрясением как для его близких родственников, так и для его бывших соратников по всему миру. .\n\nФонду, которым управляют г-н Рагнар Зольман и г-н Рудольф Лильенквист, поручено создавать, рассматривать и награждать кандидатов (называемых лауреатами) одной из пяти возможных «Нобелевских премий» в различных областях науки.\n\nПризы можно получить в области медицины, физики, химии, физиологии и литературы. Также была добавлена ​​специальная премия за усилия по поддержанию мира." #NT!
- worldnewsfl.62.a: "Человеческий прогресс будет вознагражден!" #NT!
- worldnewsfl.62.b: "Достойное старание!" #NT!
+ worldnewsfl.62.d: "Следуя воле бывшего промышленного магната сэра Альфреда Нобеля, был создан фонд для управления и систематизации фондов для премий людям, которые «внесли наибольший вклад в развитие человечества». Сэр Альфред Нобель заработал свое состояние в сталелитейной и оружейной промышленности со своей компанией Bofors, и его завещание, зачитанное и подтвержденное в 1896 году, о создании этого фонда стало большим потрясением как для близких родственников, так и для его бывших коллег по всему миру.\n\nФонд, которым управляют г-н Рагнар Сольман и г-н Рудольф Лильенквист, занимается созданием, рассмотрением и награждением кандидатов (называемых лауреатами) одной из пяти возможных «Нобелевских премий» в различных областях науки.\n\nВозможные премии, которые можно получить, — в области медицины, физики, химии, физиологии и литературы. Также была добавлена ​​специальная премия за усилия по поддержанию мира." #NT!
+ worldnewsfl.62.a: "Прогресс человечества будет вознагражден!" #NT!
+ worldnewsfl.62.b: "Достойное достижение!" #NT!
   
- worldnewsfl.63.t: "Первый полет выше воздуха" #NT!
- worldnewsfl.63.d: "Первый пилотируемый самолет пролетел сегодня над ландшафтами [From.GetName]. самолет, не более чем двигатель, привязанный к дереву и брезенту, уже некоторое время разрабатывается [From.GetFlightInvertorsName]" #NT!
- worldnewsfl.63.a: "В небо" #NT!
+ worldnewsfl.63.t: "Первый полет на аппарате тяжелее воздуха" #NT!
+ worldnewsfl.63.d: "Первый пилотируемый самолет пролетел сегодня над ландшафтами [From.GetName]. Самолет, представляющий собой не более чем двигатель, прикрепленный к дереву и брезенту, уже некоторое время находится в разработке [From.GetFlightInvertorsName]" #NT!
+ worldnewsfl.63.a: "В небеса" #NT!
