--- a/toi/localisation/russian/haiti_l_russian.yml
+++ b/toi/localisation/russian/haiti_l_russian.yml
@@ -1,44 +1,44 @@
 ﻿l_russian:
   
- haiti_coup.1.t: "Растущая популярность Фабра Жефрара" #NT!
- haiti_coup.1.desc: "В 1849 году Сулук стал императором Фостином I и назначил Жефрара командовать дивизией армии во время первой войны против Санто-Доминго (Доминиканская Республика), в которой Фабр Жефрар получил известность благодаря своей победе при Ла-Табарре. Во время второй войны против Санто-Доминго, которая произошла в прошлом году, генерал Жефрар несколько раз отличился. Особенно за умелое управление артиллерией в Банико. Таким образом, за свои военные успехи он был назван герцогом Табаррским.\n\nНапротив, популярность императора Фостена-Эли Сулука в последние годы сильно упала. Его популярность упала, когда он и его 30-тысячная армия двинулись в Санто-Доминго на вторую доминиканскую войну, и после первого выстрела он в страхе бежал. Жители [ROOT.GetName] сейчас, более чем когда-либо, видят в Джеффраре возможного преемника императора Фостена Сулука.\n\nВ отчаянной попытке избежать замены, Фаустин разработал план по аресту Джеффрара до того, как эта популярная идея получит распространение. Хотя, возможно, удастся убедить Фаустина не реализовывать план. Остается только один вопрос: посоветуем ли мы Фостину следовать плану или нет?" #NT!
- haiti_coup.1.a: "Разрешить императору Фаустину арестовать Джеффрара." #NT!
- haiti_coup.1.b: "Посоветуйте императору Фостину не арестовывать Джеффрара." #NT!
+ haiti_coup.1.t: "Растущая популярность Фабра Жеффрара" #NT!
+ haiti_coup.1.desc: "В 1849 году Сулук стал императором Фостином I и назначил Жеффрара командовать дивизией армии во время первой войны против Санто-Доминго (Доминиканская Республика), в которой Фабр Жеффрар прославился своей победой при Ла-Табарре. Во время второй войны против Санто-Доминго, которая произошла в прошлом году, генерал Жеффрар отличился несколько раз. В частности, за его умелое руководство артиллерией в Банико. Таким образом, за его военные успехи он был назван герцогом Табаррским.\n\nНапротив, популярность императора Фостина-Эли Сулука резко упала в последние годы. Его популярность упала, когда он и его армия в 30 000 человек вошли в Санто-Доминго для второй Доминиканской войны, и после первого выстрела он в страхе бежал. Жители [ROOT.GetName] сейчас, больше чем когда-либо, видят в Жеффраре возможного преемника императора Фостина Сулука.\n\nВ отчаянной попытке избежать замены Фостин осуществил план ареста Жеффрара до того, как эта популярная идея получит поддержку. Хотя, возможно, удастся убедить Фостина не осуществлять этот план. Остается только один вопрос: советовать ли нам Фостину продолжать реализацию плана или нет?" #NT!
+ haiti_coup.1.a: "Позвольте императору Фостину арестовать Жоффруа." #NT!
+ haiti_coup.1.b: "Посоветуйте императору Фостину не арестовывать Жеффрара." #NT!
   
   
- haiti_coup.2.t: "Переворот Джеффрара на трон!" #NT!
- haiti_coup.2.desc: "Как и предполагалось, популярность Фабра Жефрара оказалась настолько значительной, что часть военных поддержала его как преемника престола. В результате разразилась гражданская война за трон!" #NT!
- haiti_coup.2.a: "Поддержите переворот Джеффрара!" #NT!
- haiti_coup.2.b: "Встаньте на сторону императора Фостена!" #NT!
+ haiti_coup.2.t: "Переворот Джеффрарда ради трона!" #NT!
+ haiti_coup.2.desc: "Как и предсказывалось, популярность Фабра Жеффрара оказалась столь значительной, что часть военных поддержала его как наследника престола. В результате разразилась гражданская война за престол!" #NT!
+ haiti_coup.2.a: "Поддержите переворот Жеффрара!" #NT!
+ haiti_coup.2.b: "Встаньте на сторону императора Фостина!" #NT!
   
- haiti_coup.4.t: "Фабр Жефрар сбежал из-под ареста!" #NT!
- haiti_coup.4.desc: "По ходу ареста власти, лояльные Джеффрару, помогли ему сбежать до завершения ареста. Раскол в лояльности нашего правительства может оказаться пагубным, если Джеффрард когда-нибудь начнет переворот против императора Фаустина." #NT!
+ haiti_coup.4.t: "Фабр Жеффрард избежал ареста!" #NT!
+ haiti_coup.4.desc: "По мере того, как арест разворачивался, лояльные Жеффрару власти помогли ему сбежать до окончания ареста. Раскол лояльности нашего правительства мог бы оказаться губительным, если бы Жеффрард когда-нибудь начал переворот против императора Фостина." #NT!
  haiti_coup.4.a: "Я думаю, дни императора сочтены..." #NT!
   
- haiti_coup.5.t: "Республиканский переворот Джеффрара!" #NT!
- haiti_coup.5.desc: "Жефрару удалось убедить военных, в том числе капитана кавалерии Сильвена Сальнава, присоединиться к нему в перевороте против императора Фостена-Эли Сулука. Возможно, это последние дни Второй Империи Гаити..." #NT!
- haiti_coup.5.a: "Поддержите переворот Джеффрара!" #NT!
- haiti_coup.5.b: "Встаньте на сторону императора Фостена!" #NT!
+ haiti_coup.5.t: "Республиканский переворот Жеффрара!" #NT!
+ haiti_coup.5.desc: "Жеффрару удалось убедить военных, включая капитана кавалерии Сильвена Сальнава, присоединиться к нему в перевороте против императора Фостена-Эли Сулука. Это могут быть последние дни Второй империи Гаити..." #NT!
+ haiti_coup.5.a: "Поддержите переворот Жеффрара!" #NT!
+ haiti_coup.5.b: "Встаньте на сторону императора Фостина!" #NT!
   
- haiti_republic.2.t: "Побег Джеффрара!" #NT!
+ haiti_republic.2.t: "Побег Жеффрара!" #NT!
   
  haiti_republic.3.a: "Поддержите переворот Сагета!" #NT!
  haiti_republic.3.b: "Встаньте на сторону президента Сальнаве!" #NT!
   
   
  eonab_hai_the_1804_massacre: "Франция не простила Гаити резню ее народа" #NT!
- eonab_hai_french_slave_trade: "Народ Гаити не забудет, как с ним обошлась Франция." #NT!
+ eonab_hai_french_slave_trade: "Народ Гаити не забудет, как с ним обращалась Франция." #NT!
   
   ###Focuses 
  HAI_create_the_republic: "Создать Гаитянскую Республику" #NT!
- HAI_geffrard_escapes: "Побег Джеффрара" #NT!
+ HAI_geffrard_escapes: "Побег Жеффрара" #NT!
  HAI_sagets_republic: "Республика Сагета" #NT!
  HAI_treaty_with_the_dominicans: "Договоры с доминиканцами" #NT!
- HAI_michel_domingue_presidency: "Президентство Доминге" #NT!
- HAI_michel_domingue_resigns: "Мишель Доминг уходит в отставку" #NT!
+ HAI_michel_domingue_presidency: "Президентство Доминго" #NT!
+ HAI_michel_domingue_resigns: "Мишель Доминге уходит в отставку" #NT!
  HAI_develop_the_capital: "Сосредоточьтесь на столице" #NT!
- HAI_develop_the_rural_areas: "Фокус на сельскую местность" #NT!
- HAI_strenghten_the_empire: "Укрепить Империю" #NT!
+ HAI_develop_the_rural_areas: "Сосредоточение на сельской местности" #NT!
+ HAI_strenghten_the_empire: "Укрепляйте Империю" #NT!
  HAI_salnaves_empire: "Диктатура Сальнаве" #NT!
  HAI_salomon_presidency: "Президентство Саломона" #NT!
   
