--- a/toi/localisation/russian/hol_decisions_l_russian.yml
+++ b/toi/localisation/russian/hol_decisions_l_russian.yml
@@ -2,9 +2,9 @@
  HOL_land_reclaimation: "Польдеры и каналы" #NT!
  eoanb_decision_canals_noord_zuid_holland: "Рытье каналов в Северной и Зюйд-Голландии" #NT!
  eoanb_decision_canals_limburg_brabant_zeeuw: "Рыть каналы в Брабанте, Лимбурге и Зеувс-Флаандерене." #NT!
- eoanb_decision_canals_overijssel_ommelanden_friesland: "Рыть каналы в Оверэйсселе, Оммеландене и Фрисландии." #NT!
- eoanb_decision_canals_nieuwe_waterweg: "Выкопайте «Нью-Ватервег»" #NT!
+ eoanb_decision_canals_overijssel_ommelanden_friesland: "Рыть каналы в Оверэйселе, Оммеландене и Фрисландии." #NT!
+ eoanb_decision_canals_nieuwe_waterweg: "Копайте «Новый Водопровод»" #NT!
  eoanb_decision_canals_amsterdam_rijnkanaal: "Раскопайте «Амстердам-Рейнканал»" #NT!
- eoanb_decision_canals_noordzee_kanaal: "Раскопайте «Нордзее Канаал»" #NT!
- HOL_KNIL_general_exchange: "Одолжить генералов у КНИЛ" #NT!
- eoanb_decision_HOL_take_KNIL_general: "Одолжите генерала KNIL в нашей Ост-Индии." #NT!
+ eoanb_decision_canals_noordzee_kanaal: "Копайте «Нордзе Канал»" #NT!
+ HOL_KNIL_general_exchange: "Заимствуйте генералов из KNIL" #NT!
+ eoanb_decision_HOL_take_KNIL_general: "Заимствуем генерала KNIL из нашей Ост-Индии" #NT!
