--- a/toi/localisation/russian/hol_events_l_russian.yml
+++ b/toi/localisation/russian/hol_events_l_russian.yml
@@ -1,20 +1,20 @@
 ﻿l_russian:
  holland_oog.1.t: "Нидерланды в EoanB (пока)" #NT!
- holland_oog.1.d: "Привет ребята!! Спасибо, что попробовали Нидерланды в EoanB! Я jppeer123, последние пару недель работаю над Нидерландами, и на данный момент мы добились хорошего прогресса. В качестве краткого замечания я просто должен сказать, что Нидерланды еще не закончили, как и вообще, дерево фокусов еще не готово и не заполнено полностью, решения и события находятся в зачаточном состоянии, а Нидерланды в целом еще не готовы. для игры прямо сейчас, но если вы настаиваете на том, чтобы опробовать этот контент, вы можете продолжать играть! Спасибо за тестирование Нидерландов, и я надеюсь очень скоро получить отзывы о дискорде EoanB! Удачи ;П" #NT!
- HOL_took_general: "§Y[taken_by_hol.GetName]§! присоединится к §Yголландской армии§! на ограниченный период!" #NT!
+ holland_oog.1.d: "Привет, ребята!! Спасибо, что попробовали Нидерланды в EoanB! Я jppeer123, работаю над Нидерландами последние пару недель, и пока что мы добились хорошего прогресса. В качестве быстрого хедсапа я просто должен сказать, что Нидерланды еще не закончены, древо фокусов еще не готово и не заполнено полностью, решения и события находятся в зачаточном состоянии, и Нидерланды в целом не готовы к игре прямо сейчас, но если вы настаиваете на том, чтобы попробовать этот контент, вы можете продолжать и играть! Спасибо за тестирование Нидерландов, и я надеюсь получить некоторые отзывы на дискорде EoanB очень скоро! Удачи ;P" #NT!
+ HOL_took_general: "§Y[taken_by_hol.GetName]§! присоединится к §Yголландской армии§! ​​на ограниченный период!" #NT!
  holland_generals.5.t: "KNIL отправляет [taken_by_hol.GetName]" #NT!
- holland_generals.5.d: "Мы запросили [taken_by_hol.GetRank] из наших колоний в Ост-Индии, и KNIL ответил нам, отправив нам [taken_by_hol.GetRank] [taken_by_hol.GetName]. [taken_by_hol.GetHerHis] опыт ведения войны в тропических странах найдет широкое применение в нашей армии и в наших колониальных войнах в то время, когда он будет находиться под временной прямой голландской службой." #NT!
- holland_generals.5.a: "Добро пожаловать обратно на Родину" #NT!
- holland_oog.1.a: "ЕЩЕ ОДИН СТАРТАП??!" #NT!
- holland_generals.6.t: "[promotion_name.GetName] готов к повышению" #NT!
- holland_generals.6.d: "За свои выдающиеся действия в последнее время [promotion_name.GetName] получает звание генерала до фельдмаршала, и вскоре король вручит ему свои военные медали." #NT!
- holland_generals.6.a: "Хози!" #NT!
- holland_generals.4.t: "Нидерланды запрашивают генерального" #NT!
- holland_generals.4.d: "Наша родина [netherlands_name.GetNameDef] запрашивает колониального генерала из нашего знаменитого Koninklijk Nederlandsch-Indisch Leger (KNIL), поэтому мы должны подчиниться нашему Отечеству и послать одного из наших армейских лидеров на службу в голландскую армию на ограниченный период в 180 дней. Тем временем мы надеемся, что он многому научится из своего опыта службы в Королевской голландской армии и что мы сможем использовать эти знания для укрепления нашей власти в Ост-Индии." #NT!
- holland_generals.4.a: "Идите!" #NT!
+ holland_generals.5.d: "Мы запросили [taken_by_hol.GetRank] из наших колоний в Ост-Индии, и KNIL ответила, отправив нам [taken_by_hol.GetRank] [taken_by_hol.GetName]. [taken_by_hol.GetHerHis] опыт ведения тропической войны будет широко использован в нашей армии и наших колониальных войнах в то время, когда он будет временно находиться на прямой голландской службе." #NT!
+ holland_generals.5.a: "Добро пожаловать обратно на Родину!" #NT!
+ holland_oog.1.a: "ЕЩЕ ОДНО СТАРТАП-СОБЫТИЕ??!" #NT!
+ holland_generals.6.t: "[promotion_name.GetName] готовится к повышению" #NT!
+ holland_generals.6.d: "За выдающиеся достижения в последнее время [promotion_name.GetName] был повышен с звания генерала до фельдмаршала, и вскоре король наградит его военными медалями." #NT!
+ holland_generals.6.a: "Хузи!" #NT!
+ holland_generals.4.t: "Нидерланды запрашивают общее" #NT!
+ holland_generals.4.d: "Наша родина [netherlands_name.GetNameDef] запрашивает колониального генерала из нашего прославленного Королевского нидерландско-индийского легиона (KNIL). В связи с этим мы должны подчиниться нашему Отечеству и направить одного из наших армейских лидеров для службы в голландской армии на ограниченный период в 180 дней. Тем временем мы надеемся, что он многому научится из своего опыта в Королевской голландской армии, и что мы сможем использовать эти знания для укрепления нашей власти в Ост-Индии." #NT!
+ holland_generals.4.a: "Пошли!" #NT!
  holland_generals.8.t: "[taken_name.GetName] возвращается" #NT!
- holland_generals.8.d: "После 180 дней службы в Королевской голландской армии [taken_name.GetRank] [taken_name.GetName] возвращается в Голландскую Ост-Индию, чтобы продолжить свою службу по поддержанию мира и расширению нашей власти в Юго-Восточной Азии." #NT!
- holland_generals.8.a: "Гёде Рейс!" #NT!
+ holland_generals.8.d: "После 180 дней службы в Королевской голландской армии [taken_name.GetRank] [taken_name.GetName] возвращается в Голландскую Ост-Индию, чтобы продолжить свою службу по поддержанию мира и расширению нашего влияния в Юго-Восточной Азии." #NT!
+ holland_generals.8.a: "Хорошо!" #NT!
  holland_generals.9.t: "[taken_name_2.GetName] вернулся!" #NT!
- holland_generals.9.d: "Наш гордый [taken_name_2.GetRank] [taken_name_2.GetName], которого выбрали для службы в нашей Отечественной армии на 180 дней, вернулся из континентальных Нидерландов и принес с собой много знаний и опыта. Опыт, который наверняка пригодится в предстоящих колониальных войнах." #NT!
- holland_generals.9.a: "Добро пожаловать теруг, солдат" #NT!
+ holland_generals.9.d: "Наш гордый [taken_name_2.GetRank] [taken_name_2.GetName], которого выбрали служить в армии нашего Отечества в течение 180 дней, вернулся из континентальных Нидерландов и привез с собой массу знаний и опыта. Опыт, который, безусловно, пригодится в грядущих колониальных войнах." #NT!
+ holland_generals.9.a: "Добро пожаловать, солдат!" #NT!
