--- a/toi/localisation/russian/iceland_ideas_l_russian.yml
+++ b/toi/localisation/russian/iceland_ideas_l_russian.yml
@@ -1,5 +1,5 @@
 ﻿l_russian:
- ICE_icelandic_imigration_to_canada0: "Исландская иммиграция в Канаду" #NT!
+ ICE_icelandic_imigration_to_canada0: "Иммиграция из Исландии в Канаду" #NT!
  ICE_icelandic_imigration_to_canada0_desc: ""
  ICE_idea_start_to_develop: "Национальное развитие" #NT!
  ICE_idea_start_to_develop_desc: ""
@@ -11,55 +11,55 @@
  ICE_search_materials_desc: ""
  ICE_trade_with_canada: "Торговля с Канадой" #NT!
  ICE_trade_with_canada_desc: ""
- ICE_trade_with_usa: "Торговля с США" #NT!
+ ICE_trade_with_usa: "Торговля с Соединенными Штатами" #NT!
  ICE_trade_with_usa_desc: ""
- ICE_trade_with_britain: "Торговля с Великобританией" #NT!
+ ICE_trade_with_britain: "Торговля с Британией" #NT!
  ICE_trade_with_britain_desc: ""
  ICE_trade_with_denmark: "Торговля с Данией" #NT!
  ICE_trade_with_denmark_desc: ""
  ICE_export_fish: "Экспорт рыбы" #NT!
  ICE_export_fish_desc: ""
- ICE_icelandic_imigration_to_canada1: "Исландская иммиграция в Канаду" #NT!
+ ICE_icelandic_imigration_to_canada1: "Иммиграция из Исландии в Канаду" #NT!
  ICE_icelandic_imigration_to_canada1_desc: ""
- ICE_icelandic_imigration_to_canada2: "Исландская иммиграция в Канаду" #NT!
+ ICE_icelandic_imigration_to_canada2: "Иммиграция из Исландии в Канаду" #NT!
  ICE_icelandic_imigration_to_canada2_desc: ""
- ICE_icelandic_imigration_to_canada3: "Исландская иммиграция в Канаду" #NT!
+ ICE_icelandic_imigration_to_canada3: "Иммиграция из Исландии в Канаду" #NT!
  ICE_icelandic_imigration_to_canada3_desc: ""
- ICE_icelandic_imigration_to_canada00: "Исландская иммиграция в Канаду" #NT!
+ ICE_icelandic_imigration_to_canada00: "Иммиграция из Исландии в Канаду" #NT!
  ICE_icelandic_imigration_to_canada00_desc: ""
- ICE_icelandic_imigration_to_canada11: "Исландская иммиграция в Канаду" #NT!
+ ICE_icelandic_imigration_to_canada11: "Иммиграция из Исландии в Канаду" #NT!
  ICE_icelandic_imigration_to_canada11_desc: ""
- ICE_icelandic_imigration_to_canada22: "Исландская иммиграция в Канаду" #NT!
+ ICE_icelandic_imigration_to_canada22: "Иммиграция из Исландии в Канаду" #NT!
  ICE_icelandic_imigration_to_canada22_desc: ""
- ICE_icelandic_imigration_to_canada33: "Исландская иммиграция в Канаду" #NT!
+ ICE_icelandic_imigration_to_canada33: "Иммиграция из Исландии в Канаду" #NT!
  ICE_icelandic_imigration_to_canada33_desc: ""
- ICE_remain_puppet: "Остаться датской территорией" #NT!
- ICE_remain_puppet_desc: "Это опасный мир; тот, который наш маленький остров не может надеяться выжить без помощи силы, более могущественной, чем наша собственная..." #NT!
+ ICE_remain_puppet: "Оставаясь датской территорией" #NT!
+ ICE_remain_puppet_desc: "Это опасный мир, в котором наш маленький остров не сможет выжить без помощи силы, более могущественной, чем наша собственная..." #NT!
  ICE_agerian_puppet: "Аграрная марионетка" #NT!
  ICE_agerian_puppet_desc: ""
  ICE_puch_for_homerule: "Настаивая на самоуправлении" #NT!
- ICE_puch_for_homerule_desc: "Желания исландцев больше не могут оставаться без внимания, и силы внутри Исландии и группы исландских студентов в самом Копенгагене стремятся обеспечить большую автономию Исландии." #NT!
+ ICE_puch_for_homerule_desc: "Желания исландцев больше не могут оставаться без внимания, и силы внутри Исландии, а также исландские студенческие группы в самом Копенгагене стремятся обеспечить большую автономию для Исландии." #NT!
  ICE_slow_independance0: "Постепенная независимость" #NT!
- ICE_slow_independance0_desc: "Наша свобода, возможно, не придет быстро или немедленно, но мы видим активный прогресс на пути к этой цели. Наша независимость теперь является лишь вопросом времени." #NT!
+ ICE_slow_independance0_desc: "Наша свобода может не прийти быстро или немедленно, но мы видим активное продвижение к этой цели. Наша независимость теперь лишь вопрос времени." #NT!
  ICE_slow_independance1: "Постепенная независимость" #NT!
- ICE_slow_independance1_desc: "Наша свобода, возможно, не придет быстро или немедленно, но мы видим активный прогресс на пути к этой цели. Наша независимость теперь является лишь вопросом времени." #NT!
+ ICE_slow_independance1_desc: "Наша свобода может не прийти быстро или немедленно, но мы видим активное продвижение к этой цели. Наша независимость теперь лишь вопрос времени." #NT!
  ICE_slow_independance2: "Постепенная независимость" #NT!
- ICE_slow_independance2_desc: "Наша свобода, возможно, не придет быстро или немедленно, но мы видим активный прогресс на пути к этой цели. Наша независимость теперь является лишь вопросом времени." #NT!
+ ICE_slow_independance2_desc: "Наша свобода может не прийти быстро или немедленно, но мы видим активное продвижение к этой цели. Наша независимость теперь лишь вопрос времени." #NT!
  ICE_slow_independance3: "Постепенная независимость" #NT!
- ICE_slow_independance3_desc: "Наша свобода, возможно, не придет быстро или немедленно, но мы видим активный прогресс на пути к этой цели. Наша независимость теперь является лишь вопросом времени." #NT!
+ ICE_slow_independance3_desc: "Наша свобода может не прийти быстро или немедленно, но мы видим активное продвижение к этой цели. Наша независимость теперь лишь вопрос времени." #NT!
  ICE_decrees_danishinfluance: "Подрыв датского влияния" #NT!
- ICE_decrees_danishinfluance_desc: "Если мы хотим отделиться от датского королевства, то мы должны сначала уменьшить их власть над нашими землями. Там, где датчанин может войти, исландец должен закрыться. Там, где уходит датчанин, место должен занять исландец. Постепенно, со временем, эта земля снова станет нашей..." #NT!
+ ICE_decrees_danishinfluance_desc: "Если мы хотим отделиться от датского королевства, то мы должны сначала уменьшить их влияние на наши земли. Там, где датчанин может войти, исландец должен закрыть. Там, где датчанин уходит, исландец должен занять место. Постепенно со временем эта земля действительно станет нашей снова..." #NT!
  ICE_not_to_small: "Мы будем править сами!" #NT!
- ICE_not_to_small_desc: "Датчане уже давно ограничивают нашу независимость на том основании, что, по их мнению, мы слишком малы и немногочисленны, чтобы управлять своими землями по собственному закону. Как смешно; как жалки эти оправдания, привязывающие нас к ним! Исландия может управлять собой без датской марионетки в Рейкьявике!" #NT!
- ICE_prep_harsh_independance: "Подготовка борьбы за независимость" #NT!
- ICE_prep_harsh_independance_desc: "Стало ясно, что мирные средства получения нашего законного самоуправления от вероломных датчан больше не являются жизнеспособной альтернативой. Поэтому, не имея других вариантов, мы должны готовиться к борьбе за наше право на существование и жизнь на своих условиях силой!" #NT!
+ ICE_not_to_small_desc: "Датчане долго ограничивали нашу независимость на том основании, что они считают нас слишком маленькими и малочисленными, чтобы управлять своими землями по собственным законам. Как смешно; как жалки эти оправдания, чтобы держать нас связанными с ними! Исландия может управлять собой без датской марионетки в Рейкьявике!" #NT!
+ ICE_prep_harsh_independance: "Подготовка к борьбе за независимость" #NT!
+ ICE_prep_harsh_independance_desc: "Стало ясно, что мирные средства получения нашего законного самоуправления от вероломных датчан больше не являются жизнеспособной альтернативой. Поэтому, не имея других вариантов, к которым можно обратиться, мы должны подготовиться к борьбе за наше право существовать и жить на наших собственных условиях силой!" #NT!
  ICE_icelandic_freedom: "Исландская свобода!" #NT!
  ICE_icelandic_freedom_desc: "У нас будет свобода!" #NT!
- ICE_buy_guns_from_us: "Покупка оружия из США." #NT!
- ICE_buy_guns_from_us_desc: "Американцы согласились на нашу просьбу закупить оружие из своих запасов, и мы вступаем в договорной период поэтапных выплат за это оружие. В течение этого времени нам будет немного не хватать рабочих рук, хотя вложения должны того стоить." #NT!
- ICE_iceland_buy_our_outdated_guns: "Продали оружие в Исландию." #NT!
- ICE_iceland_buy_our_outdated_guns_desc: "К нам обратился независимый представитель Исландии с просьбой закупить значительное количество стрелкового оружия. Хотя цель приобретения оружия кажется в лучшем случае сомнительной, исландцы предлагают нам справедливую плату за покупку из наших запасов...\n\n...И у нас нет причин отказывать им. В конце концов, бизнес есть бизнес." #NT!
- ICE_buy_uniforms_from_den: "Покупка униформы из Дании." #NT!
+ ICE_buy_guns_from_us: "Покупка оружия из США" #NT!
+ ICE_buy_guns_from_us_desc: "Американцы согласились на нашу просьбу о покупке оружия из их запасов, и мы вступаем в контрактный период постепенных платежей за это оружие. В течение этого времени мы будем немного не в состоянии обеспечить себя, хотя инвестиции должны окупиться." #NT!
+ ICE_iceland_buy_our_outdated_guns: "Продал оружие в Исландию" #NT!
+ ICE_iceland_buy_our_outdated_guns_desc: "Независимый представитель Исландии обратился к нам с просьбой о покупке значительного количества стрелкового оружия. Хотя цель этого приобретения оружия кажется в лучшем случае сомнительной, исландцы предлагают нам справедливую плату за покупку из наших запасов...\n\n...И у нас нет причин отказывать им. Бизнес есть бизнес, в конце концов." #NT!
+ ICE_buy_uniforms_from_den: "Покупка униформы из Дании" #NT!
  ICE_buy_uniforms_from_den_desc: ""
  ICE_iceland_buy_our_uniforms: "Исландия купила нашу форму" #NT!
  ICE_iceland_buy_our_uniforms_desc: ""
